--- a/_locales/de/messages.json
+++ b/_locales/de/messages.json
@@ -755,465 +755,6 @@
     "message": "Hosting",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "hub_create_account_already_have_account": {
-    "message": "Sie haben bereits ein Ghostery-Konto?"
-  },
-  "hub_create_account_confirm_password_do_not_match": {
-    "message": "Ihre Passwörter stimmen nicht überein."
-  },
-  "hub_create_account_header_title": {
-    "message": "Möchten Sie ein Ghostery-Konto erstellen, um Ihre Einstellungen in allen Browsern und Geräten zu synchronisieren?"
-  },
-  "hub_create_account_label_email_last_name": {
-    "message": "Nachname (Optional):"
-  },
-  "hub_create_account_label_first_name": {
-    "message": "Vorname (Optional):"
-  },
-  "hub_create_account_label_password_invalid": {
-    "message": "Nur diese Sonderzeichen sind zulässig: !@#$%^&*=+()<>{}[];:,./?"
-  },
-  "hub_create_account_label_password_invalid_length": {
-    "message": "Verwenden Sie zwischen 8 und 50 Zeichen."
-  },
-  "hub_create_account_link_login": {
-    "message": "Hier anmelden."
-  },
-  "hub_create_account_toast_error": {
-    "message": "Diese E-Mail-Adresse wird bereits verwendet. Bitte wählen Sie eine andere."
-  },
-  "hub_create_account_toast_success": {
-    "message": "Konto erfolgreich erstellt"
-  },
-  "hub_home_feature_setup_button": {
-    "message": "Setup bearbeiten"
-  },
-  "hub_home_feature_setup_button_alt": {
-    "message": "Benutzerdefiniertes Setup abgeschlossen"
-  },
-  "hub_home_feature_setup_text": {
-    "message": "Bearbeiten Sie Ihre Einstellungen und Blockierungspräferenzen."
-  },
-  "hub_home_feature_tutorial_button_alt": {
-    "message": "Tutorial abgeschlossen"
-  },
-  "hub_home_feature_tutorial_text": {
-    "message": "Gehen Sie die Hauptfunktionen von Ghostery durch."
-  },
-  "hub_home_feature_tutorial_title": {
-    "message": "Absolvieren Sie ein Tutorial"
-  },
-  "hub_home_header_checkbox_label": {
-    "message": "Weitere Analysedaten anonym teilen, um Ghostery noch leistungsstärker zu machen."
-  },
-  "hub_home_header_info": {
-    "message": "Neue Benutzer nehmen an Human Web teil. Sie können diese Einstellungen im benutzerdefinierten Setup oder in der Erweiterung ändern. "
-  },
-  "hub_home_header_info_link": {
-    "message": "Mehr erfahren."
-  },
-  "hub_home_header_info_opted_out": {
-    "message": "Neue Benutzer nehmen standardmäßig nicht an Human Web teil. Sie können diese empfohlenen Funktionen im benutzerdefinierten Setup oder in der Erweiterung aktivieren."
-  },
-  "hub_home_header_tagline": {
-    "message": "Sie sind nun mit unseren Standardeinstellungen geschützt."
-  },
-  "hub_home_header_tagline_2": {
-    "message": "Beginnen Sie mit dem Browsen!"
-  },
-  "hub_home_header_text": {
-    "message": "Ghostery ist bereit!"
-  },
-  "hub_home_page_title": {
-    "message": "Ghostery Hub - Startseite"
-  },
-  "hub_home_plus_full_protection": {
-    "message": "Sie sind umfassend geschützt!"
-  },
-  "hub_home_plus_upgrade_button_text": {
-    "message": "Jetzt Upgrade durchführen"
-  },
-  "hub_home_plus_upgrade_text": {
-    "message": "Erhalten Sie mehr als nur grundlegenden Schutz. Führen Sie ein Upgrade auf Ghostery Plus durch, um auf unseren leistungsstarken privaten Browser, die private Suche und die erweiterte Tracker-Analyse zuzugreifen!"
-  },
-  "hub_home_subheader_optimize": {
-    "message": "Optimieren Sie Ihre Ghostery-Erfahrung"
-  },
-  "hub_login_header_title": {
-    "message": "Melden Sie sich in Ihrem Konto an."
-  },
-  "hub_login_label_password_invalid": {
-    "message": "Verwenden Sie zwischen 8 und 50 Zeichen."
-  },
-  "hub_login_link_create_account": {
-    "message": "Melden Sie sich an."
-  },
-  "hub_login_link_dont_have_account": {
-    "message": "Haben Sie kein Konto?"
-  },
-  "hub_login_toast_success": {
-    "message": "Anmeldung erfolgreich! Ihre Kontoeinstellungen wurden importiert."
-  },
-  "hub_products_header_description": {
-    "message": "Bleiben Sie geschützt und verbessern Sie mit unserem umfassenden Datenschutz-Paket Ihr Online-Erlebnis."
-  },
-  "hub_products_header_title": {
-    "message": "Jetzt mit Ghostery-Produkten smarter surfen!"
-  },
-  "hub_products_main_promo_description": {
-    "message": "Browsen Sie unterwegs werbe- und trackerfrei mit unserem aktualisierten und verbesserten mobilen Browser. Jetzt mit einer Suchmaschine zur privaten Suche!"
-  },
-  "hub_products_main_promo_title": {
-    "message": "Mobiler Datenschutz-Browser"
-  },
-  "hub_products_page_title": {
-    "message": "Ghostery Hub - Probieren Sie andere Ghostery-Produkte aus"
-  },
-  "hub_products_second_promo_description": {
-    "message": "Mit unserer neuen Tab-Funktion können Sie privat suchen und Tracker-Statistiken einsehen. Demnächst verfügbar!"
-  },
-  "hub_products_second_promo_title": {
-    "message": "Ghostery Start-Tab"
-  },
-  "hub_products_third_promo_description": {
-    "message": "Schützen Sie Ihre Online-Privatsphäre und schalten Sie Anzeigen mit unserem bisher leichtgewichtigsten Produkt ab, ausschließlich für Safari."
-  },
-  "hub_products_third_promo_title": {
-    "message": "Ghostery Lite"
-  },
-  "hub_setup_antisuite_description_antitracking": {
-    "message": "Anonymisieren Sie nicht blockierte und nicht identifizierte Tracker für einen besseren Browsing-Schutz."
-  },
-  "hub_setup_antisuite_feature_enabled": {
-    "message": "Aktiviert"
-  },
-  "hub_setup_blocking_description_custom": {
-    "message": "Wählen Sie, welche Tracker blockiert werden sollen."
-  },
-  "hub_setup_blocking_description_everything": {
-    "message": "Alle Tracker blockiert"
-  },
-  "hub_setup_blocking_description_nothing": {
-    "message": "Keine Tracker blockiert"
-  },
-  "hub_setup_blocking_description_recommended": {
-    "message": "Werbung, Site Analytics und Adult Advertising Tracker blockiert"
-  },
-  "hub_setup_blocking_text_custom": {
-    "message": "Aus Liste wählen"
-  },
-  "hub_setup_blocking_text_everything": {
-    "message": "Alles blockieren"
-  },
-  "hub_setup_blocking_text_nothing": {
-    "message": "Nichts blockieren"
-  },
-  "hub_setup_blocking_text_recommended": {
-    "message": "Blockierungs-Voreinstellung"
-  },
-  "hub_setup_enter_modal_text": {
-    "message": "Wenn Sie ein benutzerdefiniertes Setup eingeben, werden Ihre vorherigen Ghostery-Einstellungen überschrieben. Möchten Sie fortfahren?"
-  },
-  "hub_setup_exit_flow": {
-    "message": "Benutzerdefiniertes Setup verlassen"
-  },
-  "hub_setup_feature_products_button": {
-    "message": "Ja bitte!"
-  },
-  "hub_setup_feature_products_description": {
-    "message": "Schützen Sie sich rundum mit unserem umfassenden Datenschutz-Paket!"
-  },
-  "hub_setup_feature_products_title": {
-    "message": "Mehr Ghostery-Produkte ansehen"
-  },
-  "hub_setup_feature_supporter_description": {
-    "message": "Unterstützen Sie Ghostery und schalten Sie spezielle Features frei."
-  },
-  "hub_setup_feature_tutorial_description": {
-    "message": "Gehen Sie die Hauptfunktionen von Ghostery durch."
-  },
-  "hub_setup_feature_tutorial_title": {
-    "message": "Absolvieren Sie ein Tutorial"
-  },
-  "hub_setup_header_title_antisuite": {
-    "message": "Möchten Sie mit unseren empfohlenen Funktionen smarter surfen?"
-  },
-  "hub_setup_header_title_blocking": {
-    "message": "Ghostery kann Tracker blockieren, damit Sie sauberer, schneller und sicherer browsen können.$NEW_LINE$Was möchten Sie blockieren?",
-    "placeholders": {
-      "new_line": {
-        "content": "<br />"
-      }
-    }
-  },
-  "hub_setup_header_title_done": {
-    "message": "Benutzerdefiniertes Setup abgeschlossen!"
-  },
-  "hub_setup_header_title_humanweb": {
-    "message": "Möchten Sie helfen, Ghostery noch besser zu machen?"
-  },
-  "hub_setup_humanweb_header": {
-    "message": "Wir benutzen Human-Web-Daten, um Ghostery noch leistungsstärker zu machen. Es werden keinerlei personenbezogenen Daten gesammelt. $LINK_LM_START$Mehr erfahren$LINK_LM_END$",
-    "placeholders": {
-      "link_lm_start": {
-        "content": "<a href=\"https://www.ghostery.com/faqs/human-web-data-collected/\" target=\"_blank\" rel=\"noopener noreferrer\">"
-      },
-      "link_lm_end": {
-        "content": "</a>"
-      }
-    }
-  },
-  "hub_setup_humanweb_label": {
-    "message": "Unterstützen Sie Ghostery, indem Sie diese Informationen teilen."
-  },
-  "hub_setup_modal_button_ask_again": {
-    "message": "Nicht mehr fragen"
-  },
-  "hub_setup_modal_button_no": {
-    "message": "Nein"
-  },
-  "hub_setup_modal_button_yes": {
-    "message": "Ja"
-  },
-  "hub_setup_page_title": {
-    "message": "Ghostery Hub - Setup"
-  },
-  "hub_setup_page_title_antisuite": {
-    "message": "Ghostery Hub - Setup Anti-Suite"
-  },
-  "hub_setup_page_title_blocking": {
-    "message": "Ghostery Hub - Setup Blockierung"
-  },
-  "hub_setup_page_title_done": {
-    "message": "Ghostery Hub - Setup abgeschlossen"
-  },
-  "hub_setup_page_title_humanweb": {
-    "message": "Ghostery Hub - Setup Human Web"
-  },
-  "hub_setup_ready_heading": {
-    "message": "Optimieren Sie Ihre Ghostery-Erfahrung"
-  },
-  "hub_side_navigation_home": {
-    "message": "Startseite"
-  },
-  "hub_side_navigation_products": {
-    "message": "Mehr Ghostery-Produkte ansehen"
-  },
-  "hub_side_navigation_tutorial": {
-    "message": "Absolvieren Sie ein Tutorial"
-  },
-  "hub_side_navigation_upgrade_plan": {
-    "message": "Plan-Upgrade durchführen"
-  },
-  "hub_signedin_as_email": {
-    "message": "Angemeldet als"
-  },
-  "hub_signedin_exit": {
-    "message": "Zurück zur Startseite"
-  },
-  "hub_signedin_header_title": {
-    "message": "Sie sind bereits angemeldet"
-  },
-  "hub_supporter_feature_more_description": {
-    "message": "Bleiben Sie auf dem Laufenden bezüglich cooler Funktionen und Einblicke, da wir Ihr Ghostery-Erlebnis fortlaufend verbessern."
-  },
-  "hub_supporter_feature_more_title": {
-    "message": "... und es kommt noch vieles mehr!"
-  },
-  "hub_supporter_feature_stats_description": {
-    "message": "Sehen Sie sich die Ergebnisse der früheren Blockierung mit Grafiken und Statistiken an, um zu erfahren, wie Ghostery Ihr Surfen beeinflusst hat."
-  },
-  "hub_supporter_feature_support_description": {
-    "message": "Benötigen Sie Hilfe? Eine fehlerhafte Seite finden? Mit unserem Priority Helpdesk-Service, der nur bei Anmeldung mit einem Plus-Konto zugänglich ist, lösen Sie Ihre Fragen und Probleme schneller."
-  },
-  "hub_supporter_feature_theme_description": {
-    "message": "Passen Sie die Ghostery-Farben für eine neue visuelle Erfahrung an! Eingeführt auf vielfachen Wunsch. Sehen Sie sich unser spezielles dunkelblaues Thema an. Weitere Themen folgen noch."
-  },
-  "hub_supporter_header_description": {
-    "message": "Erhalten Sie mehr als nur grundlegenden Schutz und schalten Sie unser komplettes Produktpaket frei!"
-  },
-  "hub_supporter_header_title": {
-    "message": "Auf Ghostery Plus hochstufen"
-  },
-  "hub_supporter_manifesto": {
-    "message": "Erwerben Sie ein Upgrade auf Ghostery Plus, um unser gesamtes Produktpaket freizuschalten! Für nur &#36;4,99 pro Monat erhalten Sie Zugang zu einem leistungsstarken privaten Browser mit integrierter geschützter Suche, erweiterter Tracker-Analyse und anderen besonderen Vorteilen."
-  },
-  "hub_supporter_page_title": {
-    "message": "Ghostery Hub - Ghostery Plus"
-  },
-  "hub_supporter_perk_analytics_description": {
-    "message": "Greifen Sie auf Ghostery Insights zu – unser Dashboard für Tracker-Informationen in Echtzeit"
-  },
-  "hub_supporter_perk_analytics_title": {
-    "message": "Erweiterte Tracker-Analyse"
-  },
-  "hub_supporter_perk_dawn_and_glow_description": {
-    "message": "Laden Sie Ghostery Dawn und Glow herunter, unseren leistungsstarken privaten Browser mit integrierter Suchmaschine"
-  },
-  "hub_supporter_perk_dawn_and_glow_title": {
-    "message": "Geschützter Browser und geschützte Suche"
-  },
-  "hub_supporter_perk_themes_and_more_description": {
-    "message": "Passen Sie die Ghostery-Farben an - Probieren Sie unsere Themes \"Leaf\", \"Palm\" und \"Dark Blue\"!"
-  },
-  "hub_supporter_perk_themes_and_more_title": {
-    "message": "Benutzerdefinierte Themes und mehr"
-  },
-  "hub_supporter_perk_themes_description": {
-    "message": "Passen Sie die Ghostery-Farben an – Versuchen Sie es mit unserem dunkelblauen Thema"
-  },
-  "hub_supporter_price": {
-    "message": "$SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$ pro Monat",
-    "placeholders": {
-      "sup_start": {
-        "content": "<sup>"
-      },
-      "sup_end": {
-        "content": "</sup>"
-      },
-      "span_start": {
-        "content": "<span>"
-      },
-      "span_end": {
-        "content": "</span>"
-      }
-    }
-  },
-  "hub_tutorial_antisuite_antitracking_description": {
-    "message": "Entfernen Sie Datenpunkte, die Websites verwenden könnten, um Sie zu identifizieren."
-  },
-  "hub_tutorial_antisuite_title": {
-    "message": "Erhalten Sie zusätzlichen Schutz und automatisierte Kontrolle mit unseren erweiterten Datenschutzfunktionen:"
-  },
-  "hub_tutorial_blocking_allow": {
-    "message": "Tracker auf der aktuellen Website immer zulassen."
-  },
-  "hub_tutorial_blocking_block": {
-    "message": "Tracker auf der aktuellen Website immer blockieren."
-  },
-  "hub_tutorial_blocking_block_always": {
-    "message": "Tracker auf jeder Website immer blockieren."
-  },
-  "hub_tutorial_blocking_tagline": {
-    "message": "Übernehmen Sie die Kontrolle über Ihre Privatsphäre und Ihr Browsererlebnis, indem Sie Tracker auf der Liste blockieren oder entsperren."
-  },
-  "hub_tutorial_blocking_title": {
-    "message": "Wählen Sie, was Sie wie blockieren möchten."
-  },
-  "hub_tutorial_detailed_expanded_view": {
-    "message": "Erweiterte Detailansicht"
-  },
-  "hub_tutorial_exit_flow": {
-    "message": "Tutorial verlassen"
-  },
-  "hub_tutorial_layout_tagline": {
-    "message": "Wechseln Sie zwischen einer vereinfachten oder detaillierten Ansicht, je nachdem, was Ghostery anzeigen soll."
-  },
-  "hub_tutorial_layout_title": {
-    "message": "Einfache und detaillierte Ansichten"
-  },
-  "hub_tutorial_page_title": {
-    "message": "Ghostery Hub - Tutorial"
-  },
-  "hub_tutorial_page_title_anti_suite": {
-    "message": "Ghostery Hub - Tutorial Zusatzfunktionen"
-  },
-  "hub_tutorial_page_title_blocking": {
-    "message": "Ghostery Hub - Tutorial Blockierung"
-  },
-  "hub_tutorial_page_title_layout": {
-    "message": "Ghostery Hub - Tutorial Layout"
-  },
-  "hub_tutorial_page_title_trackerlist": {
-    "message": "Ghostery Hub - Tutorial Tracker"
-  },
-  "hub_tutorial_page_title_trust": {
-    "message": "Ghostery Hub - Tutorial Vertrauen und Beschränken"
-  },
-  "hub_tutorial_page_title_video": {
-    "message": "Ghostery Hub - Tutorial Übersicht"
-  },
-  "hub_tutorial_trackerlist_tagline": {
-    "message": "Ghostery hilft Ihnen, über die Unternehmen auf dem Laufenden zu bleiben, die Sie tracken, indem es die Tracker auf jeder von Ihnen besuchten Website auflistet."
-  },
-  "hub_tutorial_trackerlist_title": {
-    "message": "Trackerliste"
-  },
-  "hub_tutorial_trust_restrict_site": {
-    "message": "Tracker auf dieser Website immer blockieren."
-  },
-  "hub_tutorial_trust_tagline": {
-    "message": "Website mit einem Klick vertrauen oder einschränken."
-  },
-  "hub_tutorial_trust_title": {
-    "message": "Websites vertrauen & beschränken"
-  },
-  "hub_tutorial_trust_trust_site": {
-    "message": "Tracker auf dieser Website immer zulassen."
-  },
-  "hub_tutorial_video_tagline": {
-    "message": "Blockieren Sie Tracker und Anzeigen, schützen Sie Ihre Privatsphäre und beschleunigen Sie den Seitenaufbau."
-  },
-  "hub_tutorial_video_title": {
-    "message": "Was Ghostery für Sie tun kann"
-  },
-  "hub_upgrade_additional_protection": {
-    "message": "Zusätzlicher Schutz"
-  },
-  "hub_upgrade_advanced_device_protection": {
-    "message": "Erweiterter Geräteschutz"
-  },
-  "hub_upgrade_already_protected": {
-    "message": "Bereits geschützt"
-  },
-  "hub_upgrade_basic_browser_protection": {
-    "message": "Grundlegender Browser-Schutz"
-  },
-  "hub_upgrade_basic_protection": {
-    "message": "Grundlegender Schutz"
-  },
-  "hub_upgrade_browser_ad_blocking": {
-    "message": "Werbeblocker im Browser"
-  },
-  "hub_upgrade_browser_tracker_blocking": {
-    "message": "Tracker-Blockierung im Browser"
-  },
-  "hub_upgrade_custom_blocking_preferences": {
-    "message": "Benutzerdefinierte Blockierungspräferenzen"
-  },
-  "hub_upgrade_extension_themes": {
-    "message": "Erweiterungs-Themes"
-  },
-  "hub_upgrade_historical_extension_stats": {
-    "message": "Historische Statistiken zu Erweiterungen"
-  },
-  "hub_upgrade_maximum_protection": {
-    "message": "Maximaler Schutz."
-  },
-  "hub_upgrade_monthly": {
-    "message": "Monatlich"
-  },
-  "hub_upgrade_page_title": {
-    "message": "Ghostery Hub - Upgrade-Plan"
-  },
-  "hub_upgrade_plan_free": {
-    "message": "Kostenlos"
-  },
-  "hub_upgrade_protection_plan": {
-    "message": "Schutzplan"
-  },
-  "hub_upgrade_scroll_down": {
-    "message": "Vollständige Liste der Funktionen anzeigen"
-  },
-  "hub_upgrade_to": {
-    "message": "Upgrade auf"
-  },
-  "hub_upgrade_yearly": {
-    "message": "Jährlich"
-  },
-  "hub_upgrade_your": {
-    "message": "Upgrade für Ihren"
-  },
   "invalid_email_forgot": {
     "message": "Verzeihung, Sie müssen eine echte E-Mail-Adresse eingeben."
   },
@@ -1230,7 +771,7 @@
     "message": "E-Mail-Adresse"
   },
   "license_footer": {
-    "message": "Ghostery$COPY$ ist ein Cliqz-Unternehmen. Erfahren Sie mehr über $LINK_START$Cliqz$LINK_END$. $COPY$Cliqz International GmbH, eine hundertprozentige Tochtergesellschaft der Cliqz GmbH. Alle Rechte vorbehalten."
+    "message": "Ghostery GmbH. Alle Rechte vorbehalten."
   },
   "license_generic": {
     "message": "Standard-Lizenztext"
