--- a/_locales/fr/messages.json
+++ b/_locales/fr/messages.json
@@ -755,465 +755,6 @@
     "message": "Hébergement",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "hub_create_account_already_have_account": {
-    "message": "Vous avez déjà un compte Ghostery ?"
-  },
-  "hub_create_account_confirm_password_do_not_match": {
-    "message": "Vos mots de passe sont divergents."
-  },
-  "hub_create_account_header_title": {
-    "message": "Souhaitez-vous créer un compte Ghostery afin de synchroniser les paramètres sur l'ensemble de vos navigateurs et appareils ?"
-  },
-  "hub_create_account_label_email_last_name": {
-    "message": "Nom (facultatif) :"
-  },
-  "hub_create_account_label_first_name": {
-    "message": "Prénom (facultatif) :"
-  },
-  "hub_create_account_label_password_invalid": {
-    "message": "Seuls ces caractères spéciaux sont autorisés : !@#$%^&*=+()<>{}[];:,./?"
-  },
-  "hub_create_account_label_password_invalid_length": {
-    "message": "Utilisez entre 8 et 50 caractères."
-  },
-  "hub_create_account_link_login": {
-    "message": "Connectez-vous ici."
-  },
-  "hub_create_account_toast_error": {
-    "message": "Cette adresse e-mail est déjà répertoriée sur Ghostery. Merci de saisir une autre adresse. "
-  },
-  "hub_create_account_toast_success": {
-    "message": "Compte créé avec succès"
-  },
-  "hub_home_feature_setup_button": {
-    "message": "Modifier la configuration"
-  },
-  "hub_home_feature_setup_button_alt": {
-    "message": "Configuration personnalisée terminée"
-  },
-  "hub_home_feature_setup_text": {
-    "message": "Modifiez vos paramètres et préférences de blocage."
-  },
-  "hub_home_feature_tutorial_button_alt": {
-    "message": "Tutoriel terminé"
-  },
-  "hub_home_feature_tutorial_text": {
-    "message": "Parcourir les fonctionnalités principales de Ghostery."
-  },
-  "hub_home_feature_tutorial_title": {
-    "message": "Suivre un tutoriel"
-  },
-  "hub_home_header_checkbox_label": {
-    "message": "Partagez davantage de données analytiques anonymes pour améliorer les performances de Ghostery."
-  },
-  "hub_home_header_info": {
-    "message": "Les nouveaux utilisateurs participent à Human Web. Vous pouvez modifier ce paramètre dans la configuration personnalisée ou dans l'extension."
-  },
-  "hub_home_header_info_link": {
-    "message": "En savoir plus."
-  },
-  "hub_home_header_info_opted_out": {
-    "message": "Par défaut, les nouveaux utilisateurs ne participent pas à Human Web. Vous pouvez activer ces fonctionnalités recommandées via une configuration personnalisée ou dans l'extension."
-  },
-  "hub_home_header_tagline": {
-    "message": "Vos données sont désormais protégées avec nos paramètres par défaut."
-  },
-  "hub_home_header_tagline_2": {
-    "message": "Commencez à naviguer !"
-  },
-  "hub_home_header_text": {
-    "message": "Ghostery est installé !"
-  },
-  "hub_home_page_title": {
-    "message": "Hub Ghostery — Page d'accueil"
-  },
-  "hub_home_plus_full_protection": {
-    "message": "Vous êtes entièrement protégé !"
-  },
-  "hub_home_plus_upgrade_button_text": {
-    "message": "Surclasser maintenant."
-  },
-  "hub_home_plus_upgrade_text": {
-    "message": "Renforcez la protection de votre confidentialité. Pasez à Ghostery Plus pour accéder à nos fonctions de navigation et recherche privées et outils d'analyse des mouchards !"
-  },
-  "hub_home_subheader_optimize": {
-    "message": "Optimisez votre expérience de Ghostery"
-  },
-  "hub_login_header_title": {
-    "message": "Connectez-vous à votre compte."
-  },
-  "hub_login_label_password_invalid": {
-    "message": "Utilisez entre 8 et 50 caractères."
-  },
-  "hub_login_link_create_account": {
-    "message": "Inscrivez-vous."
-  },
-  "hub_login_link_dont_have_account": {
-    "message": "Vous ne possédez pas de compte ?"
-  },
-  "hub_login_toast_success": {
-    "message": "Connecté/e avec succès ! Les paramètres de votre compte ont été importés."
-  },
-  "hub_products_header_description": {
-    "message": "Protégez et optimisez votre expérience de navigation grâce à notre suite complète d'outils de protection de la vie privée."
-  },
-  "hub_products_header_title": {
-    "message": "Naviguez plus intelligemment grâce aux produits Ghostery !"
-  },
-  "hub_products_main_promo_description": {
-    "message": "Surfez lors de tous vos déplacements sans publicité ni mouchard grâce à notre navigateur mobile optimisé. Désormais équipé d'un moteur de recherche privé !"
-  },
-  "hub_products_main_promo_title": {
-    "message": "Navigateur mobile respectueux de la vie privée"
-  },
-  "hub_products_page_title": {
-    "message": "Hub Ghostery — Testez d'autres produits Ghostery"
-  },
-  "hub_products_second_promo_description": {
-    "message": "Rendez vos recherches privées et affichez les statistiques des mouchards avec notre nouvelle fonction Tab. Disponible très bientôt !"
-  },
-  "hub_products_second_promo_title": {
-    "message": "Ghostery Start Tab"
-  },
-  "hub_products_third_promo_description": {
-    "message": "Protégez votre confidentialité en ligne et débarrassez-vous des publicités intempestives grâce à notre produit le plus léger, développé exclusivement pour Safari."
-  },
-  "hub_products_third_promo_title": {
-    "message": "Ghostery Lite"
-  },
-  "hub_setup_antisuite_description_antitracking": {
-    "message": "Anonymiser les mouchards débloqués et non identifiés pour une protection renforcée au cours de votre navigation."
-  },
-  "hub_setup_antisuite_feature_enabled": {
-    "message": "Activé"
-  },
-  "hub_setup_blocking_description_custom": {
-    "message": "Sélectionnez les mouchards que vous souhaitez bloquer"
-  },
-  "hub_setup_blocking_description_everything": {
-    "message": "Tous types de mouchards bloqués"
-  },
-  "hub_setup_blocking_description_nothing": {
-    "message": "Aucun mouchard bloqué"
-  },
-  "hub_setup_blocking_description_recommended": {
-    "message": "Mouchards analytiques et publicitaires, tous publics, bloqués"
-  },
-  "hub_setup_blocking_text_custom": {
-    "message": "Choisissez parmi les options de la liste"
-  },
-  "hub_setup_blocking_text_everything": {
-    "message": "Tout bloquer"
-  },
-  "hub_setup_blocking_text_nothing": {
-    "message": "Ne rien bloquer"
-  },
-  "hub_setup_blocking_text_recommended": {
-    "message": "Bloquer par défaut"
-  },
-  "hub_setup_enter_modal_text": {
-    "message": "Une fois appliquée, la configuration personnalisée remplacera les paramètres enregistrés dans Ghostery. Souhaitez-vous poursuivre ?"
-  },
-  "hub_setup_exit_flow": {
-    "message": "Quitter la configuration personnalisée"
-  },
-  "hub_setup_feature_products_button": {
-    "message": "Oui, volontiers !"
-  },
-  "hub_setup_feature_products_description": {
-    "message": "Sécurisez toutes vos données grâce à notre suite complète d'outils de protection de la vie privée !"
-  },
-  "hub_setup_feature_products_title": {
-    "message": "Découvrir d'autres produits Ghostery"
-  },
-  "hub_setup_feature_supporter_description": {
-    "message": "Soutenez Ghostery et découvrez des avantages spéciaux."
-  },
-  "hub_setup_feature_tutorial_description": {
-    "message": "Parcourir les fonctionnalités principales de Ghostery."
-  },
-  "hub_setup_feature_tutorial_title": {
-    "message": "Suivre un tutoriel"
-  },
-  "hub_setup_header_title_antisuite": {
-    "message": "Voulez-vous essayer nos fonctionnalités recommandées pour surfer malin ?"
-  },
-  "hub_setup_header_title_blocking": {
-    "message": "Ghostery bloque les mouchards pour rendre votre navigation plus rapide, plus propre et plus sûre.$NEW_LINE$Quel/s mouchard/s souhaitez-vous bloquer ?",
-    "placeholders": {
-      "new_line": {
-        "content": "<br />"
-      }
-    }
-  },
-  "hub_setup_header_title_done": {
-    "message": "Configuration personnalisée terminée !"
-  },
-  "hub_setup_header_title_humanweb": {
-    "message": "Souhaitez-vous nous aider à améliorer Ghostery ?"
-  },
-  "hub_setup_humanweb_header": {
-    "message": "Nous nous servons de données anonymes du Human Web pour améliorer les performances de Ghostery. Nous ne collectons jamais de données personnelles. $LINK_LM_START$En savoir plus$LINK_LM_END$",
-    "placeholders": {
-      "link_lm_start": {
-        "content": "<a href=\"https://www.ghostery.com/faqs/human-web-data-collected/\" target=\"_blank\" rel=\"noopener noreferrer\">"
-      },
-      "link_lm_end": {
-        "content": "</a>"
-      }
-    }
-  },
-  "hub_setup_humanweb_label": {
-    "message": "Partagez cette information pour soutenir Ghostery"
-  },
-  "hub_setup_modal_button_ask_again": {
-    "message": "Ne plus me demander"
-  },
-  "hub_setup_modal_button_no": {
-    "message": "Non"
-  },
-  "hub_setup_modal_button_yes": {
-    "message": "Oui"
-  },
-  "hub_setup_page_title": {
-    "message": "Hub Ghostery — Configuration"
-  },
-  "hub_setup_page_title_antisuite": {
-    "message": "Hub Ghostery — Configuration de la suite anti-pistage"
-  },
-  "hub_setup_page_title_blocking": {
-    "message": "Hub Ghostery — Verrouillage de la configuration"
-  },
-  "hub_setup_page_title_done": {
-    "message": "Hub Ghostery — Configuration terminée"
-  },
-  "hub_setup_page_title_humanweb": {
-    "message": "Hub Ghostery — Configuration 'Human Web'"
-  },
-  "hub_setup_ready_heading": {
-    "message": "Optimisez votre expérience de Ghostery"
-  },
-  "hub_side_navigation_home": {
-    "message": "Page d'accueil"
-  },
-  "hub_side_navigation_products": {
-    "message": "Découvrir d'autres produits Ghostery"
-  },
-  "hub_side_navigation_tutorial": {
-    "message": "Suivre un tutoriel"
-  },
-  "hub_side_navigation_upgrade_plan": {
-    "message": "Surclasser votre Plan"
-  },
-  "hub_signedin_as_email": {
-    "message": "Vous êtes connecté(e) sous l'identifiant"
-  },
-  "hub_signedin_exit": {
-    "message": "Revenir à la page d'accueil"
-  },
-  "hub_signedin_header_title": {
-    "message": "Vous êtes déjà connecté/e"
-  },
-  "hub_supporter_feature_more_description": {
-    "message": "Restez à l'affût pour découvrir d'autres super idées et fonctionnalités ! Nous mettons tout en oeuvre pour rendre votre expérience Ghostery des plus agréables."
-  },
-  "hub_supporter_feature_more_title": {
-    "message": "... et bien plus encore prochainement !"
-  },
-  "hub_supporter_feature_stats_description": {
-    "message": "Affichez les résultats de l'historique des blocages avec tableaux et stats présentant les tendances et découvrez comment Ghostery affecte votre navigateur."
-  },
-  "hub_supporter_feature_support_description": {
-    "message": "Besoin d'assistance ? Cette page ne fonctionne pas ? Trouvez des réponses à vos questions et résolvez rapidement tous vos problèmes avec notre service d'assistance prioritaire, disponible uniquement pour les comptes Plus."
-  },
-  "hub_supporter_feature_theme_description": {
-    "message": "Personnalisez les couleurs de Ghostery pour une nouvelle expérience visuelle ! Lancé à la demande générale. Découvrez notre thème spécial Dark Blue, et bien d'autres à venir."
-  },
-  "hub_supporter_header_description": {
-    "message": "Renforcez la protection de votre confidentialité et découvrez l'ensemble de notre suite de produits !"
-  },
-  "hub_supporter_header_title": {
-    "message": "Passer à Ghostery Plus"
-  },
-  "hub_supporter_manifesto": {
-    "message": "Passez à Ghostery Plus pour découvrir l'ensemble de notre suite de produits ! Pour seulement &#36;4.99 par mois, accédez à notre puissant navigateur privé avec moteur de recherche intégré, notre outil d'analyse des mouchards et d'autres avantages spéciaux."
-  },
-  "hub_supporter_page_title": {
-    "message": "Hub Ghostery — Ghostery Plus"
-  },
-  "hub_supporter_perk_analytics_description": {
-    "message": "Accédez à Ghostery Insights, notre tableau de bord d'analyse des mouchards en temps réel"
-  },
-  "hub_supporter_perk_analytics_title": {
-    "message": "Advanced Tracker Analytics"
-  },
-  "hub_supporter_perk_dawn_and_glow_description": {
-    "message": "Téléchargez Ghostery Dawn et Glow, notre puissant navigateur privé avec moteur de recherche intégré"
-  },
-  "hub_supporter_perk_dawn_and_glow_title": {
-    "message": "Navigateur et recherche privés"
-  },
-  "hub_supporter_perk_themes_and_more_description": {
-    "message": "Personnalisez les couleurs Ghostery : essayez nos thèmes Leaf, Palm et Dark Blue !"
-  },
-  "hub_supporter_perk_themes_and_more_title": {
-    "message": "Thèmes personnalisés et bien plus encore"
-  },
-  "hub_supporter_perk_themes_description": {
-    "message": "Personnalisez les couleurs de Ghostery - essayez notre thème Dark Blue !"
-  },
-  "hub_supporter_price": {
-    "message": "$SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$ par mois",
-    "placeholders": {
-      "sup_start": {
-        "content": "<sup>"
-      },
-      "sup_end": {
-        "content": "</sup>"
-      },
-      "span_start": {
-        "content": "<span>"
-      },
-      "span_end": {
-        "content": "</span>"
-      }
-    }
-  },
-  "hub_tutorial_antisuite_antitracking_description": {
-    "message": "Supprimez les points de données que les sites web peuvent exploiter pour vous identifier."
-  },
-  "hub_tutorial_antisuite_title": {
-    "message": "Bénéficiez de plus de protection et d'un contrôle automatisé grâce à nos fonctionnalités de confidentialité améliorées :"
-  },
-  "hub_tutorial_blocking_allow": {
-    "message": "Toujours autoriser ce mouchard sur le site actuel."
-  },
-  "hub_tutorial_blocking_block": {
-    "message": "Toujours bloquer ce mouchard sur le site actuel."
-  },
-  "hub_tutorial_blocking_block_always": {
-    "message": "Toujours bloquer ce mouchard sur chaque site consulté."
-  },
-  "hub_tutorial_blocking_tagline": {
-    "message": "Protégez votre vie privée et votre navigation web en bloquant ou débloquant certains mouchards repris dans la liste."
-  },
-  "hub_tutorial_blocking_title": {
-    "message": "Sélectionnez les éléments à bloquer et la manière dont vous souhaitez procéder"
-  },
-  "hub_tutorial_detailed_expanded_view": {
-    "message": "Affichage agrandi et détaillé"
-  },
-  "hub_tutorial_exit_flow": {
-    "message": "Quitter le tutoriel"
-  },
-  "hub_tutorial_layout_tagline": {
-    "message": "Passez d'un affichage simplifié à un affichage détaillé, et inversement, suivant les données que vous souhaitez présenter sur Ghostery."
-  },
-  "hub_tutorial_layout_title": {
-    "message": "Affichages simples et détaillés"
-  },
-  "hub_tutorial_page_title": {
-    "message": "Hub Ghostery — Tutoriel"
-  },
-  "hub_tutorial_page_title_anti_suite": {
-    "message": "Hub Ghostery — Tutoriel 'Fonctionnalités supplémentaires'"
-  },
-  "hub_tutorial_page_title_blocking": {
-    "message": "Hub Ghostery — Tutoriel 'Blocage'"
-  },
-  "hub_tutorial_page_title_layout": {
-    "message": "Hub Ghostery — Tutoriel 'Mise en page'"
-  },
-  "hub_tutorial_page_title_trackerlist": {
-    "message": "Hub Ghostery — Tutoriel 'Mouchards'"
-  },
-  "hub_tutorial_page_title_trust": {
-    "message": "Hub Ghostery — Tutoriel 'Autoriser et bloquer'"
-  },
-  "hub_tutorial_page_title_video": {
-    "message": "Hub Ghostery — Tutoriel 'Aperçu'"
-  },
-  "hub_tutorial_trackerlist_tagline": {
-    "message": "Ghostery vous indique les sociétés qui vous pistent en répertoriant les mouchards sur chaque site web consulté."
-  },
-  "hub_tutorial_trackerlist_title": {
-    "message": "Liste des mouchards"
-  },
-  "hub_tutorial_trust_restrict_site": {
-    "message": "Toujours bloquer les mouchards sur ce site."
-  },
-  "hub_tutorial_trust_tagline": {
-    "message": "Autoriser ou restreindre des sites web en un seul clic."
-  },
-  "hub_tutorial_trust_title": {
-    "message": "Autoriser & bloquer les sites"
-  },
-  "hub_tutorial_trust_trust_site": {
-    "message": "Toujours autoriser les mouchards sur ce site."
-  },
-  "hub_tutorial_video_tagline": {
-    "message": "Bloque les mouchards et publicités, protège votre vie privée et accélère le chargement des pages web."
-  },
-  "hub_tutorial_video_title": {
-    "message": "En quoi Ghostery peut vous être utile"
-  },
-  "hub_upgrade_additional_protection": {
-    "message": "Protection supplémentaire"
-  },
-  "hub_upgrade_advanced_device_protection": {
-    "message": "Protection avancée de vos appareils"
-  },
-  "hub_upgrade_already_protected": {
-    "message": "Déjà protégé"
-  },
-  "hub_upgrade_basic_browser_protection": {
-    "message": "Protection de base du navigateur"
-  },
-  "hub_upgrade_basic_protection": {
-    "message": "Protection de base"
-  },
-  "hub_upgrade_browser_ad_blocking": {
-    "message": "Bloqueur de publicités sur le navigateur"
-  },
-  "hub_upgrade_browser_tracker_blocking": {
-    "message": "Blocage de mouchard sur le navigateur"
-  },
-  "hub_upgrade_custom_blocking_preferences": {
-    "message": "Préférences de blocage personnalisées"
-  },
-  "hub_upgrade_extension_themes": {
-    "message": "Thèmes de l'extension"
-  },
-  "hub_upgrade_historical_extension_stats": {
-    "message": "Historique des stats de l'extension"
-  },
-  "hub_upgrade_maximum_protection": {
-    "message": "Protection maximale"
-  },
-  "hub_upgrade_monthly": {
-    "message": "Mensuel"
-  },
-  "hub_upgrade_page_title": {
-    "message": "Ghostery Hub - Surclasser votre plan"
-  },
-  "hub_upgrade_plan_free": {
-    "message": "Gratuit"
-  },
-  "hub_upgrade_protection_plan": {
-    "message": "plan de protection"
-  },
-  "hub_upgrade_scroll_down": {
-    "message": "Voir la liste complète des fonctions"
-  },
-  "hub_upgrade_to": {
-    "message": "Passe à"
-  },
-  "hub_upgrade_yearly": {
-    "message": "Annuel"
-  },
-  "hub_upgrade_your": {
-    "message": "Surclassez votre"
-  },
   "invalid_email_forgot": {
     "message": "Désolé, vous devez saisir une adresse e-mail valide."
   },
@@ -1230,7 +771,7 @@
     "message": "E-mail"
   },
   "license_footer": {
-    "message": "Ghostery$COPY$; est une création de Cliqz. En savoir plus sur $LINK_START$Cliqz$LINK_END$. $COPY$Cliqz International GmbH, une filiale en propriété exclusive de la Société Cliqz GmbH. Tous droits réservés."
+    "message": "Ghostery GmbH. Tous droits réservés."
   },
   "license_generic": {
     "message": "Contenu de la licence standard"
