--- a/_locales/hu/messages.json
+++ b/_locales/hu/messages.json
@@ -755,465 +755,6 @@
     "message": "Hosztolás",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "hub_create_account_already_have_account": {
-    "message": "Már van Ghostery fiókja?"
-  },
-  "hub_create_account_confirm_password_do_not_match": {
-    "message": "A jelszavak nem egyeznek."
-  },
-  "hub_create_account_header_title": {
-    "message": "Szeretne létrehozni egy Ghostery-fiókot beállításai szinkronizálásához böngészői és eszközei között?"
-  },
-  "hub_create_account_label_email_last_name": {
-    "message": "Vezetéknév (opcionális):"
-  },
-  "hub_create_account_label_first_name": {
-    "message": "Keresztnév (opcionális):"
-  },
-  "hub_create_account_label_password_invalid": {
-    "message": "Csak ezek a különleges karakterek engedélyezettek: !@#$%^&*=+()<>{}[];:,./?"
-  },
-  "hub_create_account_label_password_invalid_length": {
-    "message": "8–50 karaktert használjon."
-  },
-  "hub_create_account_link_login": {
-    "message": "Jelentkezzen be itt!"
-  },
-  "hub_create_account_toast_error": {
-    "message": "Az e-mail cím már használatban van. Kérjük, válasszon másik."
-  },
-  "hub_create_account_toast_success": {
-    "message": "Fiók sikeresen létrehozva"
-  },
-  "hub_home_feature_setup_button": {
-    "message": "Telepítés szerkesztése"
-  },
-  "hub_home_feature_setup_button_alt": {
-    "message": "Egyéni telepítés kész"
-  },
-  "hub_home_feature_setup_text": {
-    "message": "Beállításainak és blokkolási szempontjainak szerkesztése."
-  },
-  "hub_home_feature_tutorial_button_alt": {
-    "message": "Oktatás befejezve"
-  },
-  "hub_home_feature_tutorial_text": {
-    "message": "A Ghostery főbb funkcióinak áttekintése."
-  },
-  "hub_home_feature_tutorial_title": {
-    "message": "Oktatás megtekintése"
-  },
-  "hub_home_header_checkbox_label": {
-    "message": "További névtelen analitikai adatok megosztása a Ghostery teljesítményének fejlesztése érdekében."
-  },
-  "hub_home_header_info": {
-    "message": "Az új felhasználók részt a Human Web programban. Ez a beállítás az egyéni konfigurációban vagy a bővítményben módosítható. "
-  },
-  "hub_home_header_info_link": {
-    "message": "Tudjon meg többet!"
-  },
-  "hub_home_header_info_opted_out": {
-    "message": "Az új felhasználók esetében a Human Web funkciók alapértelmezett módon nincsenek aktiválva. Az egyéni telepítésben vagy a bővítményben aktiválhatja ezeket az ajánlott funkciókat."
-  },
-  "hub_home_header_tagline": {
-    "message": "Ön most az alapértelmezett beállítások szerint védett."
-  },
-  "hub_home_header_tagline_2": {
-    "message": "Kezdje meg a böngészést!"
-  },
-  "hub_home_header_text": {
-    "message": "A Ghostery készen áll!"
-  },
-  "hub_home_page_title": {
-    "message": "Ghostery Központ - Kezdőlap"
-  },
-  "hub_home_plus_full_protection": {
-    "message": "Teljes védelmet élvez"
-  },
-  "hub_home_plus_upgrade_button_text": {
-    "message": "Frissítés most"
-  },
-  "hub_home_plus_upgrade_text": {
-    "message": "Ez messze túlmutat az alapvető adatvédelmen. A Ghostery Plus szoftverre frissítve hozzáférhet hatékony  privát böngészőnkhöz, a privát kereséshez és a továbbfejlesztett követőelemzéshez."
-  },
-  "hub_home_subheader_optimize": {
-    "message": "Optimalizálja a Ghostery felhasználói élményét"
-  },
-  "hub_login_header_title": {
-    "message": "Jelentkezzen be a fiókjába!"
-  },
-  "hub_login_label_password_invalid": {
-    "message": "8–50 karaktert használjon."
-  },
-  "hub_login_link_create_account": {
-    "message": "Regisztráljon!"
-  },
-  "hub_login_link_dont_have_account": {
-    "message": "Nem rendelkezik fiókkal?"
-  },
-  "hub_login_toast_success": {
-    "message": "Sikeres bejelentkezés! Az Ön beállításai importálva."
-  },
-  "hub_products_header_description": {
-    "message": "Maradjon védve és fejlessze az online élményeit a teljeskörű adatvédelmi rendszerünkkel!"
-  },
-  "hub_products_header_title": {
-    "message": "Böngésszen okosabban a Ghostery termékek használatával!"
-  },
-  "hub_products_main_promo_description": {
-    "message": "Böngésszen hirdetés- és trackermentesen a frissített és fejlesztett mobil böngészőnkkel! Most már adatvédett keresőmotorral ellátva!"
-  },
-  "hub_products_main_promo_title": {
-    "message": "Mobil adatvédett böngésző"
-  },
-  "hub_products_page_title": {
-    "message": "Ghostery Központ - Próbáljon ki más Ghostery termékeket"
-  },
-  "hub_products_second_promo_description": {
-    "message": "Keressen adatvédetten és tekintse meg a tracker statisztikákat szolgálatatást az új lapfül funkcióval! Hamarosan elérhető!"
-  },
-  "hub_products_second_promo_title": {
-    "message": "Ghostery Start Tab"
-  },
-  "hub_products_third_promo_description": {
-    "message": "Védje adatait online és szabaduljon meg a hirdetésektől az eddigi legegyszerűbb termékünkkel, kizárólag Safarira fejlesztve!"
-  },
-  "hub_products_third_promo_title": {
-    "message": "Ghostery Lite"
-  },
-  "hub_setup_antisuite_description_antitracking": {
-    "message": "Anonimmá teheti a nem blokkolt és azonosítatlan trackereket a hatékonyabb böngészővédelemhez."
-  },
-  "hub_setup_antisuite_feature_enabled": {
-    "message": "Engedélyezve"
-  },
-  "hub_setup_blocking_description_custom": {
-    "message": "Válassza ki, mely trackerek legyenek blokkolva"
-  },
-  "hub_setup_blocking_description_everything": {
-    "message": "Minden tracker blokkolva"
-  },
-  "hub_setup_blocking_description_nothing": {
-    "message": "A trackerek nincsenek blokkolva"
-  },
-  "hub_setup_blocking_description_recommended": {
-    "message": "Hirdető, oldalelemző és felnőtt hirdetéseket tartalmazó trackerek blokkolva"
-  },
-  "hub_setup_blocking_text_custom": {
-    "message": "Válasszon a listából"
-  },
-  "hub_setup_blocking_text_everything": {
-    "message": "Blokkoljon mindent"
-  },
-  "hub_setup_blocking_text_nothing": {
-    "message": "Semmit se blokkoljon"
-  },
-  "hub_setup_blocking_text_recommended": {
-    "message": "Blokkolás alapértelmezés szerint"
-  },
-  "hub_setup_enter_modal_text": {
-    "message": "Az egyéni telepítőbe történő belépéssel felülírja az eddigi Ghostery beállításokat. Kívánja folytatni?"
-  },
-  "hub_setup_exit_flow": {
-    "message": "Kilépés az egyéni telepítőből"
-  },
-  "hub_setup_feature_products_button": {
-    "message": "Igen, kérem!"
-  },
-  "hub_setup_feature_products_description": {
-    "message": "Szerezzen teljeskörű védelmet a mindenre kiterjedő adatvédelmi rendszerünkkel!"
-  },
-  "hub_setup_feature_products_title": {
-    "message": "További Ghostery termékek megtekintése"
-  },
-  "hub_setup_feature_supporter_description": {
-    "message": "Támogassa a Ghosteryt és oldjon fel különleges extra funkciókat!"
-  },
-  "hub_setup_feature_tutorial_description": {
-    "message": "A Ghostery főbb funkcióinak áttekintése."
-  },
-  "hub_setup_feature_tutorial_title": {
-    "message": "Oktatás megtekintése"
-  },
-  "hub_setup_header_title_antisuite": {
-    "message": "Szeretne okosabban böngészni az ajánlott funkcióinkkal?"
-  },
-  "hub_setup_header_title_blocking": {
-    "message": "A Ghostery trackerek blokkolására képes, hogy böngészését tisztábbá, gyorsabbá és biztonságosabbá tegye.$NEW_LINE$Mit szeretne blokkolni?",
-    "placeholders": {
-      "new_line": {
-        "content": "<br />"
-      }
-    }
-  },
-  "hub_setup_header_title_done": {
-    "message": "Egyéni telepítés kész!"
-  },
-  "hub_setup_header_title_humanweb": {
-    "message": "Szeretne segíteni a Ghostery fejlesztésében?"
-  },
-  "hub_setup_humanweb_header": {
-    "message": "Névtelen Human Web adatokat használunk fel a Ghostery teljesítményének fejlesztésére. Sohasem gyűjtünk személyes adatokat. $LINK_LM_START$Tudjon meg többet$LINK_LM_END$",
-    "placeholders": {
-      "link_lm_start": {
-        "content": "<a href=\"https://www.ghostery.com/faqs/human-web-data-collected/\" target=\"_blank\" rel=\"noopener noreferrer\">"
-      },
-      "link_lm_end": {
-        "content": "</a>"
-      }
-    }
-  },
-  "hub_setup_humanweb_label": {
-    "message": "Támogassa a Ghostery-t ezeknek az információknak a megosztásával"
-  },
-  "hub_setup_modal_button_ask_again": {
-    "message": "Ne kérdezze meg többször"
-  },
-  "hub_setup_modal_button_no": {
-    "message": "Nem"
-  },
-  "hub_setup_modal_button_yes": {
-    "message": "Igen"
-  },
-  "hub_setup_page_title": {
-    "message": "Ghostery Központ - Beállítás"
-  },
-  "hub_setup_page_title_antisuite": {
-    "message": "Ghostery Központ - Anti-Suite"
-  },
-  "hub_setup_page_title_blocking": {
-    "message": "Ghostery Központ - Blokkolás beállítása"
-  },
-  "hub_setup_page_title_done": {
-    "message": "Ghostery Központ - Beállítás kész"
-  },
-  "hub_setup_page_title_humanweb": {
-    "message": "Ghostery Központ - Human Web beállítása"
-  },
-  "hub_setup_ready_heading": {
-    "message": "Optimalizálja a Ghostery felhasználói élményét"
-  },
-  "hub_side_navigation_home": {
-    "message": "Kezdőlap"
-  },
-  "hub_side_navigation_products": {
-    "message": "További Ghostery termékek megtekintése"
-  },
-  "hub_side_navigation_tutorial": {
-    "message": "Oktatás megtekintése"
-  },
-  "hub_side_navigation_upgrade_plan": {
-    "message": "Csomag frissítése"
-  },
-  "hub_signedin_as_email": {
-    "message": "Bejelentkezve mint:"
-  },
-  "hub_signedin_exit": {
-    "message": "Vissza a kezdőlapra"
-  },
-  "hub_signedin_header_title": {
-    "message": "Ön már bejelentkezett"
-  },
-  "hub_supporter_feature_more_description": {
-    "message": "Kövessen minket további nagyszerű funkciókért és belső információkért, ahogy egyre élvezetesebbé tesszük az ön Ghostery élményét!"
-  },
-  "hub_supporter_feature_more_title": {
-    "message": "...és még sok minden más várható a jövőben!"
-  },
-  "hub_supporter_feature_stats_description": {
-    "message": "Naplózott blokkolási eredmények grafikonokkal és statisztikákkal trendek felfedéséhez és annak vizsgálatára, hogy milyen hatással volt a Ghostery az ön böngészésére."
-  },
-  "hub_supporter_feature_support_description": {
-    "message": "Segítségre van szüksége? Hibás oldalt talált? Kapjon gyorsan válaszokat kérdéseire és megoldásokat a problémáira az Elsőbbségi támogató szolgáltatásunkkal, amely csak a Plus fiókkal történő bejelentkezés esetén érhető el."
-  },
-  "hub_supporter_feature_theme_description": {
-    "message": "Állítsa be egyénileg a Ghostery színeit egy új vizuális élményért! Népszerű kérés alapján bevezetve. Próbálja ki a különleges Dark Blue sablonunkat, amelyet még sok fog követni."
-  },
-  "hub_supporter_header_description": {
-    "message": "Ez messze túlmutat az alapvető adatvédelmen. Vegye igénybe a teljes termékcsomagot."
-  },
-  "hub_supporter_header_title": {
-    "message": "Bővítés Ghostery Plusra"
-  },
-  "hub_supporter_manifesto": {
-    "message": "Frissítsen a Ghostery Plus szoftverre, hogy  igénybe vehesse a teljes termékcsomagot. &#36;4.99 havi díjért használatba veheti a beépített keresőmotorral rendelkező hatékony privát böngészőt, a továbbfejlesztett követőelemzést és az egyéb speciális funkciókat."
-  },
-  "hub_supporter_page_title": {
-    "message": "Ghostery Központ - Ghostery Plus"
-  },
-  "hub_supporter_perk_analytics_description": {
-    "message": "Igénybe veheti a valós idejű követőinformációs irányítópultot, a Ghostery Insights szolgáltatást"
-  },
-  "hub_supporter_perk_analytics_title": {
-    "message": " Továbbfejlesztett követőelemzés"
-  },
-  "hub_supporter_perk_dawn_and_glow_description": {
-    "message": "Töltse le a beépített keresőmotorral rendelkező hatékony privát böngészőnket, a Ghostery Dawn and Glow-t"
-  },
-  "hub_supporter_perk_dawn_and_glow_title": {
-    "message": "Privát böngésző és keresés"
-  },
-  "hub_supporter_perk_themes_and_more_description": {
-    "message": "Tegye egyedivé a Ghostery színeit: próbálja ki a Leaf, a Palm és a Dark Blue témákat."
-  },
-  "hub_supporter_perk_themes_and_more_title": {
-    "message": "Egyedi témák és még sok más"
-  },
-  "hub_supporter_perk_themes_description": {
-    "message": "Szabja testre kedve szerint a Ghostery színeit – próbálja ki a Dark Blue sablonunkat!"
-  },
-  "hub_supporter_price": {
-    "message": "$SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$ havonta",
-    "placeholders": {
-      "sup_start": {
-        "content": "<sup>"
-      },
-      "sup_end": {
-        "content": "</sup>"
-      },
-      "span_start": {
-        "content": "<span>"
-      },
-      "span_end": {
-        "content": "</span>"
-      }
-    }
-  },
-  "hub_tutorial_antisuite_antitracking_description": {
-    "message": "Adatpontok eltávolítása, amelyeket a weboldalak használnak, hogy azonosítsák önt."
-  },
-  "hub_tutorial_antisuite_title": {
-    "message": "Szerezzen extra védelmet és automatikus felügyeletet a fejlesztett adatvédelmi funkcióinkkal:"
-  },
-  "hub_tutorial_blocking_allow": {
-    "message": "Trackerek engedélyezése mindig a jelenlegi oldalon."
-  },
-  "hub_tutorial_blocking_block": {
-    "message": "Tracker blokkolása mindig a jelenlegi oldalon."
-  },
-  "hub_tutorial_blocking_block_always": {
-    "message": "Trackerek blokkolása mindig az összes oldalon."
-  },
-  "hub_tutorial_blocking_tagline": {
-    "message": "Vegye át az irányítást az adatvédelmi és böngészési élményei felett a listában található trackerek blokkolásával vagy feloldásával."
-  },
-  "hub_tutorial_blocking_title": {
-    "message": "Válassza ki, hogy mit és hogyan szeretne blokkolni"
-  },
-  "hub_tutorial_detailed_expanded_view": {
-    "message": "Részletes, kibontott nézet"
-  },
-  "hub_tutorial_exit_flow": {
-    "message": "Kilépés az oktatásból"
-  },
-  "hub_tutorial_layout_tagline": {
-    "message": "Váltson az egyszerűsített és a részletes nézet között attól függően, hogy mit szeretne megjeleníttetni a Ghosteryvel."
-  },
-  "hub_tutorial_layout_title": {
-    "message": "Egyszerű és részletes nézetek"
-  },
-  "hub_tutorial_page_title": {
-    "message": "Ghostery Központ - Oktatás"
-  },
-  "hub_tutorial_page_title_anti_suite": {
-    "message": "Ghostery Központ - Oktatás a további funkciókról"
-  },
-  "hub_tutorial_page_title_blocking": {
-    "message": "Ghostery Központ - Oktatás a blokkolásról"
-  },
-  "hub_tutorial_page_title_layout": {
-    "message": "Ghostery Központ - Oktatás az elrendezésről"
-  },
-  "hub_tutorial_page_title_trackerlist": {
-    "message": "Ghostery Központ - Oktatás a trackerekről"
-  },
-  "hub_tutorial_page_title_trust": {
-    "message": "Ghostery Központ - Oktatás a megbízhatóságról és korlátozásról"
-  },
-  "hub_tutorial_page_title_video": {
-    "message": "Ghostery Központ - Oktatás áttekintése"
-  },
-  "hub_tutorial_trackerlist_tagline": {
-    "message": "A Ghostery segít önnek, hogy naprakész információkkal rendelkezzen arról, hogy a vállalatok mely adatait kívánják követni az ön által látogatott összes oldal trackereinek kilistázásával."
-  },
-  "hub_tutorial_trackerlist_title": {
-    "message": "Trackerek listája"
-  },
-  "hub_tutorial_trust_restrict_site": {
-    "message": "Trackerek blokkolása mindig az oldalon."
-  },
-  "hub_tutorial_trust_tagline": {
-    "message": "Egyetlen kattintással megbízhatóként vagy korlátozottként állíthat be webhelyeket."
-  },
-  "hub_tutorial_trust_title": {
-    "message": "Oldalak megbízhatónak állítása és korlátozása"
-  },
-  "hub_tutorial_trust_trust_site": {
-    "message": "Trackerek engedélyezése mindig az oldalon."
-  },
-  "hub_tutorial_video_tagline": {
-    "message": "Trackerek és hirdetések blokkolása, adatainak védelme, és a weboldalak betöltésének felgyorsítása."
-  },
-  "hub_tutorial_video_title": {
-    "message": "Amit a Ghostery önért tehet"
-  },
-  "hub_upgrade_additional_protection": {
-    "message": "További védelem"
-  },
-  "hub_upgrade_advanced_device_protection": {
-    "message": "Alapvető eszközvédelem"
-  },
-  "hub_upgrade_already_protected": {
-    "message": "Már védelem alatt áll"
-  },
-  "hub_upgrade_basic_browser_protection": {
-    "message": "Alapvető böngészővédelem"
-  },
-  "hub_upgrade_basic_protection": {
-    "message": "Alapvető védelem"
-  },
-  "hub_upgrade_browser_ad_blocking": {
-    "message": "Hirdetések blokkolása a böngészőben"
-  },
-  "hub_upgrade_browser_tracker_blocking": {
-    "message": "Követés blokkolása a böngészőben"
-  },
-  "hub_upgrade_custom_blocking_preferences": {
-    "message": "Egyedi blokkolási beállítások"
-  },
-  "hub_upgrade_extension_themes": {
-    "message": "Kiterjesztési témák"
-  },
-  "hub_upgrade_historical_extension_stats": {
-    "message": "Korábbi kiterjesztési adatok"
-  },
-  "hub_upgrade_maximum_protection": {
-    "message": "Maximális védelem"
-  },
-  "hub_upgrade_monthly": {
-    "message": "Havi"
-  },
-  "hub_upgrade_page_title": {
-    "message": "Ghostery Hub – Csomag frissítése"
-  },
-  "hub_upgrade_plan_free": {
-    "message": "Ingyenes"
-  },
-  "hub_upgrade_protection_plan": {
-    "message": "védelmi csomagját"
-  },
-  "hub_upgrade_scroll_down": {
-    "message": "Tekintse meg a funkciók teljes listáját"
-  },
-  "hub_upgrade_to": {
-    "message": "Frissítés erre:"
-  },
-  "hub_upgrade_yearly": {
-    "message": "Éves"
-  },
-  "hub_upgrade_your": {
-    "message": "Frissítse"
-  },
   "invalid_email_forgot": {
     "message": "Sajnáljuk, de valós emailcímet kell megadnia."
   },
@@ -1230,7 +771,7 @@
     "message": "Emailcím"
   },
   "license_footer": {
-    "message": "Ghostery$COPY$; egy Cliqz-vállalat. Tudjon meg többet a $LINK_START$Cliqz$LINK_END$-ről. A $COPY$Cliqz International GmbH, a Cliqz GmbH teljes tulajdonú alvállalata. Minden jog fenntartva."
+    "message": "Ghostery GmbH. Minden jog fenntartva."
   },
   "license_generic": {
     "message": "Szabványos licenc szöveg"
