--- a/_locales/it/messages.json
+++ b/_locales/it/messages.json
@@ -755,465 +755,6 @@
     "message": "Hosting",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "hub_create_account_already_have_account": {
-    "message": "Hai già un Account Ghostery?"
-  },
-  "hub_create_account_confirm_password_do_not_match": {
-    "message": "La password non corrisponde."
-  },
-  "hub_create_account_header_title": {
-    "message": "Desideri creare un account Ghostery per sincronizzare le impostazioni con più browser e dispositivi?"
-  },
-  "hub_create_account_label_email_last_name": {
-    "message": "Cognome (Opzionale):"
-  },
-  "hub_create_account_label_first_name": {
-    "message": "Nome (Opzionale):"
-  },
-  "hub_create_account_label_password_invalid": {
-    "message": "Sono consentiti solamente questi caratteri speciali: !@#$%^&*=+()<>{}[];:,./?"
-  },
-  "hub_create_account_label_password_invalid_length": {
-    "message": "Utilizza tra 8 e 50 caratteri."
-  },
-  "hub_create_account_link_login": {
-    "message": "Accedi qui."
-  },
-  "hub_create_account_toast_error": {
-    "message": "Indirizzo e-mail già in uso. Sceglierne un altro."
-  },
-  "hub_create_account_toast_success": {
-    "message": "Account Creato Correttamente"
-  },
-  "hub_home_feature_setup_button": {
-    "message": "Modifica Configurazione"
-  },
-  "hub_home_feature_setup_button_alt": {
-    "message": "Configurazione Personalizzata Completa"
-  },
-  "hub_home_feature_setup_text": {
-    "message": "Modifica le tue impostazioni e le preferenze di blocco."
-  },
-  "hub_home_feature_tutorial_button_alt": {
-    "message": "Tutorial Completo"
-  },
-  "hub_home_feature_tutorial_text": {
-    "message": "Una carrellata delle caratteristiche principali di Ghostery."
-  },
-  "hub_home_feature_tutorial_title": {
-    "message": "Guarda un Tutorial"
-  },
-  "hub_home_header_checkbox_label": {
-    "message": "Condividi ulteriori analitiche anonime per migliorare le prestazioni di Ghostery."
-  },
-  "hub_home_header_info": {
-    "message": "I nuovi utenti partecipano a Human Web per impostazione predefinita (opt in). Puoi modificare queste impostazioni nella configurazione personalizzata o nell'estensione."
-  },
-  "hub_home_header_info_link": {
-    "message": "Ulteriori informazioni."
-  },
-  "hub_home_header_info_opted_out": {
-    "message": "Per impostazione predefinita, i nuovi utenti non possono partecipare a Human Web. Puoi utilizzare queste funzioni consigliate nella configurazione personalizzata oppure nell'estensione. "
-  },
-  "hub_home_header_tagline": {
-    "message": "Ora sei protetto secondo le nostre impostazioni standard."
-  },
-  "hub_home_header_tagline_2": {
-    "message": "Inizia a Navigare!"
-  },
-  "hub_home_header_text": {
-    "message": "Ghostery è pronto!"
-  },
-  "hub_home_page_title": {
-    "message": "Ghostery Hub - Home"
-  },
-  "hub_home_plus_full_protection": {
-    "message": "Sei completamente protetto!"
-  },
-  "hub_home_plus_upgrade_button_text": {
-    "message": "Effettua l'upgrade adesso"
-  },
-  "hub_home_plus_upgrade_text": {
-    "message": "Vai oltre la privacy di base. Effettua l'upgrade a Ghostery Plus per poter utilizzare il nostro potente browser privato, la funzione di ricerca privata e l'analisi del tracker avanzata!"
-  },
-  "hub_home_subheader_optimize": {
-    "message": "Ottimizza la tua esperienza Ghostery"
-  },
-  "hub_login_header_title": {
-    "message": "Accedi al tuo account."
-  },
-  "hub_login_label_password_invalid": {
-    "message": "Utilizza tra 8 e 50 caratteri."
-  },
-  "hub_login_link_create_account": {
-    "message": "Accedi."
-  },
-  "hub_login_link_dont_have_account": {
-    "message": "Non hai un account?"
-  },
-  "hub_login_toast_success": {
-    "message": "Accesso effettuato correttamente! Le impostazioni del tuo account sono state importate."
-  },
-  "hub_products_header_description": {
-    "message": "Proteggiti e migliora la tua esperienza online con la nostra suite completa per la privacy."
-  },
-  "hub_products_header_title": {
-    "message": "Naviga in modo più intelligente con i prodotti Ghostery!"
-  },
-  "hub_products_main_promo_description": {
-    "message": "Naviga senza pubblicità e senza tracker in mobilità con il nostro browser aggiornato e migliorato per dispositivi mobili. Ora dotato di un motore di ricerca privato!"
-  },
-  "hub_products_main_promo_title": {
-    "message": "Browser per la Privacy in Mobilità"
-  },
-  "hub_products_page_title": {
-    "message": "Ghostery Hub - Prova Altri Prodotti Ghostery"
-  },
-  "hub_products_second_promo_description": {
-    "message": "Effettua ricerche in modo riservato e vedi le statistiche relative al tracker con la nostra nuova funzione scheda. Prossimamente!"
-  },
-  "hub_products_second_promo_title": {
-    "message": "Ghostery Start Tab"
-  },
-  "hub_products_third_promo_description": {
-    "message": "Proteggi la tua privacy online e liberati dalle pubblicità con il nostro prodotto più leggero, solo per Safari."
-  },
-  "hub_products_third_promo_title": {
-    "message": "Ghostery Lite"
-  },
-  "hub_setup_antisuite_description_antitracking": {
-    "message": "Rendi anonimi i tracker sbloccati e sconosciuti, per una maggior protezione della navigazione."
-  },
-  "hub_setup_antisuite_feature_enabled": {
-    "message": "Attivato"
-  },
-  "hub_setup_blocking_description_custom": {
-    "message": "Scegli quali tracker bloccare"
-  },
-  "hub_setup_blocking_description_everything": {
-    "message": "Tutti i tracker bloccati"
-  },
-  "hub_setup_blocking_description_nothing": {
-    "message": "Nessun tracker bloccato"
-  },
-  "hub_setup_blocking_description_recommended": {
-    "message": "Tracker pubblicitari, di analisi del sito e di pubblicità per adulti bloccati"
-  },
-  "hub_setup_blocking_text_custom": {
-    "message": "Scegli dalla Lista"
-  },
-  "hub_setup_blocking_text_everything": {
-    "message": "Blocca Tutto"
-  },
-  "hub_setup_blocking_text_nothing": {
-    "message": "Non Bloccare Nulla"
-  },
-  "hub_setup_blocking_text_recommended": {
-    "message": "Blocco Predefinito"
-  },
-  "hub_setup_enter_modal_text": {
-    "message": "Inserendo una configurazione personalizzata annullerai le precedenti impostazioni di Ghostery. Vuoi continuare?"
-  },
-  "hub_setup_exit_flow": {
-    "message": "Uscita Configurazione Personalizzata"
-  },
-  "hub_setup_feature_products_button": {
-    "message": "Si, grazie!"
-  },
-  "hub_setup_feature_products_description": {
-    "message": "Proteggiti completamente con la nostra suite completa per la privacy!"
-  },
-  "hub_setup_feature_products_title": {
-    "message": "Vedi altri Prodotti Ghostery"
-  },
-  "hub_setup_feature_supporter_description": {
-    "message": "Sostieni Ghostery e sblocca extra speciali."
-  },
-  "hub_setup_feature_tutorial_description": {
-    "message": "Una carrellata delle caratteristiche principali di Ghostery."
-  },
-  "hub_setup_feature_tutorial_title": {
-    "message": "Guarda un Tutorial"
-  },
-  "hub_setup_header_title_antisuite": {
-    "message": "Ti piacerebbe navigare in modo più intelligente utilizzando le nostre funzioni consigliate?"
-  },
-  "hub_setup_header_title_blocking": {
-    "message": "Ghostery può bloccare i tracker per rendere la tua navigazione più pulita, rapida e sicura.$NEW_LINE$Cosa vorresti bloccare?",
-    "placeholders": {
-      "new_line": {
-        "content": "<br />"
-      }
-    }
-  },
-  "hub_setup_header_title_done": {
-    "message": "Configurazione personalizzata completa!"
-  },
-  "hub_setup_header_title_humanweb": {
-    "message": "Vorresti aiutarci a migliorare Ghostery?"
-  },
-  "hub_setup_humanweb_header": {
-    "message": "Utilizziamo i dati anonimi di Human Web per migliorare le prestazioni di Ghostery. Non raccogliamo mai alcun dato personale. $LINK_LM_START$Ulteriori Informazioni$LINK_LM_END$",
-    "placeholders": {
-      "link_lm_start": {
-        "content": "<a href=\"https://www.ghostery.com/faqs/human-web-data-collected/\" target=\"_blank\" rel=\"noopener noreferrer\">"
-      },
-      "link_lm_end": {
-        "content": "</a>"
-      }
-    }
-  },
-  "hub_setup_humanweb_label": {
-    "message": "Sostieni Ghostery condividendo queste informazioni"
-  },
-  "hub_setup_modal_button_ask_again": {
-    "message": "Non chiedermelo più"
-  },
-  "hub_setup_modal_button_no": {
-    "message": "No"
-  },
-  "hub_setup_modal_button_yes": {
-    "message": "Sì"
-  },
-  "hub_setup_page_title": {
-    "message": "Ghostery Hub - Configurazione"
-  },
-  "hub_setup_page_title_antisuite": {
-    "message": "Ghostery Hub - Configurazione Anti-Suite"
-  },
-  "hub_setup_page_title_blocking": {
-    "message": "Ghostery Hub - Configurazione blocco"
-  },
-  "hub_setup_page_title_done": {
-    "message": "Ghostery Hub - Configurazione Completata"
-  },
-  "hub_setup_page_title_humanweb": {
-    "message": "Ghostery Hub - Configurazione Human Web"
-  },
-  "hub_setup_ready_heading": {
-    "message": "Ottimizza La Tua Esperienza Ghostery"
-  },
-  "hub_side_navigation_home": {
-    "message": "Home"
-  },
-  "hub_side_navigation_products": {
-    "message": "Vedi Altri Prodotti Ghostery"
-  },
-  "hub_side_navigation_tutorial": {
-    "message": "Guarda un Tutorial"
-  },
-  "hub_side_navigation_upgrade_plan": {
-    "message": "Effettua l'upgrade del piano"
-  },
-  "hub_signedin_as_email": {
-    "message": "Accesso effettuato come"
-  },
-  "hub_signedin_exit": {
-    "message": "Torna alla Home"
-  },
-  "hub_signedin_header_title": {
-    "message": "Hai già effettuato l'accesso"
-  },
-  "hub_supporter_feature_more_description": {
-    "message": "Rimani sintonizzato per altre fantastiche funzioni e informazioni mentre continuiamo a rendere piacevole la tua esperienza Ghostery."
-  },
-  "hub_supporter_feature_more_title": {
-    "message": "...e Altro Ancora in Arrivo!"
-  },
-  "hub_supporter_feature_stats_description": {
-    "message": "Visualizza i risultati di blocco cronologici con grafici e statistiche per delineare le tendenze e comprendere in che modo Ghostery ha influenzato la tua navigazione."
-  },
-  "hub_supporter_feature_support_description": {
-    "message": "Hai bisogno di assistenza? Hai trovato una pagina danneggiata? Grazie al nostro servizio di assistenza prioritario le tue domande ricevono una risposta e i tuoi problemi vengono risolti rapidamente; disponibile solamente quando si effettua l'accesso con un account Plus."
-  },
-  "hub_supporter_feature_theme_description": {
-    "message": "Personalizza i colori di Ghostery per una nuova esperienza visiva! Introdotto a grande richiesta. Dai un'occhiata al nostro tema speciale Dark Blue e agli altri in arrivo."
-  },
-  "hub_supporter_header_description": {
-    "message": "Vai oltre la privacy di base e sblocca la nostra suite di prodotti completa!"
-  },
-  "hub_supporter_header_title": {
-    "message": "Effettua l'upgrade a Ghostery Plus"
-  },
-  "hub_supporter_manifesto": {
-    "message": "Effettua l'upgrade a Ghostery Plus per sbloccare la nostra suite di prodotti completa! Con soli &#36;4,99 al mese, puoi accedere al nostro potente browser privato con funzionalità di ricerca privata integrata, analisi del tracker avanzata e tanti altri fantastici extra."
-  },
-  "hub_supporter_page_title": {
-    "message": "Ghostery Hub - Ghostery Plus"
-  },
-  "hub_supporter_perk_analytics_description": {
-    "message": "Accedi a Ghostery Insights, il nostro dashboard di intelligence del tracker in tempo reale"
-  },
-  "hub_supporter_perk_analytics_title": {
-    "message": "Analisi del tracker avanzata"
-  },
-  "hub_supporter_perk_dawn_and_glow_description": {
-    "message": "Scarica Ghostery Dawn e Glow, il nostro potente browser privato con motore di ricerca integrato"
-  },
-  "hub_supporter_perk_dawn_and_glow_title": {
-    "message": "Ricerca e browser privati"
-  },
-  "hub_supporter_perk_themes_and_more_description": {
-    "message": "Personalizza i colori di Ghostery: prova i nostri temi Leaf, Palm e Dark Blue!"
-  },
-  "hub_supporter_perk_themes_and_more_title": {
-    "message": "Temi personalizzati e altro"
-  },
-  "hub_supporter_perk_themes_description": {
-    "message": "Personalizza i colori di Ghostery - prova il nostro tema Dark Blue!"
-  },
-  "hub_supporter_price": {
-    "message": "$SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$ al mese",
-    "placeholders": {
-      "sup_start": {
-        "content": "<sup>"
-      },
-      "sup_end": {
-        "content": "</sup>"
-      },
-      "span_start": {
-        "content": "<span>"
-      },
-      "span_end": {
-        "content": "</span>"
-      }
-    }
-  },
-  "hub_tutorial_antisuite_antitracking_description": {
-    "message": "Rimuovi i dati che i siti web utilizzano per identificarti."
-  },
-  "hub_tutorial_antisuite_title": {
-    "message": "Usufruisci di una protezione extra e di un controllo automatizzato con le nostre funzioni migliorate per la privacy:"
-  },
-  "hub_tutorial_blocking_allow": {
-    "message": "Consenti sempre i tracker sul sito attuale."
-  },
-  "hub_tutorial_blocking_block": {
-    "message": "Blocca sempre i tracker sul sito attuale."
-  },
-  "hub_tutorial_blocking_block_always": {
-    "message": "Blocca sempre i tracker su ogni sito."
-  },
-  "hub_tutorial_blocking_tagline": {
-    "message": "Prendi il controllo della tua privacy e della tua esperienza di navigazione bloccando o sbloccando i tracker nella lista."
-  },
-  "hub_tutorial_blocking_title": {
-    "message": "Scegli cosa bloccare e come bloccarlo"
-  },
-  "hub_tutorial_detailed_expanded_view": {
-    "message": "Vista Dettagliata Espansa"
-  },
-  "hub_tutorial_exit_flow": {
-    "message": "Esci dal Tutorial"
-  },
-  "hub_tutorial_layout_tagline": {
-    "message": "Passa da una vista semplificata ad una dettagliata, a seconda di cosa vuoi che mostri Ghostery."
-  },
-  "hub_tutorial_layout_title": {
-    "message": "Viste semplice e dettagliata"
-  },
-  "hub_tutorial_page_title": {
-    "message": "Ghostery Hub - Tutorial"
-  },
-  "hub_tutorial_page_title_anti_suite": {
-    "message": "Ghostery Hub - Tutorial Funzioni Aggiuntive"
-  },
-  "hub_tutorial_page_title_blocking": {
-    "message": "Ghostery Hub - Tutorial Blocco"
-  },
-  "hub_tutorial_page_title_layout": {
-    "message": "Ghostery Hub - Tutorial Layout"
-  },
-  "hub_tutorial_page_title_trackerlist": {
-    "message": "Ghostery Hub - Tutorial Tracker"
-  },
-  "hub_tutorial_page_title_trust": {
-    "message": "Ghostery Hub - Tutorial Affidabile e Limitato"
-  },
-  "hub_tutorial_page_title_video": {
-    "message": "Ghostery Hub - Panoramica Tutorial"
-  },
-  "hub_tutorial_trackerlist_tagline": {
-    "message": "Ghostery ti aiuta a rimanere informato sulle aziende che ti tracciano elencando i tracker su ogni sito che visiti."
-  },
-  "hub_tutorial_trackerlist_title": {
-    "message": "Lista dei Tracker"
-  },
-  "hub_tutorial_trust_restrict_site": {
-    "message": "Blocca sempre i tracker sul sito."
-  },
-  "hub_tutorial_trust_tagline": {
-    "message": "Considera affidabili o limita i siti Web con un clic."
-  },
-  "hub_tutorial_trust_title": {
-    "message": "Siti Affidabili e Limitati"
-  },
-  "hub_tutorial_trust_trust_site": {
-    "message": "Consenti sempre i tracker sul sito."
-  },
-  "hub_tutorial_video_tagline": {
-    "message": "Blocca tracker e pubblicità, proteggi la tua privacy e velocizza il caricamento della pagina."
-  },
-  "hub_tutorial_video_title": {
-    "message": "Cosa Può Fare Ghostery Per Te"
-  },
-  "hub_upgrade_additional_protection": {
-    "message": "Protezione aggiuntiva"
-  },
-  "hub_upgrade_advanced_device_protection": {
-    "message": "Protezione avanzata del dispositivo"
-  },
-  "hub_upgrade_already_protected": {
-    "message": "Già protetto"
-  },
-  "hub_upgrade_basic_browser_protection": {
-    "message": "Protezione di base del browser"
-  },
-  "hub_upgrade_basic_protection": {
-    "message": "Protezione di base"
-  },
-  "hub_upgrade_browser_ad_blocking": {
-    "message": "Blocca Pubblicità del browser"
-  },
-  "hub_upgrade_browser_tracker_blocking": {
-    "message": "Blocco Tracker del browser"
-  },
-  "hub_upgrade_custom_blocking_preferences": {
-    "message": "Preferenze di blocco personalizzate"
-  },
-  "hub_upgrade_extension_themes": {
-    "message": "Temi dell'estensione"
-  },
-  "hub_upgrade_historical_extension_stats": {
-    "message": "Cronologia Statistiche dell'estensione"
-  },
-  "hub_upgrade_maximum_protection": {
-    "message": "Massimo livello di protezione"
-  },
-  "hub_upgrade_monthly": {
-    "message": "Mensilmente"
-  },
-  "hub_upgrade_page_title": {
-    "message": "Ghostery Hub - Esegui l'upgrade del piano"
-  },
-  "hub_upgrade_plan_free": {
-    "message": "Gratuito"
-  },
-  "hub_upgrade_protection_plan": {
-    "message": "piano di protezione"
-  },
-  "hub_upgrade_scroll_down": {
-    "message": "Scopri l'elenco di tutte le funzionalità"
-  },
-  "hub_upgrade_to": {
-    "message": "Aggiorna a"
-  },
-  "hub_upgrade_yearly": {
-    "message": "Annualmente"
-  },
-  "hub_upgrade_your": {
-    "message": "Effettua l'upgrade del tuo"
-  },
   "invalid_email_forgot": {
     "message": "Spiacenti, devi inserire un vero indirizzo email."
   },
@@ -1230,7 +771,7 @@
     "message": "Email"
   },
   "license_footer": {
-    "message": "Ghostery$COPY$; è una società di Cliqz. Ulteriori informazioni su $LINK_START$Cliqz$LINK_END$. $COPY$Cliqz International GmbH, una società interamente partecipata di Cliqz GmbH. Tutti i diritti riservati."
+    "message": "Ghostery GmbH. Tutti i diritti riservati."
   },
   "license_generic": {
     "message": "Testo della licenza standard"
