--- a/_locales/ja/messages.json
+++ b/_locales/ja/messages.json
@@ -755,465 +755,6 @@
     "message": "ホスティング",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "hub_create_account_already_have_account": {
-    "message": "既にGhosteryアカウントを持っていますか？"
-  },
-  "hub_create_account_confirm_password_do_not_match": {
-    "message": "パスワードが一致しません。"
-  },
-  "hub_create_account_header_title": {
-    "message": "Ghosteryアカウントを作成して、ブラウザとデバイス間で設定を同期しますか？"
-  },
-  "hub_create_account_label_email_last_name": {
-    "message": "姓（オプション）："
-  },
-  "hub_create_account_label_first_name": {
-    "message": "名（オプション）："
-  },
-  "hub_create_account_label_password_invalid": {
-    "message": "次の特殊文字のみを使用できます：!@#$%^&*=+()<>{}[];:,./?"
-  },
-  "hub_create_account_label_password_invalid_length": {
-    "message": "8～50文字を使用してください。"
-  },
-  "hub_create_account_link_login": {
-    "message": "ここにサインインしてください。"
-  },
-  "hub_create_account_toast_error": {
-    "message": "そのメールアドレスは既に使用されています。  別のメールアドレスを選択してください。"
-  },
-  "hub_create_account_toast_success": {
-    "message": "アカウントは正常に作成されました"
-  },
-  "hub_home_feature_setup_button": {
-    "message": "設定を編集する"
-  },
-  "hub_home_feature_setup_button_alt": {
-    "message": "カスタム設定完了"
-  },
-  "hub_home_feature_setup_text": {
-    "message": "必要なブロック機能に応じて設定を編集します。"
-  },
-  "hub_home_feature_tutorial_button_alt": {
-    "message": "チュートリアル完了"
-  },
-  "hub_home_feature_tutorial_text": {
-    "message": "Ghosteryの主な機能をご覧ください。"
-  },
-  "hub_home_feature_tutorial_title": {
-    "message": "チュートリアルを受ける"
-  },
-  "hub_home_header_checkbox_label": {
-    "message": "Ghosteryのパフォーマンス向上のために、匿名分析データを追加し共有します。"
-  },
-  "hub_home_header_info": {
-    "message": "新規ユーザーがHuman Webにオプトインしました。カスタム設定あるいは拡張機能でこれらの変更を行うことができます。"
-  },
-  "hub_home_header_info_link": {
-    "message": "詳細はこちら。"
-  },
-  "hub_home_header_info_opted_out": {
-    "message": "新規ユーザーの方は、デフォルトでHuman Webには参加しないように設定されています。カスタム設定または拡張機能で、これらの推奨機能にオプトインすることができます。"
-  },
-  "hub_home_header_tagline": {
-    "message": "初期設定による保護機能が有効になりました。"
-  },
-  "hub_home_header_tagline_2": {
-    "message": "ブラウジングを始めよう！"
-  },
-  "hub_home_header_text": {
-    "message": "Ghosteryの準備完了！"
-  },
-  "hub_home_page_title": {
-    "message": "Ghostery ハブ - ホーム"
-  },
-  "hub_home_plus_full_protection": {
-    "message": "あなたは完全に保護されています。"
-  },
-  "hub_home_plus_upgrade_button_text": {
-    "message": "今すぐアップデート"
-  },
-  "hub_home_plus_upgrade_text": {
-    "message": "Ghostery Plusにアップグレードすると、基本的なプライバシー保護機能だけでなく、強力なプライベートブラウザ、プライベート検索機能、高度なトラッカー分析機能も使用できるようになります。"
-  },
-  "hub_home_subheader_optimize": {
-    "message": "Ghostery体験を最適化する"
-  },
-  "hub_login_header_title": {
-    "message": "アカウントにサインインします。"
-  },
-  "hub_login_label_password_invalid": {
-    "message": "8～50文字を使用してください。"
-  },
-  "hub_login_link_create_account": {
-    "message": "サインアップしてください。"
-  },
-  "hub_login_link_dont_have_account": {
-    "message": "アカウントをお持ちでないですか？"
-  },
-  "hub_login_toast_success": {
-    "message": "サインインできました！アカウント設定がインポートされました"
-  },
-  "hub_products_header_description": {
-    "message": "Ghosteryの保護機能をフルに活用すると、より安心なオンライン体験が実現できます。"
-  },
-  "hub_products_header_title": {
-    "message": "Ghosteryの機能でよりスマートにブラウジング！"
-  },
-  "hub_products_main_promo_description": {
-    "message": "機能強化されたモバイルブラウザで、広告やトラッカーに悩まされないブラウジングを。プライベート検索エンジンに搭載可能！"
-  },
-  "hub_products_main_promo_title": {
-    "message": "モバイル プライバシー ブラウザ"
-  },
-  "hub_products_page_title": {
-    "message": "Ghostery ハブ - その他のGhostery製品を試す"
-  },
-  "hub_products_second_promo_description": {
-    "message": "新しいタブ機能で、トラッカー履歴を確認しながらプライベートに検索し、を管理できます。近日公開予定、ご期待ください！"
-  },
-  "hub_products_second_promo_title": {
-    "message": "Ghostery Start Tab"
-  },
-  "hub_products_third_promo_description": {
-    "message": "Safari専用の機能で、広告を表示せずにオンライン プライバシーを保護することができます。"
-  },
-  "hub_products_third_promo_title": {
-    "message": "Ghostery ライト"
-  },
-  "hub_setup_antisuite_description_antitracking": {
-    "message": "閲覧保護を強化するために、ブロックされていないトラッカーと未知のトラッカーを匿名化します。"
-  },
-  "hub_setup_antisuite_feature_enabled": {
-    "message": "有効になっています"
-  },
-  "hub_setup_blocking_description_custom": {
-    "message": "ブロックするトラッカーを選択してください"
-  },
-  "hub_setup_blocking_description_everything": {
-    "message": "すべてのブロックされたトラッカー"
-  },
-  "hub_setup_blocking_description_nothing": {
-    "message": "ブロックされたトラッカーはありません"
-  },
-  "hub_setup_blocking_description_recommended": {
-    "message": "ブロックされた広告、サイト分析、アダルト広告トラッカー"
-  },
-  "hub_setup_blocking_text_custom": {
-    "message": "リストから選択する"
-  },
-  "hub_setup_blocking_text_everything": {
-    "message": "すべてをブロック"
-  },
-  "hub_setup_blocking_text_nothing": {
-    "message": "何もブロックしない"
-  },
-  "hub_setup_blocking_text_recommended": {
-    "message": "ブロックの初期設定"
-  },
-  "hub_setup_enter_modal_text": {
-    "message": "カスタム設定を入力すると前の設定が上書きされます。お続けになりますか？"
-  },
-  "hub_setup_exit_flow": {
-    "message": "カスタム設定を終了する"
-  },
-  "hub_setup_feature_products_button": {
-    "message": "はい、お願いします。"
-  },
-  "hub_setup_feature_products_description": {
-    "message": "Ghosteryの豊富な機能ならプライバシー保護は万全です！"
-  },
-  "hub_setup_feature_products_title": {
-    "message": "Ghosteryのほかの製品を見る"
-  },
-  "hub_setup_feature_supporter_description": {
-    "message": "Ghosteryをサポートすると特別機能が利用できます。"
-  },
-  "hub_setup_feature_tutorial_description": {
-    "message": "Ghosteryの主な機能をご覧ください。"
-  },
-  "hub_setup_feature_tutorial_title": {
-    "message": "チュートリアルを受ける"
-  },
-  "hub_setup_header_title_antisuite": {
-    "message": "当社の推奨機能を使用してよりスマートに閲覧したいですか？"
-  },
-  "hub_setup_header_title_blocking": {
-    "message": "Ghosteryはトラッカーをブロックし、クリーン、高速、安全なブラウジング環境を提供します。$NEW_LINE$ブロックしたいトラッカーはありませんか？",
-    "placeholders": {
-      "new_line": {
-        "content": "<br />"
-      }
-    }
-  },
-  "hub_setup_header_title_done": {
-    "message": "カスタム設定完了！"
-  },
-  "hub_setup_header_title_humanweb": {
-    "message": "Ghosteryの機能改善にご協力ください。"
-  },
-  "hub_setup_humanweb_header": {
-    "message": "Ghosteryのパフォーマンス向上のため、匿名のHuman Webデータを使用しています。個人情報を収集することは絶対にありません$LINK_LM_START$詳細$LINK_LM_END$",
-    "placeholders": {
-      "link_lm_start": {
-        "content": "<a href=\"https://www.ghostery.com/faqs/human-web-data-collected/\" target=\"_blank\" rel=\"noopener noreferrer\">"
-      },
-      "link_lm_end": {
-        "content": "</a>"
-      }
-    }
-  },
-  "hub_setup_humanweb_label": {
-    "message": "この情報を共有してGhosteryをサポート"
-  },
-  "hub_setup_modal_button_ask_again": {
-    "message": "次回以降表示しない"
-  },
-  "hub_setup_modal_button_no": {
-    "message": "いいえ"
-  },
-  "hub_setup_modal_button_yes": {
-    "message": "はい"
-  },
-  "hub_setup_page_title": {
-    "message": "Ghostery ハブ - 設定"
-  },
-  "hub_setup_page_title_antisuite": {
-    "message": "Ghostery ハブ - 訴訟問題対策の設定"
-  },
-  "hub_setup_page_title_blocking": {
-    "message": "Ghostery ハブ - ブロックの設定"
-  },
-  "hub_setup_page_title_done": {
-    "message": "Ghostery ハブ - 設定の完了"
-  },
-  "hub_setup_page_title_humanweb": {
-    "message": "Ghostery Hub - Human Webの設定"
-  },
-  "hub_setup_ready_heading": {
-    "message": "Ghostery体験を最適化する"
-  },
-  "hub_side_navigation_home": {
-    "message": "ホーム"
-  },
-  "hub_side_navigation_products": {
-    "message": "Ghosteryのほかの製品を見る"
-  },
-  "hub_side_navigation_tutorial": {
-    "message": "チュートリアルを受ける"
-  },
-  "hub_side_navigation_upgrade_plan": {
-    "message": "アップグレードプラン"
-  },
-  "hub_signedin_as_email": {
-    "message": "としてサインインしています"
-  },
-  "hub_signedin_exit": {
-    "message": "ホームに戻る"
-  },
-  "hub_signedin_header_title": {
-    "message": "サインインしています"
-  },
-  "hub_supporter_feature_more_description": {
-    "message": "Ghostery体験をさらに楽しめる、その他の便利機能や新着情報にもご注目ください。"
-  },
-  "hub_supporter_feature_more_title": {
-    "message": "まだまだこれから他にも！"
-  },
-  "hub_supporter_feature_stats_description": {
-    "message": "グラフや数字を使って過去のブロック結果とその傾向を分析し、Ghostery によるブラウジングの安全性を確認できます。"
-  },
-  "hub_supporter_feature_support_description": {
-    "message": "お困りですか？壊れたページがありますか？Ghostery Plus のお客様専用アカウントでサインインすると、プライオリティ・ヘルプデスクがお客様への回答を優先して対応いたします。"
-  },
-  "hub_supporter_feature_theme_description": {
-    "message": "Ghosteryのカラーをカスタマイズして新しいビジュアル体験を！たくさんのご要望にお応えし、ついに実現。Dark Blueやその他の新着テーマをチェックしよう。"
-  },
-  "hub_supporter_header_description": {
-    "message": "アップグレードすると、基本的なプライベート保護機能だけでなく、さまざまな機能を使用できるようになります"
-  },
-  "hub_supporter_header_title": {
-    "message": "「Ghostery プラス」にアップグレードする"
-  },
-  "hub_supporter_manifesto": {
-    "message": "Ghostery Plusにアップグレードすれば、月額わずか&#36;4.99で、プライベート検索機能が組み込まれた強力なプライベートブラウザや高度なトラッカー分析など、各種の便利な機能を使用できるようになります。"
-  },
-  "hub_supporter_page_title": {
-    "message": "Ghostery ハブ - Ghostery プラス"
-  },
-  "hub_supporter_perk_analytics_description": {
-    "message": "リアルタイムの高度なトラッカーダッシュボードであるGhostery Insightsにアクセスすることができます"
-  },
-  "hub_supporter_perk_analytics_title": {
-    "message": "高度なトラッカー分析"
-  },
-  "hub_supporter_perk_dawn_and_glow_description": {
-    "message": "検索エンジンが組み込まれた強力なプライベートブラウザであるGhostery DawnとGhostery Glowをダウンロードすることができます"
-  },
-  "hub_supporter_perk_dawn_and_glow_title": {
-    "message": "プライベート検索機能が組み込まれたプライベートブラウザ"
-  },
-  "hub_supporter_perk_themes_and_more_description": {
-    "message": "Leafテーマ、Palmテーマ、Dark Blueテーマを使用して、Ghosteryの色をカスタマイズすることができます"
-  },
-  "hub_supporter_perk_themes_and_more_title": {
-    "message": "テーマを使用して色をカスタマイズ"
-  },
-  "hub_supporter_perk_themes_description": {
-    "message": "Ghosteryのカラーはカスタマイズできます。Dark Blueもお試しください！"
-  },
-  "hub_supporter_price": {
-    "message": "1か月あたり$SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$",
-    "placeholders": {
-      "sup_start": {
-        "content": "<sup>"
-      },
-      "sup_end": {
-        "content": "</sup>"
-      },
-      "span_start": {
-        "content": "<span>"
-      },
-      "span_end": {
-        "content": "</span>"
-      }
-    }
-  },
-  "hub_tutorial_antisuite_antitracking_description": {
-    "message": "サイトが個人を特定できるようなデータポイントを削除します。"
-  },
-  "hub_tutorial_antisuite_title": {
-    "message": "より強化されたプライバシー機能で保護機能を追加し、追跡を自動化しましょう。"
-  },
-  "hub_tutorial_blocking_allow": {
-    "message": "現在のサイトでトラッカーを常に許可します。"
-  },
-  "hub_tutorial_blocking_block": {
-    "message": "現在のサイトでトラッカーを常にブロックします。"
-  },
-  "hub_tutorial_blocking_block_always": {
-    "message": "すべてのサイトでトラッカーを常にブロックします。"
-  },
-  "hub_tutorial_blocking_tagline": {
-    "message": "表示されたトラッカーをブロックまたは許可し、ブラウジングのプライバシー設定を行います。"
-  },
-  "hub_tutorial_blocking_title": {
-    "message": "ブロックの種類と方法を選択してください"
-  },
-  "hub_tutorial_detailed_expanded_view": {
-    "message": "詳細を拡張表示"
-  },
-  "hub_tutorial_exit_flow": {
-    "message": "チュートリアルを終了する"
-  },
-  "hub_tutorial_layout_tagline": {
-    "message": "Ghosteryの表示内容によって、簡易表示と詳細表示の切り替えができます。"
-  },
-  "hub_tutorial_layout_title": {
-    "message": "簡易表示と詳細表示"
-  },
-  "hub_tutorial_page_title": {
-    "message": "Ghostery ハブ - チュートリアル"
-  },
-  "hub_tutorial_page_title_anti_suite": {
-    "message": "Ghostery ハブ - チュートリアル：追加機能"
-  },
-  "hub_tutorial_page_title_blocking": {
-    "message": "Ghostery ハブ - チュートリアル：ブロックする"
-  },
-  "hub_tutorial_page_title_layout": {
-    "message": "Ghostery ハブ - チュートリアル：レイアウト"
-  },
-  "hub_tutorial_page_title_trackerlist": {
-    "message": "Ghostery ハブ - チュートリアル：トラッカー"
-  },
-  "hub_tutorial_page_title_trust": {
-    "message": "Ghostery ハブ - チュートリアル：信頼と制限"
-  },
-  "hub_tutorial_page_title_video": {
-    "message": "Ghostery ハブ - チュートリアルの概要"
-  },
-  "hub_tutorial_trackerlist_tagline": {
-    "message": "Ghosteryは、アクセスしたサイトにトラッカーを表示することで、追跡している企業情報を提示します。"
-  },
-  "hub_tutorial_trackerlist_title": {
-    "message": "トラッカーリスト"
-  },
-  "hub_tutorial_trust_restrict_site": {
-    "message": "サイトでトラッカーを常にブロックします。"
-  },
-  "hub_tutorial_trust_tagline": {
-    "message": "ワン・クリックで、信頼済みサイトと制限付きサイトを切り替えることができます。"
-  },
-  "hub_tutorial_trust_title": {
-    "message": "信頼または制限のあるサイト"
-  },
-  "hub_tutorial_trust_trust_site": {
-    "message": "サイトでトラッカーを常に許可します。"
-  },
-  "hub_tutorial_video_tagline": {
-    "message": "トラッカーや広告をブロックし、プライバシーを保護しながら表示速度も上がります。"
-  },
-  "hub_tutorial_video_title": {
-    "message": "Ghosteryができること"
-  },
-  "hub_upgrade_additional_protection": {
-    "message": "追加の保護"
-  },
-  "hub_upgrade_advanced_device_protection": {
-    "message": "高度なデバイス保護"
-  },
-  "hub_upgrade_already_protected": {
-    "message": "保護済み"
-  },
-  "hub_upgrade_basic_browser_protection": {
-    "message": "基本的なブラウザ保護"
-  },
-  "hub_upgrade_basic_protection": {
-    "message": "基本的な保護"
-  },
-  "hub_upgrade_browser_ad_blocking": {
-    "message": "ブラウザの広告ブロッキング"
-  },
-  "hub_upgrade_browser_tracker_blocking": {
-    "message": "ブラウザのトラッカーブロッキング"
-  },
-  "hub_upgrade_custom_blocking_preferences": {
-    "message": "ブロック設定を変更"
-  },
-  "hub_upgrade_extension_themes": {
-    "message": "拡張テーマ"
-  },
-  "hub_upgrade_historical_extension_stats": {
-    "message": "履歴拡張統計"
-  },
-  "hub_upgrade_maximum_protection": {
-    "message": "最高レベルの保護"
-  },
-  "hub_upgrade_monthly": {
-    "message": "毎月"
-  },
-  "hub_upgrade_page_title": {
-    "message": "Ghostery Hub - アップグレード・プラン"
-  },
-  "hub_upgrade_plan_free": {
-    "message": "無料"
-  },
-  "hub_upgrade_protection_plan": {
-    "message": "保護プラン"
-  },
-  "hub_upgrade_scroll_down": {
-    "message": "全機能のリストを見る"
-  },
-  "hub_upgrade_to": {
-    "message": "アップグレード先"
-  },
-  "hub_upgrade_yearly": {
-    "message": "年単位"
-  },
-  "hub_upgrade_your": {
-    "message": "アップグレード"
-  },
   "invalid_email_forgot": {
     "message": "申し訳ありませんが、実際のメールアドレスを入力してください。"
   },
@@ -1230,7 +771,7 @@
     "message": "メール"
   },
   "license_footer": {
-    "message": "Ghostery$COPY$はCliqz会社です。$LINK_START$Cliqz$LINK_END$についてもっとよく知る。$COPY$Cliqz国際有限責任会社（Cliqz有限責任会社の完全所有子会社）。著作権所有。"
+    "message": "Ghostery GmbH. All rights reserved."
   },
   "license_generic": {
     "message": "標準ライセンス・テキスト"
