--- a/_locales/ko/messages.json
+++ b/_locales/ko/messages.json
@@ -755,465 +755,6 @@
     "message": "호스팅",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "hub_create_account_already_have_account": {
-    "message": "이미 Ghostery 계정이 있으십니까? "
-  },
-  "hub_create_account_confirm_password_do_not_match": {
-    "message": "입력한 암호가 일치하지 않습니다."
-  },
-  "hub_create_account_header_title": {
-    "message": "브라우저와 장치 모두에서 설정을 동기화할 수 있도록 Ghostery 계정을 만드시겠습니까? "
-  },
-  "hub_create_account_label_email_last_name": {
-    "message": "성(옵션):"
-  },
-  "hub_create_account_label_first_name": {
-    "message": "이름(옵션):"
-  },
-  "hub_create_account_label_password_invalid": {
-    "message": "사용 가능한 특수 문자: !@#$%^&*=+()<>{}[];:,./?"
-  },
-  "hub_create_account_label_password_invalid_length": {
-    "message": "8자에서 50자까지 사용할 수 있습니다."
-  },
-  "hub_create_account_link_login": {
-    "message": "여기에서 로그인하세요."
-  },
-  "hub_create_account_toast_error": {
-    "message": "해당 이메일 주소는 이미 사용 중입니다.  다른 이메일을 선택하십시오. "
-  },
-  "hub_create_account_toast_success": {
-    "message": "계정 만들기가 완료되었습니다."
-  },
-  "hub_home_feature_setup_button": {
-    "message": "설정 변경"
-  },
-  "hub_home_feature_setup_button_alt": {
-    "message": "사용자 지정 설정 완료"
-  },
-  "hub_home_feature_setup_text": {
-    "message": "설정과 트래커 차단 정보를 수정하세요."
-  },
-  "hub_home_feature_tutorial_button_alt": {
-    "message": "튜토리얼 완료"
-  },
-  "hub_home_feature_tutorial_text": {
-    "message": "고스터리 브라우저의 주요 기능을 알아보세요."
-  },
-  "hub_home_feature_tutorial_title": {
-    "message": "튜토리얼 보기"
-  },
-  "hub_home_header_checkbox_label": {
-    "message": "고스터리의 성능을 개선하기 위해 추가로 익명의 분석 데이터를 공유합니다."
-  },
-  "hub_home_header_info": {
-    "message": "새로운 이용자는 Human Web에 참여합니다. 사용자 지정 설정 또는 확장 프로그램에서 이 설정을 변경하실 수 있습니다."
-  },
-  "hub_home_header_info_link": {
-    "message": "자세히 알아보기"
-  },
-  "hub_home_header_info_opted_out": {
-    "message": "새로운 이용자는 기본적으로 Human Web 참여가 선택 해제되어 있습니다. 사용자 지정 설정 또는 확장 프로그램에서 이러한 권장 기능을 선택할 수 있습니다."
-  },
-  "hub_home_header_tagline": {
-    "message": "임의 설정 환경으로 보호되고 있습니다."
-  },
-  "hub_home_header_tagline_2": {
-    "message": "브라우징 시작!"
-  },
-  "hub_home_header_text": {
-    "message": "고스터리 이용이 가능합니다!"
-  },
-  "hub_home_page_title": {
-    "message": "Ghostery 허브 - 홈"
-  },
-  "hub_home_plus_full_protection": {
-    "message": "완벽하게 보호됩니다."
-  },
-  "hub_home_plus_upgrade_button_text": {
-    "message": "지금 업그레이드"
-  },
-  "hub_home_plus_upgrade_text": {
-    "message": "기본 개인정보 보호 이상을 경험해보세요. Ghostery Plus로 업그레이드하면 보안 브라우저, 보안 검색, 고급 트래커 분석 등의 강력한 기능을 사용할 수 있습니다."
-  },
-  "hub_home_subheader_optimize": {
-    "message": "고스터리 이용 환경을 최적화하세요"
-  },
-  "hub_login_header_title": {
-    "message": "계정에 로그인하세요."
-  },
-  "hub_login_label_password_invalid": {
-    "message": "8자에서 50자까지 사용할 수 있습니다."
-  },
-  "hub_login_link_create_account": {
-    "message": "어울리다"
-  },
-  "hub_login_link_dont_have_account": {
-    "message": "계정이 있으신가요?회원 가입"
-  },
-  "hub_login_toast_success": {
-    "message": "로그인되었습니다!계정 설정을 가져왔습니다."
-  },
-  "hub_products_header_description": {
-    "message": "완벽한 개인정보 보호 서비스를 통해 개인정보 보호를 지속하고 온라인 이용 경험을 향상하세요."
-  },
-  "hub_products_header_title": {
-    "message": "고스터리 제품으로 더욱 효율적인 웹 브라우징을 즐겨보세요! "
-  },
-  "hub_products_main_promo_description": {
-    "message": "업데이트로 기능이 향상된 모바일용 브라우저와 함께 광고와 트래커가 없는 브라우징을 즐기세요!전용 검색 엔진 기능이 추가되었습니다!"
-  },
-  "hub_products_main_promo_title": {
-    "message": "모바일 개인정보 보호 브라우저"
-  },
-  "hub_products_page_title": {
-    "message": "Ghostery 허브 - Ghostery의 다른 제품 이용"
-  },
-  "hub_products_second_promo_description": {
-    "message": "새로운 탭 기능으로 안전하게 검색하고  트래커 상태를 검토하고 관리하세요. 곧 이용 가능합니다!"
-  },
-  "hub_products_second_promo_title": {
-    "message": "Ghostery Start Tab"
-  },
-  "hub_products_third_promo_description": {
-    "message": "Safari 전용으로 이용 가능한 최저 용량의 브라우저로 온라인상에서 개인정보를 보호하고 광고를 차단하세요."
-  },
-  "hub_products_third_promo_title": {
-    "message": "Ghostery Lite"
-  },
-  "hub_setup_antisuite_description_antitracking": {
-    "message": "브라우저 환경을 더 강력하게 보호할 수 있도록 차단 해제된 트래커와 알 수 없는 트래커를 익명화합니다."
-  },
-  "hub_setup_antisuite_feature_enabled": {
-    "message": "활성화됨 "
-  },
-  "hub_setup_blocking_description_custom": {
-    "message": "차단할 트래커 선택"
-  },
-  "hub_setup_blocking_description_everything": {
-    "message": "모든 트래커 차단"
-  },
-  "hub_setup_blocking_description_nothing": {
-    "message": "차단된 트래커 없음"
-  },
-  "hub_setup_blocking_description_recommended": {
-    "message": "광고, 사이트 분석 및 성인 광고 트래커 차단"
-  },
-  "hub_setup_blocking_text_custom": {
-    "message": "리스트에서 선택"
-  },
-  "hub_setup_blocking_text_everything": {
-    "message": "모두 차단 "
-  },
-  "hub_setup_blocking_text_nothing": {
-    "message": "전혀 차단하지 않음"
-  },
-  "hub_setup_blocking_text_recommended": {
-    "message": "임의 차단"
-  },
-  "hub_setup_enter_modal_text": {
-    "message": "사용자 지정 설정을 입력하면 기존의 고스터리 설정이 변경됩니다. 계속하시겠습니까?"
-  },
-  "hub_setup_exit_flow": {
-    "message": "사용자 지정 종료"
-  },
-  "hub_setup_feature_products_button": {
-    "message": "부탁드립니다!"
-  },
-  "hub_setup_feature_products_description": {
-    "message": "완벽한 개인정보 보호 서비스로 여러분의 개인정보를 보호하세요!"
-  },
-  "hub_setup_feature_products_title": {
-    "message": "다양한 고스터리 제품 보기"
-  },
-  "hub_setup_feature_supporter_description": {
-    "message": "고스터리를 후원하고 특별 기능을 새롭게 이용하세요!"
-  },
-  "hub_setup_feature_tutorial_description": {
-    "message": "고스터리 브라우저의 주요 기능을 알아보세요."
-  },
-  "hub_setup_feature_tutorial_title": {
-    "message": "튜토리얼 보기"
-  },
-  "hub_setup_header_title_antisuite": {
-    "message": "권장 기능을 적용하여 더 효율적으로 브라우저를 활용하시겠습니까? "
-  },
-  "hub_setup_header_title_blocking": {
-    "message": "고스터리는 트래커를 차단하여 더욱 깔끔하고, 빠르고, 안전한 브라우징 환경을 제공합니다.$NEW_LINE$어떤 트래커를 차단하시겠습니까?",
-    "placeholders": {
-      "new_line": {
-        "content": "<br />"
-      }
-    }
-  },
-  "hub_setup_header_title_done": {
-    "message": "사용자 지정 설정이 완료되었습니다!"
-  },
-  "hub_setup_header_title_humanweb": {
-    "message": "Ghostery의 기능 개선을 도와주시겠습니까? "
-  },
-  "hub_setup_humanweb_header": {
-    "message": "고스터리 기능 향상을 위해 익명의 Human Web 데이터를 사용합니다. 개인 데이터는 절대 수집되지 않습니다.$LINK_LM_START$자세히 알아보기$LINK_LM_END$",
-    "placeholders": {
-      "link_lm_start": {
-        "content": "<a href=\"https://www.ghostery.com/faqs/human-web-data-collected/\" target=\"_blank\" rel=\"noopener noreferrer\">"
-      },
-      "link_lm_end": {
-        "content": "</a>"
-      }
-    }
-  },
-  "hub_setup_humanweb_label": {
-    "message": "해당 정보를 공유하여 고스터리를 후원합니다."
-  },
-  "hub_setup_modal_button_ask_again": {
-    "message": "다시 묻지 않기"
-  },
-  "hub_setup_modal_button_no": {
-    "message": "아니요"
-  },
-  "hub_setup_modal_button_yes": {
-    "message": "예 "
-  },
-  "hub_setup_page_title": {
-    "message": "Ghostery 허브 - 설정"
-  },
-  "hub_setup_page_title_antisuite": {
-    "message": "Ghostery 허브 - 안티스위트"
-  },
-  "hub_setup_page_title_blocking": {
-    "message": "Ghostery 허브 - 차단 설정"
-  },
-  "hub_setup_page_title_done": {
-    "message": "Ghostery 허브 - 설정 완료"
-  },
-  "hub_setup_page_title_humanweb": {
-    "message": "Ghostery 허브 - Human Web 설정"
-  },
-  "hub_setup_ready_heading": {
-    "message": "고스터리 이용 환경을 최적화하세요."
-  },
-  "hub_side_navigation_home": {
-    "message": "홈"
-  },
-  "hub_side_navigation_products": {
-    "message": "다양한 고스터리 제품 보기"
-  },
-  "hub_side_navigation_tutorial": {
-    "message": "튜토리얼 보기"
-  },
-  "hub_side_navigation_upgrade_plan": {
-    "message": "요금제 업그레이드"
-  },
-  "hub_signedin_as_email": {
-    "message": "다음 ID로 로그인됨 "
-  },
-  "hub_signedin_exit": {
-    "message": "홈으로 돌아가기"
-  },
-  "hub_signedin_header_title": {
-    "message": "이미 로그인하셨습니다."
-  },
-  "hub_supporter_feature_more_description": {
-    "message": "더욱 만족스러운 고스터리 브라우저를 만들기 위해 지속적으로 업데이트가 진행되므로 기타 멋진 기능과 서비스에 대한 소식을 받아보세요."
-  },
-  "hub_supporter_feature_more_title": {
-    "message": "더 많은 기능이 추가될 예정입니다!"
-  },
-  "hub_supporter_feature_stats_description": {
-    "message": "동향을 파악하고, Ghostery가 귀하의 브라우징에 영향을 미치는 방법을 알아보기 위해서 그래프 및 통계가 구비된 역사적 차단 결과를 열람하세요."
-  },
-  "hub_supporter_feature_support_description": {
-    "message": "도움이 필요하십니까?브로큰 페이지를 찾으십니까?Plus 계정으로 로그인한 경우에만 이용 가능한 우선 지원 데스크 서비스를 통해서 신속하게 질문에 대한 답변과 문제 해결을 제공받으세요."
-  },
-  "hub_supporter_feature_theme_description": {
-    "message": "Ghostery 컬러를 사용자 지정하여 새로운 비주얼을 경험해보세요! 폭넓은 요청에 따라 선보입니다. 특별한 Dark Blue 테마를 확인하고 앞으로 소개될 다양한 테마도 기대해주세요."
-  },
-  "hub_supporter_header_description": {
-    "message": "기본 개인정보 보호 이상을 경험하고 모든 제품 기능을 활용하세요!"
-  },
-  "hub_supporter_header_title": {
-    "message": "Ghostery Plus로 업그레이드"
-  },
-  "hub_supporter_manifesto": {
-    "message": "Ghostery Plus로 업그레이드하고 모든 제품 기능을 활용하세요! 매월 &#36;4.99만 지불하면, 내장형 보안 검색, 고급 트래커 분석 및 기타 특별한 기능이 탑재된 강력한 보안 브라우저를 이용할 수 있습니다."
-  },
-  "hub_supporter_page_title": {
-    "message": "Ghostery 허브 - Ghostery Plus"
-  },
-  "hub_supporter_perk_analytics_description": {
-    "message": "실시간 트래커 지능형 대시보드인 Ghostery Insights 이용"
-  },
-  "hub_supporter_perk_analytics_title": {
-    "message": "고급 트래커 분석"
-  },
-  "hub_supporter_perk_dawn_and_glow_description": {
-    "message": "내장 검색 엔진이 탑재된 강력한 보안 브라우저 Ghostery Dawn 및 Glow 다운로드"
-  },
-  "hub_supporter_perk_dawn_and_glow_title": {
-    "message": "보안 브라우저 및 검색 기능"
-  },
-  "hub_supporter_perk_themes_and_more_description": {
-    "message": "Ghostery 컬러 사용자 지정 - Leaf, Palm, Dark Blue 테마를 사용해보세요!"
-  },
-  "hub_supporter_perk_themes_and_more_title": {
-    "message": "맞춤 테마 등"
-  },
-  "hub_supporter_perk_themes_description": {
-    "message": "Ghostery 컬러 사용자 지정 - Dark Blue 테마를 사용해보세요!"
-  },
-  "hub_supporter_price": {
-    "message": "매달 $SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$",
-    "placeholders": {
-      "sup_start": {
-        "content": "<sup>"
-      },
-      "sup_end": {
-        "content": "</sup>"
-      },
-      "span_start": {
-        "content": "<span>"
-      },
-      "span_end": {
-        "content": "</span>"
-      }
-    }
-  },
-  "hub_tutorial_antisuite_antitracking_description": {
-    "message": "웹사이트에서 사용자 정보를 식별할 수 있는 데이터 포인트 삭제"
-  },
-  "hub_tutorial_antisuite_title": {
-    "message": "향상된 개인정보 보호 기능으로 추가 보호와 자동 관리 서비스를 이용하세요:"
-  },
-  "hub_tutorial_blocking_allow": {
-    "message": " 현재 사이트에서 항상 트래커를 허용합니다."
-  },
-  "hub_tutorial_blocking_block": {
-    "message": " 현재 사이트에서 항상 트래커를 차단합니다."
-  },
-  "hub_tutorial_blocking_block_always": {
-    "message": " 모든 사이트에서 항상 트래커를 차단합니다."
-  },
-  "hub_tutorial_blocking_tagline": {
-    "message": "리스트에 있는 트래커를 차단하거나 차단 해제하여 개인정보와 브라우징 경험을 관리하세요."
-  },
-  "hub_tutorial_blocking_title": {
-    "message": "차단할 트래커와 차단 방식을 선택하세요."
-  },
-  "hub_tutorial_detailed_expanded_view": {
-    "message": "확대하여 자세히 보기 "
-  },
-  "hub_tutorial_exit_flow": {
-    "message": "튜토리얼 종료"
-  },
-  "hub_tutorial_layout_tagline": {
-    "message": "고스터리 브라우저 디스플레이를 간단한 보기 또는 세부 보기 중에 선택하여 토글합니다."
-  },
-  "hub_tutorial_layout_title": {
-    "message": "간편 보기 또는 세부 보기 기능"
-  },
-  "hub_tutorial_page_title": {
-    "message": "Ghostery 허브 - 튜토리얼"
-  },
-  "hub_tutorial_page_title_anti_suite": {
-    "message": "Ghostery 허브 - 튜토리얼 추가 기능"
-  },
-  "hub_tutorial_page_title_blocking": {
-    "message": "Ghostery 허브 - 튜토리얼 차단"
-  },
-  "hub_tutorial_page_title_layout": {
-    "message": "Ghostery 허브 - 튜토리얼 레이아웃"
-  },
-  "hub_tutorial_page_title_trackerlist": {
-    "message": "Ghostery 허브 - 튜토리얼 트래커"
-  },
-  "hub_tutorial_page_title_trust": {
-    "message": "Ghostery 허브 - 튜토리얼 신뢰 및 차단 사이트"
-  },
-  "hub_tutorial_page_title_video": {
-    "message": "Ghostery 허브 - 튜토리얼 개요"
-  },
-  "hub_tutorial_trackerlist_tagline": {
-    "message": "고스터리는 여러분이 방문하시는 각 사이트에 대한 트래커 리스트를 제공하여 어떤 기업이 여러분을 트래킹하는지 안내하고 있습니다."
-  },
-  "hub_tutorial_trackerlist_title": {
-    "message": "트래커 리스리스트"
-  },
-  "hub_tutorial_trust_restrict_site": {
-    "message": "이 사이트에서 항상 트래커를 차단합니다."
-  },
-  "hub_tutorial_trust_tagline": {
-    "message": "한 번의 클릭으로 신뢰할 수 있는 사이트 또는 접근 제한 웹사이트로 지정하십시오."
-  },
-  "hub_tutorial_trust_title": {
-    "message": "신뢰 사이트 및 제한 사이트"
-  },
-  "hub_tutorial_trust_trust_site": {
-    "message": "이 사이트에서 항상 트래커를 허용합니다."
-  },
-  "hub_tutorial_video_tagline": {
-    "message": "트래커와 광고를 차단하고, 개인정보를 보호하고, 페이지 로딩 속도를 올리세요."
-  },
-  "hub_tutorial_video_title": {
-    "message": "고스터리의 기능과 혜택"
-  },
-  "hub_upgrade_additional_protection": {
-    "message": "추가 보호"
-  },
-  "hub_upgrade_advanced_device_protection": {
-    "message": "고급형 장치 보호"
-  },
-  "hub_upgrade_already_protected": {
-    "message": "이미 보호되고 있음"
-  },
-  "hub_upgrade_basic_browser_protection": {
-    "message": "기본 브라우저 보호"
-  },
-  "hub_upgrade_basic_protection": {
-    "message": "기본 보호"
-  },
-  "hub_upgrade_browser_ad_blocking": {
-    "message": "브라우저 광고 차단"
-  },
-  "hub_upgrade_browser_tracker_blocking": {
-    "message": "브라우저 트래커 차단"
-  },
-  "hub_upgrade_custom_blocking_preferences": {
-    "message": "차단 정보 맞춤 설정"
-  },
-  "hub_upgrade_extension_themes": {
-    "message": "확장 테마"
-  },
-  "hub_upgrade_historical_extension_stats": {
-    "message": "확장 내역 통계"
-  },
-  "hub_upgrade_maximum_protection": {
-    "message": "최대한의 보호"
-  },
-  "hub_upgrade_monthly": {
-    "message": "매월"
-  },
-  "hub_upgrade_page_title": {
-    "message": "Ghostery Hub - 플랜 업그레이드"
-  },
-  "hub_upgrade_plan_free": {
-    "message": "무료"
-  },
-  "hub_upgrade_protection_plan": {
-    "message": "업그레이드"
-  },
-  "hub_upgrade_scroll_down": {
-    "message": "기능 전체 목록 보기"
-  },
-  "hub_upgrade_to": {
-    "message": "다음으로 업그레이드"
-  },
-  "hub_upgrade_yearly": {
-    "message": "매년"
-  },
-  "hub_upgrade_your": {
-    "message": "보호 서비스"
-  },
   "invalid_email_forgot": {
     "message": "죄송하지만 실제 이메일 주소를 입력해야 합니다."
   },
@@ -1230,7 +771,7 @@
     "message": "이메일 "
   },
   "license_footer": {
-    "message": "Ghostery$COPY$;는 Cliqz 자회사입니다. $LINK_START$Cliqz$LINK_END$에 대해 자세히 알아보기. $COPY$Cliqz International GmbH는 Cliqz GmbH의 전액출자 자회사입니다. All rights reserved."
+    "message": "Ghostery GmbH. All rights reserved."
   },
   "license_generic": {
     "message": "표준 라이선스 텍스트 "
