--- a/_locales/nl/messages.json
+++ b/_locales/nl/messages.json
@@ -755,465 +755,6 @@
     "message": "Hosting",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "hub_create_account_already_have_account": {
-    "message": "Heb je al een Ghostery Account?"
-  },
-  "hub_create_account_confirm_password_do_not_match": {
-    "message": "Je wachtwoorden komen niet overeen."
-  },
-  "hub_create_account_header_title": {
-    "message": "Wil je een Ghostery account aanmaken om instellingen op verschillende browsers en apparaten te synchroniseren?"
-  },
-  "hub_create_account_label_email_last_name": {
-    "message": "Achternaam (Optioneel):"
-  },
-  "hub_create_account_label_first_name": {
-    "message": "Voornaam (Optioneel):"
-  },
-  "hub_create_account_label_password_invalid": {
-    "message": "Alleen deze speciale karakters zijn toegestaan: !@#$%^&*=+()<>{}[];:,./?"
-  },
-  "hub_create_account_label_password_invalid_length": {
-    "message": "Gebruik tussen 8 en 50 karakters."
-  },
-  "hub_create_account_link_login": {
-    "message": "Hier aanmelden."
-  },
-  "hub_create_account_toast_error": {
-    "message": "Dat e-mailadres is al in gebruik.  Gelieve een ander te kiezen."
-  },
-  "hub_create_account_toast_success": {
-    "message": "Account aangemaakt"
-  },
-  "hub_home_feature_setup_button": {
-    "message": "Setup wijzigen"
-  },
-  "hub_home_feature_setup_button_alt": {
-    "message": "Aangepaste instelling voltooid"
-  },
-  "hub_home_feature_setup_text": {
-    "message": "Je instellingen en blokkeringsvoorkeuren bewerken."
-  },
-  "hub_home_feature_tutorial_button_alt": {
-    "message": "Tutorial voltooid"
-  },
-  "hub_home_feature_tutorial_text": {
-    "message": "Loop door Ghostery's belangrijkste opties."
-  },
-  "hub_home_feature_tutorial_title": {
-    "message": "Bekijk een Tutorial"
-  },
-  "hub_home_header_checkbox_label": {
-    "message": "Deel aanvullende anonieme analytics data om de prestaties van Ghostery te verbeteren."
-  },
-  "hub_home_header_info": {
-    "message": "Nieuwe gebruikers zijn standaard ingeschreven voor Human Web. Je kunt deze aanbevolen functies inschakelen in aangepaste setup of in de extensie. "
-  },
-  "hub_home_header_info_link": {
-    "message": "Meer weten."
-  },
-  "hub_home_header_info_opted_out": {
-    "message": "Nieuwe gebruikers zijn standaard niet ingeschreven voor Human Web. Je kunt deze aanbevolen functies inschakelen in aangepaste setup of in de extensie. "
-  },
-  "hub_home_header_tagline": {
-    "message": "Je bent nu beschermd met onze standaardinstellingen."
-  },
-  "hub_home_header_tagline_2": {
-    "message": "Begin met Browsen!"
-  },
-  "hub_home_header_text": {
-    "message": "Ghostery is klaar!"
-  },
-  "hub_home_page_title": {
-    "message": "Ghostery Hub - Start"
-  },
-  "hub_home_plus_full_protection": {
-    "message": "Je wordt volledig beschermd!"
-  },
-  "hub_home_plus_upgrade_button_text": {
-    "message": "Upgrade nu"
-  },
-  "hub_home_plus_upgrade_text": {
-    "message": "Kies voor meer dan standaardprivacy. Upgrade naar Ghostery Plus om toegang te krijgen tot onze krachtige privébrowser, functie voor privé zoeken en geavanceerde trackeranalyse."
-  },
-  "hub_home_subheader_optimize": {
-    "message": "Verbeter je Ghostery-beleving"
-  },
-  "hub_login_header_title": {
-    "message": "Log in op je account."
-  },
-  "hub_login_label_password_invalid": {
-    "message": "Gebruik tussen 8 en 50 karakters."
-  },
-  "hub_login_link_create_account": {
-    "message": "Inschrijven."
-  },
-  "hub_login_link_dont_have_account": {
-    "message": "Heb je geen account?"
-  },
-  "hub_login_toast_success": {
-    "message": "Inloggen succesvol! Je instellingen zijn geïmporteerd."
-  },
-  "hub_products_header_description": {
-    "message": "Blijf beschermd en verbeter je online beleving met onze full privacy suite."
-  },
-  "hub_products_header_title": {
-    "message": "Browse slimmer met Ghostery-producten!"
-  },
-  "hub_products_main_promo_description": {
-    "message": "Browse advertentie- en tracker-vrij onderweg met onze verbeterde mobiele browser. Nu uitgevoerd met een private zoekmachine!"
-  },
-  "hub_products_main_promo_title": {
-    "message": "Mobiele privacybrowser"
-  },
-  "hub_products_page_title": {
-    "message": "Ghostery Hub - Probeer andere Ghostery-producten"
-  },
-  "hub_products_second_promo_description": {
-    "message": "Zoek privé en bekijk trackerresultaten met onze nieuwe tab-functie. Binnenkort!"
-  },
-  "hub_products_second_promo_title": {
-    "message": "Ghostery Start Tab"
-  },
-  "hub_products_third_promo_description": {
-    "message": "Bescherm je online privacy en browse zonder advertenties met ons lichtste product, exclusief voor Safari."
-  },
-  "hub_products_third_promo_title": {
-    "message": "Ghostery Lite"
-  },
-  "hub_setup_antisuite_description_antitracking": {
-    "message": "Anonimiseer gedeblokkeerde en onbekende trackers voor meer bescherming tijdens het browsen."
-  },
-  "hub_setup_antisuite_feature_enabled": {
-    "message": "Geactiveerd"
-  },
-  "hub_setup_blocking_description_custom": {
-    "message": "Kies welke trackers je wil blokkeren"
-  },
-  "hub_setup_blocking_description_everything": {
-    "message": "Alle trackers geblokkeerd"
-  },
-  "hub_setup_blocking_description_nothing": {
-    "message": "Geen trackers geblokkeerd"
-  },
-  "hub_setup_blocking_description_recommended": {
-    "message": "Advertising, Website Analytics en Adult Advertising trackers"
-  },
-  "hub_setup_blocking_text_custom": {
-    "message": "Kies uit lijst"
-  },
-  "hub_setup_blocking_text_everything": {
-    "message": "Blokkeer Alles "
-  },
-  "hub_setup_blocking_text_nothing": {
-    "message": "Blokkeer niets"
-  },
-  "hub_setup_blocking_text_recommended": {
-    "message": "Standaard blokkeren"
-  },
-  "hub_setup_enter_modal_text": {
-    "message": "Met aangepaste instellingen overschrijf je de vorige Ghostery-instellingen. Wil je doorgaan?"
-  },
-  "hub_setup_exit_flow": {
-    "message": "Aangepaste Instelling verlaten"
-  },
-  "hub_setup_feature_products_button": {
-    "message": "Ja graag!"
-  },
-  "hub_setup_feature_products_description": {
-    "message": "Bescherm jezelf volledig met onze full privacy suite!"
-  },
-  "hub_setup_feature_products_title": {
-    "message": "Bekijk meer Ghostery-producten"
-  },
-  "hub_setup_feature_supporter_description": {
-    "message": "Steun Ghostery en ontgrendel speciale extra's!"
-  },
-  "hub_setup_feature_tutorial_description": {
-    "message": "Loop door Ghostery's belangrijkste opties."
-  },
-  "hub_setup_feature_tutorial_title": {
-    "message": "Bekijk een Tutorial"
-  },
-  "hub_setup_header_title_antisuite": {
-    "message": "Wil je slimmer browsen met onze aanbevolen features?"
-  },
-  "hub_setup_header_title_blocking": {
-    "message": "Ghostery kan trackers blokkeren om je schoner, sneller en veiliger te laten browsen.$NEW_LINE$Wat wil je blokkeren?",
-    "placeholders": {
-      "new_line": {
-        "content": "<br />"
-      }
-    }
-  },
-  "hub_setup_header_title_done": {
-    "message": "Aangepaste instelling voltooid!"
-  },
-  "hub_setup_header_title_humanweb": {
-    "message": "Zou je willen helpen Ghostery te verbeteren?"
-  },
-  "hub_setup_humanweb_header": {
-    "message": "We gebruiken anonieme Human Web data om de prestaties van Ghostery te verbeteren. Er worden nooit persoonsgegevens verzameld. $LINK_LM_START$Meer weten$LINK_LM_END$",
-    "placeholders": {
-      "link_lm_start": {
-        "content": "<a href=\"https://www.ghostery.com/faqs/human-web-data-collected/\" target=\"_blank\" rel=\"noopener noreferrer\">"
-      },
-      "link_lm_end": {
-        "content": "</a>"
-      }
-    }
-  },
-  "hub_setup_humanweb_label": {
-    "message": "Steun Ghostery door deze informatie te delen."
-  },
-  "hub_setup_modal_button_ask_again": {
-    "message": "Niet meer vragen"
-  },
-  "hub_setup_modal_button_no": {
-    "message": "Nee"
-  },
-  "hub_setup_modal_button_yes": {
-    "message": "Ja"
-  },
-  "hub_setup_page_title": {
-    "message": "Ghostery Instellen"
-  },
-  "hub_setup_page_title_antisuite": {
-    "message": "Ghostery Hub - Instellen Anti-Suite"
-  },
-  "hub_setup_page_title_blocking": {
-    "message": "Ghostery Hub - Instellen blokkering"
-  },
-  "hub_setup_page_title_done": {
-    "message": "Ghostery Hub - instellen voltooid"
-  },
-  "hub_setup_page_title_humanweb": {
-    "message": "Ghostery Hub - Instellen Human Web"
-  },
-  "hub_setup_ready_heading": {
-    "message": "Verbeter je Ghostery-beleving"
-  },
-  "hub_side_navigation_home": {
-    "message": "Start"
-  },
-  "hub_side_navigation_products": {
-    "message": "Bekijk meer Ghostery-producten"
-  },
-  "hub_side_navigation_tutorial": {
-    "message": "Bekijk een Tutorial"
-  },
-  "hub_side_navigation_upgrade_plan": {
-    "message": "Abonnement upgraden"
-  },
-  "hub_signedin_as_email": {
-    "message": "Ingelogd als"
-  },
-  "hub_signedin_exit": {
-    "message": "Terug naar start"
-  },
-  "hub_signedin_header_title": {
-    "message": "Je bent al ingelogd"
-  },
-  "hub_supporter_feature_more_description": {
-    "message": "Blijf op de hoogte van andere coole functies en inzichten terwijl wij je Ghostery-ervaring plezierig blijven maken."
-  },
-  "hub_supporter_feature_more_title": {
-    "message": "...en meer!"
-  },
-  "hub_supporter_feature_stats_description": {
-    "message": "Bekijk geschiedenis blocking resultaten met grafieken en ontdek trends waaruit blijkt hoe Ghostery invloed heeft op jouw browsing."
-  },
-  "hub_supporter_feature_support_description": {
-    "message": "Ondersteuning nodig? Een pagina met foutmelding gevonden? Laat je vragen en problemen snel oplossen met onze Priority Ondersteuning, alleen beschikbaar als je bent ingelogd met een Plus account."
-  },
-  "hub_supporter_feature_theme_description": {
-    "message": "Pas de Ghostery-kleuren aan voor een nieuwe, visuele beleving! Ingevoerd na vele verzoeken. Test ons speciale Dark Blue-thema. Binnenkort volgen er meer."
-  },
-  "hub_supporter_header_description": {
-    "message": "Kies voor meer dan standaardprivacy en ontgrendel onze volledige productsuite!"
-  },
-  "hub_supporter_header_title": {
-    "message": "Upgraden naar Ghostery Plus"
-  },
-  "hub_supporter_manifesto": {
-    "message": "Upgrade naar Ghostery Plus om onze volledige productsuite te ontgrendelen! Voor slechts &#36;4.99 per maand krijg je toegang tot een krachtige privébrowser met ingebouwde functie voor privé zoeken, geavanceerde trackeranalyses, en andere speciale extra's."
-  },
-  "hub_supporter_page_title": {
-    "message": "Ghostery Hub - Ghostery Plus"
-  },
-  "hub_supporter_perk_analytics_description": {
-    "message": "Krijg toegang tot Ghostery Insights, ons dashboard met realtime trackerinformatie"
-  },
-  "hub_supporter_perk_analytics_title": {
-    "message": "Geavanceerde trackeranalyse"
-  },
-  "hub_supporter_perk_dawn_and_glow_description": {
-    "message": "Download Ghostery Dawn en Glow, onze krachtige privébrowser met ingebouwde zoekmachine"
-  },
-  "hub_supporter_perk_dawn_and_glow_title": {
-    "message": "Privé browsen en zoeken"
-  },
-  "hub_supporter_perk_themes_and_more_description": {
-    "message": "Pas de Ghostery-kleuren aan: probeer onze Leaf-, Palm- en Dark Blue-thema's!"
-  },
-  "hub_supporter_perk_themes_and_more_title": {
-    "message": "Aangepaste thema's en meer"
-  },
-  "hub_supporter_perk_themes_description": {
-    "message": "Ghostery-kleuren aanpassen - test ons Dark Blue-thema!"
-  },
-  "hub_supporter_price": {
-    "message": "$SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$ per maand",
-    "placeholders": {
-      "sup_start": {
-        "content": "<sup>"
-      },
-      "sup_end": {
-        "content": "</sup>"
-      },
-      "span_start": {
-        "content": "<span>"
-      },
-      "span_end": {
-        "content": "</span>"
-      }
-    }
-  },
-  "hub_tutorial_antisuite_antitracking_description": {
-    "message": "Verwijder datapunten waarmee websites jou kunnen identificeren."
-  },
-  "hub_tutorial_antisuite_title": {
-    "message": "Krijg extra bescherming en geautomatiseerde controle met onze verbeterde privacy-opties:"
-  },
-  "hub_tutorial_blocking_allow": {
-    "message": "Sta trackers op deze website altijd toe."
-  },
-  "hub_tutorial_blocking_block": {
-    "message": "Blokkeer trackers op deze website altijd."
-  },
-  "hub_tutorial_blocking_block_always": {
-    "message": "Blokkeer trackers altijd op alle websites."
-  },
-  "hub_tutorial_blocking_tagline": {
-    "message": "Neem de controle over je privacy en surfervaring door trackers in de lijst te blokkeren of te deblokkeren."
-  },
-  "hub_tutorial_blocking_title": {
-    "message": "Kies wat en hoe je wil blokkeren"
-  },
-  "hub_tutorial_detailed_expanded_view": {
-    "message": "Gedetailleerd uitgebreid overzicht"
-  },
-  "hub_tutorial_exit_flow": {
-    "message": "Tutorial verlaten"
-  },
-  "hub_tutorial_layout_tagline": {
-    "message": "Schakel tussen een simpele of detailweergave, afhankelijk van wat je wil dat Ghostery toont."
-  },
-  "hub_tutorial_layout_title": {
-    "message": "Simpele en uitgebreide overzichten"
-  },
-  "hub_tutorial_page_title": {
-    "message": "Ghostery Hub - Tutorial"
-  },
-  "hub_tutorial_page_title_anti_suite": {
-    "message": "Ghostery Hub - Tutorial extra functies"
-  },
-  "hub_tutorial_page_title_blocking": {
-    "message": "Ghostery Hub - Tutorial blokkeren"
-  },
-  "hub_tutorial_page_title_layout": {
-    "message": "Ghostery Hub - Tutorial layout"
-  },
-  "hub_tutorial_page_title_trackerlist": {
-    "message": "Ghostery Hub - Tutorial trackers"
-  },
-  "hub_tutorial_page_title_trust": {
-    "message": "Ghostery Hub - Tutorial vertrouwen en beperking"
-  },
-  "hub_tutorial_page_title_video": {
-    "message": "Ghostery Hub - Tutorial overzicht"
-  },
-  "hub_tutorial_trackerlist_tagline": {
-    "message": "Ghostery helpt je op de hoogte te blijven van welke bedrijven je volgen door de trackers op elke website die je bezoekt te vermelden."
-  },
-  "hub_tutorial_trackerlist_title": {
-    "message": "Trackerlijst"
-  },
-  "hub_tutorial_trust_restrict_site": {
-    "message": "Blokkeer trackers op deze website altijd."
-  },
-  "hub_tutorial_trust_tagline": {
-    "message": "Vertrouw of beperk websites met één klik."
-  },
-  "hub_tutorial_trust_title": {
-    "message": "Trust & Restrict-sites"
-  },
-  "hub_tutorial_trust_trust_site": {
-    "message": "Sta trackers op deze website altijd toe."
-  },
-  "hub_tutorial_video_tagline": {
-    "message": "Blokkeer trackers en advertenties, bescherm je privacy en versnel het laden van pagina's."
-  },
-  "hub_tutorial_video_title": {
-    "message": "Wat Ghostery voor jou kan doen"
-  },
-  "hub_upgrade_additional_protection": {
-    "message": "Aanvullende bescherming"
-  },
-  "hub_upgrade_advanced_device_protection": {
-    "message": "Geavanceerde apparaatbescherming"
-  },
-  "hub_upgrade_already_protected": {
-    "message": "Wordt al beschermd"
-  },
-  "hub_upgrade_basic_browser_protection": {
-    "message": "Basisbescherming voor browsers"
-  },
-  "hub_upgrade_basic_protection": {
-    "message": "Basisbescherming"
-  },
-  "hub_upgrade_browser_ad_blocking": {
-    "message": "Ad Blocking in browser"
-  },
-  "hub_upgrade_browser_tracker_blocking": {
-    "message": "Trackers blokkeren in browser"
-  },
-  "hub_upgrade_custom_blocking_preferences": {
-    "message": "Aangepaste blokkeringsvoorkeuren"
-  },
-  "hub_upgrade_extension_themes": {
-    "message": "Uitbreidingsthema's"
-  },
-  "hub_upgrade_historical_extension_stats": {
-    "message": "Historische uitbreidingsstatistieken"
-  },
-  "hub_upgrade_maximum_protection": {
-    "message": "Maximale bescherming"
-  },
-  "hub_upgrade_monthly": {
-    "message": "Maandelijks"
-  },
-  "hub_upgrade_page_title": {
-    "message": "Ghostery Hub - Abonnement upgraden"
-  },
-  "hub_upgrade_plan_free": {
-    "message": "Gratis"
-  },
-  "hub_upgrade_protection_plan": {
-    "message": "beschermingsabonnement"
-  },
-  "hub_upgrade_scroll_down": {
-    "message": "Bekijk de volledige lijst van functies"
-  },
-  "hub_upgrade_to": {
-    "message": "Upgraden naar"
-  },
-  "hub_upgrade_yearly": {
-    "message": "Jaarlijks"
-  },
-  "hub_upgrade_your": {
-    "message": "Upgrade je"
-  },
   "invalid_email_forgot": {
     "message": "Sorry, je moet een echt e-mailadres invoeren."
   },
@@ -1230,7 +771,7 @@
     "message": "E-mail"
   },
   "license_footer": {
-    "message": "Ghostery$COPY$; is een Cliqz company. Kom meer te weten over $LINK_START$Cliqz$LINK_END$. $COPY$Cliqz International GmbH, een dochtermaatschappij van Cliqz GmbH. Alle rechten voorbehouden."
+    "message": "Ghostery GmbH. Alle rechten voorbehouden."
   },
   "license_generic": {
     "message": "Standaard licentietekst"
