--- a/_locales/pl/messages.json
+++ b/_locales/pl/messages.json
@@ -755,465 +755,6 @@
     "message": "Hosting",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "hub_create_account_already_have_account": {
-    "message": "Masz już konto Ghostery?"
-  },
-  "hub_create_account_confirm_password_do_not_match": {
-    "message": "Hasła nie są identyczne."
-  },
-  "hub_create_account_header_title": {
-    "message": "Czy chcesz utworzyć konto Ghostery do synchronizacji ustawień na wszystkich przeglądarkach i urządzeniach?"
-  },
-  "hub_create_account_label_email_last_name": {
-    "message": "Nazwisko (opcjonalnie):"
-  },
-  "hub_create_account_label_first_name": {
-    "message": "Imię (opcjonalnie):"
-  },
-  "hub_create_account_label_password_invalid": {
-    "message": "Dozwolone są tylko te znaki specjalne: !@#$%^&*=+()<>{}[];:,./?"
-  },
-  "hub_create_account_label_password_invalid_length": {
-    "message": "Użyj od 8 do 50 znaków."
-  },
-  "hub_create_account_link_login": {
-    "message": "Zaloguj się tutaj."
-  },
-  "hub_create_account_toast_error": {
-    "message": "Ten adres e-mail jest już używany.  Wybierz inny adres. "
-  },
-  "hub_create_account_toast_success": {
-    "message": "Utworzenie konta powiodło się"
-  },
-  "hub_home_feature_setup_button": {
-    "message": "Edytuj konfigurację"
-  },
-  "hub_home_feature_setup_button_alt": {
-    "message": "Konfiguracja niestandardowa zakończona"
-  },
-  "hub_home_feature_setup_text": {
-    "message": "Edytuj ustawienia i preferencje blokowania."
-  },
-  "hub_home_feature_tutorial_button_alt": {
-    "message": "Tutorial ukończony"
-  },
-  "hub_home_feature_tutorial_text": {
-    "message": "Poznaj główne funkcje Ghostery."
-  },
-  "hub_home_feature_tutorial_title": {
-    "message": "Obejrzyj tutorial"
-  },
-  "hub_home_header_checkbox_label": {
-    "message": "Udostępnij dodatkowe anonimowe dane analityczne w celu poprawy wydajności Ghostery."
-  },
-  "hub_home_header_info": {
-    "message": "Nowi użytkownicy korzystają z rozwiązania Human Web. Możesz zmienić te ustawienia przy instalacji lub w rozszerzeniu. "
-  },
-  "hub_home_header_info_link": {
-    "message": "Dowiedz się więcej."
-  },
-  "hub_home_header_info_opted_out": {
-    "message": "Funkcje Human Web są domyślnie wyłączone dla nowych użytkowników. Możesz włączyć te zalecane funkcje w niestandardowej konfiguracji lub w rozszerzeniu."
-  },
-  "hub_home_header_tagline": {
-    "message": "Obecnie jesteś chroniony/-a za pomocą ustawień domyślnych."
-  },
-  "hub_home_header_tagline_2": {
-    "message": "Rozpocznij przeglądanie!"
-  },
-  "hub_home_header_text": {
-    "message": "Ghostery jest gotowe!"
-  },
-  "hub_home_page_title": {
-    "message": "Hub Ghostery - Strona główna"
-  },
-  "hub_home_plus_full_protection": {
-    "message": "Jesteś w pełni chroniony!"
-  },
-  "hub_home_plus_upgrade_button_text": {
-    "message": "Uaktualnij teraz"
-  },
-  "hub_home_plus_upgrade_text": {
-    "message": "Wzmocnij swoją ochronę prywatności. Uaktualnij plan do wersji Ghostery Plus, aby uzyskać dostęp do prywatnej przeglądarki, prywatnego wyszukiwania i zaawansowanej analizy tropicieli!"
-  },
-  "hub_home_subheader_optimize": {
-    "message": "Zoptymalizuj korzystanie z Ghostery"
-  },
-  "hub_login_header_title": {
-    "message": "Zaloguj się do swojego konta."
-  },
-  "hub_login_label_password_invalid": {
-    "message": "Użyj od 8 do 50 znaków."
-  },
-  "hub_login_link_create_account": {
-    "message": "Zarejestruj się. "
-  },
-  "hub_login_link_dont_have_account": {
-    "message": "Nie masz konta?"
-  },
-  "hub_login_toast_success": {
-    "message": "Logowanie powiodło się! Ustawienia Twojego konta zostały zaimportowane."
-  },
-  "hub_products_header_description": {
-    "message": "Zapewnij sobie ochronę i ulepsz korzystanie online dzięki naszemu pełnemu pakietowi ochrony prywatności."
-  },
-  "hub_products_header_title": {
-    "message": "Inteligentne przeglądanie z produktami Ghostery!"
-  },
-  "hub_products_main_promo_description": {
-    "message": "Przeglądaj treści na bieżąco bez reklam i działania tropicieli dzięki naszej zaktualizowanej i rozbudowanej przeglądarce mobilnej. Teraz jest ona wyposażona w prywatną wyszukiwarkę!"
-  },
-  "hub_products_main_promo_title": {
-    "message": "Mobilna przeglądarka chroniąca prywatność"
-  },
-  "hub_products_page_title": {
-    "message": "Hub Ghostery - Wypróbuj inne produkty Ghostery"
-  },
-  "hub_products_second_promo_description": {
-    "message": "Przeszukuj w trybie prywatnym i przeglądaj statystyki tropicieli z naszej funkcji nowej zakładki. Już wkrótce!"
-  },
-  "hub_products_second_promo_title": {
-    "message": "Ghostery Start Tab"
-  },
-  "hub_products_third_promo_description": {
-    "message": "Chroń swoją prywatność online i pozbądź się reklam dzięki naszemu najlżejszemu jak dotąd produktowi dostępnemu wyłącznie na Safari."
-  },
-  "hub_products_third_promo_title": {
-    "message": "Ghostery Lite"
-  },
-  "hub_setup_antisuite_description_antitracking": {
-    "message": "Anonimizuj odblokowane i niezidentyfikowane tropiciele, aby zapewnić lepszą ochronę przeglądania treści."
-  },
-  "hub_setup_antisuite_feature_enabled": {
-    "message": "Włączone"
-  },
-  "hub_setup_blocking_description_custom": {
-    "message": "Wybierz które tropiciele blokować"
-  },
-  "hub_setup_blocking_description_everything": {
-    "message": "Wszystkie tropiciele zablokowane"
-  },
-  "hub_setup_blocking_description_nothing": {
-    "message": "Brak zablokowanych tropicieli"
-  },
-  "hub_setup_blocking_description_recommended": {
-    "message": "Zablokowane reklamy, analizy statystyk strony i tropiciele reklam dla dorosłych"
-  },
-  "hub_setup_blocking_text_custom": {
-    "message": "Wybierz z listy"
-  },
-  "hub_setup_blocking_text_everything": {
-    "message": "Blokuj wszystko"
-  },
-  "hub_setup_blocking_text_nothing": {
-    "message": "Nie blokuj niczego"
-  },
-  "hub_setup_blocking_text_recommended": {
-    "message": "Blokuj domyślne"
-  },
-  "hub_setup_enter_modal_text": {
-    "message": "Wprowadzenie konfiguracji niestandardowej spowoduje nadpisanie poprzednich ustawień Ghostery. Czy chcesz kontynuować?"
-  },
-  "hub_setup_exit_flow": {
-    "message": "Wyjdź z konfiguracji niestandardowej"
-  },
-  "hub_setup_feature_products_button": {
-    "message": "Tak, poproszę!"
-  },
-  "hub_setup_feature_products_description": {
-    "message": "Chroń w pełni swoją prywatność dzięki naszemu pełnemu pakietowi ochrony prywatności!"
-  },
-  "hub_setup_feature_products_title": {
-    "message": "Zobacz więcej produktów Ghostery"
-  },
-  "hub_setup_feature_supporter_description": {
-    "message": "Wesprzyj Ghostery i odblokuj dodatki specjalne."
-  },
-  "hub_setup_feature_tutorial_description": {
-    "message": "Poznaj główne funkcje Ghostery."
-  },
-  "hub_setup_feature_tutorial_title": {
-    "message": "Obejrzyj tutorial"
-  },
-  "hub_setup_header_title_antisuite": {
-    "message": "Chcesz przeglądać przy użyciu inteligentnej technologii zawartej w rekomendowanych przez nas funkcjach?"
-  },
-  "hub_setup_header_title_blocking": {
-    "message": "Ghostery może blokować tropicieli, dzięki czemu przeglądanie treści będzie bardziej przejrzyste, szybkie i bezpieczne.$NEW_LINE$Co chcesz blokować?",
-    "placeholders": {
-      "new_line": {
-        "content": "<br />"
-      }
-    }
-  },
-  "hub_setup_header_title_done": {
-    "message": "Konfiguracja niestandardowa zakończona!"
-  },
-  "hub_setup_header_title_humanweb": {
-    "message": "Czy chcesz pomóc w ulepszaniu Ghostery?"
-  },
-  "hub_setup_humanweb_header": {
-    "message": "Wykorzystujemy dane Human Web w celu poprawy wydajności Ghostery. Nigdy nie gromadzimy żadnych danych osobowych. $LINK_LM_START$Dowiedz się więcej$LINK_LM_END$",
-    "placeholders": {
-      "link_lm_start": {
-        "content": "<a href=\"https://www.ghostery.com/faqs/human-web-data-collected/\" target=\"_blank\" rel=\"noopener noreferrer\">"
-      },
-      "link_lm_end": {
-        "content": "</a>"
-      }
-    }
-  },
-  "hub_setup_humanweb_label": {
-    "message": "Wesprzyj Ghostery udostępniając te informacje"
-  },
-  "hub_setup_modal_button_ask_again": {
-    "message": "Nie pytaj ponownie"
-  },
-  "hub_setup_modal_button_no": {
-    "message": "Nie"
-  },
-  "hub_setup_modal_button_yes": {
-    "message": "Tak"
-  },
-  "hub_setup_page_title": {
-    "message": "Hub Ghostery - Konfiguracja"
-  },
-  "hub_setup_page_title_antisuite": {
-    "message": "Hub Ghostery - Konfiguracja Anti-Suite"
-  },
-  "hub_setup_page_title_blocking": {
-    "message": "Hub Ghostery - Konfiguracja Blokowanie"
-  },
-  "hub_setup_page_title_done": {
-    "message": "Hub Ghostery - Konfiguracja zakończona"
-  },
-  "hub_setup_page_title_humanweb": {
-    "message": "Hub Ghostery - Konfiguracja Human Web"
-  },
-  "hub_setup_ready_heading": {
-    "message": "Zoptymalizuj korzystanie z Ghostery"
-  },
-  "hub_side_navigation_home": {
-    "message": "Strona główna"
-  },
-  "hub_side_navigation_products": {
-    "message": "Zobacz więcej produktów Ghostery"
-  },
-  "hub_side_navigation_tutorial": {
-    "message": "Obejrzyj tutorial"
-  },
-  "hub_side_navigation_upgrade_plan": {
-    "message": "Uaktualnij plan"
-  },
-  "hub_signedin_as_email": {
-    "message": "Zalogowano jako"
-  },
-  "hub_signedin_exit": {
-    "message": "Powrót do strony głównej"
-  },
-  "hub_signedin_header_title": {
-    "message": "Już jesteś zalogowany/-a"
-  },
-  "hub_supporter_feature_more_description": {
-    "message": "Zaglądaj i sprawdzaj inne super funkcje i informacje, dzięki którym możemy sprawić, by korzystanie z Ghostery było jeszcze przyjemniejsze."
-  },
-  "hub_supporter_feature_more_title": {
-    "message": "...i wiele więcej!"
-  },
-  "hub_supporter_feature_stats_description": {
-    "message": "Przeglądaj archiwalne wyniki blokowania za pomocą wykresów i statystyk, aby odkryć trendy i dowiedzieć się, jak Ghostery wpłynęło na sposób przeglądania przez Ciebie stron internetowych."
-  },
-  "hub_supporter_feature_support_description": {
-    "message": "Potrzebujesz wsparcia? Znalazłeś uszkodzoną stronę? Uzyskaj w szybki sposób odpowiedzi na swoje pytania i rozwiązania problemów przy pomocy naszego działu wsparcia priorytetowego, który dostępny jest po subskrypcji do konta Plus."
-  },
-  "hub_supporter_feature_theme_description": {
-    "message": "Dostosuj kolorystykę Ghostery, zyskując nowe wrażenia wizualne! Funkcja wprowadzona na prośbę użytkowników. Wypróbuj specjalny temat Dark Blue, a w przyszłości także i inne."
-  },
-  "hub_supporter_header_description": {
-    "message": "Wzmocnij swoją ochronę prywatności i uzyskaj dostęp do pełnego pakietu produktów!"
-  },
-  "hub_supporter_header_title": {
-    "message": "Zaktualizuj do Ghostery Plus"
-  },
-  "hub_supporter_manifesto": {
-    "message": "Uaktualnij plan do wersji Ghostery Plus, aby odblokować pełen pakiet produktów. Za cenę 4,99 USD miesięcznie otrzymasz dostęp do prywatnej przeglądarki z wbudowaną wyszukiwarką, zaawansowanej analizy tropicieli i innych korzyści."
-  },
-  "hub_supporter_page_title": {
-    "message": "Hub Ghostery - Ghostery Plus"
-  },
-  "hub_supporter_perk_analytics_description": {
-    "message": "Dostęp do panelu Ghostery Insights zawierającego informacje o tropicielach na bieżąco"
-  },
-  "hub_supporter_perk_analytics_title": {
-    "message": "Zaawansowana analiza tropicieli"
-  },
-  "hub_supporter_perk_dawn_and_glow_description": {
-    "message": "Pobierz Ghostery Dawn i Ghostery Glow – prywatną przeglądarkę oraz wbudowaną w nią wyszukiwarkę"
-  },
-  "hub_supporter_perk_dawn_and_glow_title": {
-    "message": "Prywatna przeglądarka i wyszukiwarka"
-  },
-  "hub_supporter_perk_themes_and_more_description": {
-    "message": "Dostosuj kolorystykę Ghostery — wypróbuj motywy Leaf, Palm i Dark Blue!"
-  },
-  "hub_supporter_perk_themes_and_more_title": {
-    "message": "Niestandardowe motywy i nie tylko"
-  },
-  "hub_supporter_perk_themes_description": {
-    "message": "Dostosuj kolorystykę Ghostery — wypróbuj nasz temat Dark Blue!"
-  },
-  "hub_supporter_price": {
-    "message": "$SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$ miesięcznie",
-    "placeholders": {
-      "sup_start": {
-        "content": "<sup>"
-      },
-      "sup_end": {
-        "content": "</sup>"
-      },
-      "span_start": {
-        "content": "<span>"
-      },
-      "span_end": {
-        "content": "</span>"
-      }
-    }
-  },
-  "hub_tutorial_antisuite_antitracking_description": {
-    "message": "Usuwaj punkty danych, które mogą być wykorzystywane przez strony do Twojej identyfikacji."
-  },
-  "hub_tutorial_antisuite_title": {
-    "message": "Zyskaj dodatkową ochronę i zautomatyzowaną kontrolę dzięki naszym funkcjom wzmocnionej ochrony prywatności:"
-  },
-  "hub_tutorial_blocking_allow": {
-    "message": "Zawsze zezwalaj na działanie tropiciela na bieżącej stronie."
-  },
-  "hub_tutorial_blocking_block": {
-    "message": "Zawsze blokuj działanie tropiciela na bieżącej stronie."
-  },
-  "hub_tutorial_blocking_block_always": {
-    "message": "Zawsze blokuj działanie tropiciela na każdej stronie."
-  },
-  "hub_tutorial_blocking_tagline": {
-    "message": "Miej pod kontrolą swoją prywatność oraz przeglądanie treści, blokując lub odblokowując tropicieli z listy."
-  },
-  "hub_tutorial_blocking_title": {
-    "message": "Wybierz co i jak chcesz blokować"
-  },
-  "hub_tutorial_detailed_expanded_view": {
-    "message": "Widok szczegółowy rozszerzony"
-  },
-  "hub_tutorial_exit_flow": {
-    "message": "Wyjdź z tutoriala"
-  },
-  "hub_tutorial_layout_tagline": {
-    "message": "Przełączaj się pomiędzy widokiem uproszczonym i szczegółowym w zależności od tego, co ma byś wyświetlane przez Ghostery."
-  },
-  "hub_tutorial_layout_title": {
-    "message": "Widok zwykły i szczegółowy"
-  },
-  "hub_tutorial_page_title": {
-    "message": "Hub Ghostery - Tutorial"
-  },
-  "hub_tutorial_page_title_anti_suite": {
-    "message": "Hub Ghostery - Tutorial Funkcje dodatkowe"
-  },
-  "hub_tutorial_page_title_blocking": {
-    "message": "Hub Ghostery - Tutorial Blokowanie"
-  },
-  "hub_tutorial_page_title_layout": {
-    "message": "Hub Ghostery - Tutorial Układ wizualny"
-  },
-  "hub_tutorial_page_title_trackerlist": {
-    "message": "Hub Ghostery - Tutorial Tropiciele"
-  },
-  "hub_tutorial_page_title_trust": {
-    "message": "Hub Ghostery - Tutorial Zaufaj i zastrzeż"
-  },
-  "hub_tutorial_page_title_video": {
-    "message": "Hub Ghostery - Tutorial Przegląd"
-  },
-  "hub_tutorial_trackerlist_tagline": {
-    "message": "Ghostery pomaga w dostarczaniu informacji o śledzących Cię firmach, prezentując listy tropicieli aktywnych na każdej z odwiedzanych witryn."
-  },
-  "hub_tutorial_trackerlist_title": {
-    "message": "Lista tropicieli"
-  },
-  "hub_tutorial_trust_restrict_site": {
-    "message": "Zawsze blokuj działanie tropicieli na tej stronie."
-  },
-  "hub_tutorial_trust_tagline": {
-    "message": "Jednym kliknięciem dodaj stronę do zaufanych lub zastrzeżonych."
-  },
-  "hub_tutorial_trust_title": {
-    "message": "Zaufaj i zastrzeż strony"
-  },
-  "hub_tutorial_trust_trust_site": {
-    "message": "Zawsze zezwalaj na działanie tropicieli na tej stronie."
-  },
-  "hub_tutorial_video_tagline": {
-    "message": "Blokuj tropicieli i reklamy, chroń swoją prywatność i przyspiesz ładowanie stron."
-  },
-  "hub_tutorial_video_title": {
-    "message": "Co Ghostery może dla Ciebie zrobić"
-  },
-  "hub_upgrade_additional_protection": {
-    "message": "Dodatkowa ochrona"
-  },
-  "hub_upgrade_advanced_device_protection": {
-    "message": "Zaawansowana ochrona urządzeń"
-  },
-  "hub_upgrade_already_protected": {
-    "message": "Już chronione"
-  },
-  "hub_upgrade_basic_browser_protection": {
-    "message": "Podstawowa ochrona przeglądarki"
-  },
-  "hub_upgrade_basic_protection": {
-    "message": "Podstawowa ochrona"
-  },
-  "hub_upgrade_browser_ad_blocking": {
-    "message": "Blokowanie reklam przeglądarki"
-  },
-  "hub_upgrade_browser_tracker_blocking": {
-    "message": "Blokowanie tropicieli przeglądarki"
-  },
-  "hub_upgrade_custom_blocking_preferences": {
-    "message": "Niestandardowe preferencje blokowania"
-  },
-  "hub_upgrade_extension_themes": {
-    "message": "Tematy rozszerzeń"
-  },
-  "hub_upgrade_historical_extension_stats": {
-    "message": "Statystyki archiwalne rozszerzenia"
-  },
-  "hub_upgrade_maximum_protection": {
-    "message": "Maksymalna ochrona"
-  },
-  "hub_upgrade_monthly": {
-    "message": "Miesięcznie"
-  },
-  "hub_upgrade_page_title": {
-    "message": "Ghostery Hub – Uaktualnij plan"
-  },
-  "hub_upgrade_plan_free": {
-    "message": "Bezpłatne"
-  },
-  "hub_upgrade_protection_plan": {
-    "message": " plan ochrony"
-  },
-  "hub_upgrade_scroll_down": {
-    "message": "Zobacz pełną listę funkcji"
-  },
-  "hub_upgrade_to": {
-    "message": "Zaktualizuj do"
-  },
-  "hub_upgrade_yearly": {
-    "message": "Rocznie"
-  },
-  "hub_upgrade_your": {
-    "message": "Uaktualnij swój"
-  },
   "invalid_email_forgot": {
     "message": "Przykro nam, musisz podać prawdziwy adres e-mail."
   },
@@ -1230,7 +771,7 @@
     "message": "E-mail"
   },
   "license_footer": {
-    "message": "Ghostery$COPY$; to firma należąca do Cliqz. Dowiedz się więcej o $LINK_START$Cliqz$LINK_END$. $COPY$Cliqz International GmbH, filia będąca w pełni własnością Cliqz GmbH. Wszelkie prawa zastrzeżone."
+    "message": "Ghostery GmbH. Wszelkie prawa zastrzeżone."
   },
   "license_generic": {
     "message": "Standardowy tekst licencji"
