--- a/_locales/pt_BR/messages.json
+++ b/_locales/pt_BR/messages.json
@@ -755,465 +755,6 @@
     "message": "Hospedando",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "hub_create_account_already_have_account": {
-    "message": "Você já tem uma conta Ghostery?"
-  },
-  "hub_create_account_confirm_password_do_not_match": {
-    "message": "Suas senhas não correspondem."
-  },
-  "hub_create_account_header_title": {
-    "message": "Gostaria de criar uma conta do Ghostery para sincronizar as configurações em todos os navegadores e dispositivos?"
-  },
-  "hub_create_account_label_email_last_name": {
-    "message": "Sobrenome (opcional):"
-  },
-  "hub_create_account_label_first_name": {
-    "message": "Primeiro nome (opcional):"
-  },
-  "hub_create_account_label_password_invalid": {
-    "message": "Apenas esses caracteres especiais são permitidos: !@#$%^&*=+()<>{}[];:,./?"
-  },
-  "hub_create_account_label_password_invalid_length": {
-    "message": "Use entre 8 e 50 caracteres."
-  },
-  "hub_create_account_link_login": {
-    "message": "Entre aqui."
-  },
-  "hub_create_account_toast_error": {
-    "message": "Este email já está sendo usado.  Por favor, escolha outro. "
-  },
-  "hub_create_account_toast_success": {
-    "message": "Conta criada com sucesso"
-  },
-  "hub_home_feature_setup_button": {
-    "message": "Editar configuração"
-  },
-  "hub_home_feature_setup_button_alt": {
-    "message": "Configuração personalizada concluída"
-  },
-  "hub_home_feature_setup_text": {
-    "message": "Edite suas configurações e preferências de bloqueio."
-  },
-  "hub_home_feature_tutorial_button_alt": {
-    "message": "Tutorial Concluído"
-  },
-  "hub_home_feature_tutorial_text": {
-    "message": "Conheça as principais características do Ghostery."
-  },
-  "hub_home_feature_tutorial_title": {
-    "message": "Ver um tutorial"
-  },
-  "hub_home_header_checkbox_label": {
-    "message": "Compartilhe dados de análise anônimos adicionais para melhorar o desempenho do Ghostery."
-  },
-  "hub_home_header_info": {
-    "message": "Os novos usuários já optam por participar da Human Web. Você pode alterar essas configurações nas configurações personalizadas ou na extensão."
-  },
-  "hub_home_header_info_link": {
-    "message": "Saiba mais."
-  },
-  "hub_home_header_info_opted_out": {
-    "message": "Os novos usuários, por padrão, não participam das da Human Web. Você pode optar pela inclusão nesses recursos recomendados em configurações personalizadas ou na extensão."
-  },
-  "hub_home_header_tagline": {
-    "message": "Agora você está protegido com nossas configurações padrão."
-  },
-  "hub_home_header_tagline_2": {
-    "message": "Comece a navegar!"
-  },
-  "hub_home_header_text": {
-    "message": "Ghostery está pronto!"
-  },
-  "hub_home_page_title": {
-    "message": "Ghostery Hub - Início"
-  },
-  "hub_home_plus_full_protection": {
-    "message": "Você está totalmente protegido!"
-  },
-  "hub_home_plus_upgrade_button_text": {
-    "message": "Atualize agora"
-  },
-  "hub_home_plus_upgrade_text": {
-    "message": "Vá além da privacidade básica. Atualize o seu plano Ghostery Plus para acessar recursos poderosos como navegador e busca privados, além de análise de rastreadores avançada!"
-  },
-  "hub_home_subheader_optimize": {
-    "message": "Otimize sua experiência no Ghostery"
-  },
-  "hub_login_header_title": {
-    "message": "Faça login em sua conta."
-  },
-  "hub_login_label_password_invalid": {
-    "message": "Use entre 8 e 50 caracteres."
-  },
-  "hub_login_link_create_account": {
-    "message": "Inscrever-se."
-  },
-  "hub_login_link_dont_have_account": {
-    "message": "Não tem uma conta?"
-  },
-  "hub_login_toast_success": {
-    "message": "Sucesso ao entrar! As configurações da sua conta foram importadas."
-  },
-  "hub_products_header_description": {
-    "message": "Mantenha-se protegido e melhore sua experiência on-line com a nossa suíte de privacidade total."
-  },
-  "hub_products_header_title": {
-    "message": "Navegue com mais inteligência com os produtos Ghostery!"
-  },
-  "hub_products_main_promo_description": {
-    "message": "Navegue entre anúncios e sem rastreador em qualquer lugar com nosso navegador móvel atualizado e aprimorado. Agora equipado com um sistema de busca privado!"
-  },
-  "hub_products_main_promo_title": {
-    "message": "Navegador privado para celular"
-  },
-  "hub_products_page_title": {
-    "message": "Ghostery Hub - Experimente Outros Produtos Ghostery"
-  },
-  "hub_products_second_promo_description": {
-    "message": "Pesquise com privacidade e visualize estatísticas do rastreador com nosso novo recurso de aba. Em breve!"
-  },
-  "hub_products_second_promo_title": {
-    "message": "Ghostery Start Tab"
-  },
-  "hub_products_third_promo_description": {
-    "message": "Proteja sua privacidade on-line e se livre de anúncios com nosso mais leve produto, exclusivo para o Safari."
-  },
-  "hub_products_third_promo_title": {
-    "message": "Ghostery Lite"
-  },
-  "hub_setup_antisuite_description_antitracking": {
-    "message": "Anonimizar rastreadores desbloqueados e não identificados para uma maior proteção na navegação."
-  },
-  "hub_setup_antisuite_feature_enabled": {
-    "message": "Ativado"
-  },
-  "hub_setup_blocking_description_custom": {
-    "message": "Escolha quais rastreadores bloquear"
-  },
-  "hub_setup_blocking_description_everything": {
-    "message": "Todos os rastreadores estão bloqueados"
-  },
-  "hub_setup_blocking_description_nothing": {
-    "message": "Nenhum rastreador bloqueado"
-  },
-  "hub_setup_blocking_description_recommended": {
-    "message": "Anunciantes, análise do site e publicidade adulta bloqueados"
-  },
-  "hub_setup_blocking_text_custom": {
-    "message": "Escolha da lista"
-  },
-  "hub_setup_blocking_text_everything": {
-    "message": "Bloquear tudo"
-  },
-  "hub_setup_blocking_text_nothing": {
-    "message": "Não bloquear nada"
-  },
-  "hub_setup_blocking_text_recommended": {
-    "message": "Padrão de bloqueio"
-  },
-  "hub_setup_enter_modal_text": {
-    "message": "Entrar na configuração personalizada substituirá as configurações anteriores do Ghostery. Deseja continuar?"
-  },
-  "hub_setup_exit_flow": {
-    "message": "Sair da instalação personalizada"
-  },
-  "hub_setup_feature_products_button": {
-    "message": "Sim, por favor!"
-  },
-  "hub_setup_feature_products_description": {
-    "message": "Proteja-se totalmente com a nossa suite completa de privacidade!"
-  },
-  "hub_setup_feature_products_title": {
-    "message": "Veja mais Produtos Ghostery "
-  },
-  "hub_setup_feature_supporter_description": {
-    "message": "Apoie Ghostery e desbloqueie regalias especiais."
-  },
-  "hub_setup_feature_tutorial_description": {
-    "message": "Conheça as principais características do Ghostery."
-  },
-  "hub_setup_feature_tutorial_title": {
-    "message": "Ver um tutorial"
-  },
-  "hub_setup_header_title_antisuite": {
-    "message": "Você gostaria de navegar com mais inteligência com nossos recursos recomendados?"
-  },
-  "hub_setup_header_title_blocking": {
-    "message": "O Ghostery pode bloquear os rastreadores para tornar sua navegação mais limpa, mais rápida e mais segura.$NEW_LINE$O que você gostaria de bloquear?",
-    "placeholders": {
-      "new_line": {
-        "content": "<br />"
-      }
-    }
-  },
-  "hub_setup_header_title_done": {
-    "message": "Configuração personalizada completa!"
-  },
-  "hub_setup_header_title_humanweb": {
-    "message": "Gostaria de ajudar a melhorar o Ghostery?"
-  },
-  "hub_setup_humanweb_header": {
-    "message": "Usamos dados anônimos da Human Web para melhorar o desempenho do Ghostery. $LINK_LM_START$Saiba mais$LINK_LM_END$",
-    "placeholders": {
-      "link_lm_start": {
-        "content": "<a href=\"https://www.ghostery.com/faqs/human-web-data-collected/\" target=\"_blank\" rel=\"noopener noreferrer\">"
-      },
-      "link_lm_end": {
-        "content": "</a>"
-      }
-    }
-  },
-  "hub_setup_humanweb_label": {
-    "message": "Suporte o Ghostery compartilhando esta informação"
-  },
-  "hub_setup_modal_button_ask_again": {
-    "message": "Não me pergunte de novo"
-  },
-  "hub_setup_modal_button_no": {
-    "message": "Não"
-  },
-  "hub_setup_modal_button_yes": {
-    "message": "Sim"
-  },
-  "hub_setup_page_title": {
-    "message": "Ghostery Hub - Configuração"
-  },
-  "hub_setup_page_title_antisuite": {
-    "message": "Ghostery Hub - Configuração Anti-Suite"
-  },
-  "hub_setup_page_title_blocking": {
-    "message": "Ghostery Hub - Configurar Bloqueio"
-  },
-  "hub_setup_page_title_done": {
-    "message": "Ghostery Hub - Configuração concluída"
-  },
-  "hub_setup_page_title_humanweb": {
-    "message": "Ghostery Hub - Configuração da Human Web"
-  },
-  "hub_setup_ready_heading": {
-    "message": "Otimize sua experiência no Ghostery"
-  },
-  "hub_side_navigation_home": {
-    "message": "Início"
-  },
-  "hub_side_navigation_products": {
-    "message": "Veja mais produtos Ghostery"
-  },
-  "hub_side_navigation_tutorial": {
-    "message": "Ver um tutorial"
-  },
-  "hub_side_navigation_upgrade_plan": {
-    "message": "Plano de atualização"
-  },
-  "hub_signedin_as_email": {
-    "message": "Entrou como"
-  },
-  "hub_signedin_exit": {
-    "message": "Voltar para o início"
-  },
-  "hub_signedin_header_title": {
-    "message": "Você já está inscrito"
-  },
-  "hub_supporter_feature_more_description": {
-    "message": "Fique atento a outros recursos e insights interessantes à medida em que continuamos a deixar sua experiência com o Ghostery agradável."
-  },
-  "hub_supporter_feature_more_title": {
-    "message": "..e mais por vir!"
-  },
-  "hub_supporter_feature_stats_description": {
-    "message": "Veja os resultados históricos de bloqueio com gráficos e estatísticas para revelar tendências e saiba como o Ghostery afetou sua navegação."
-  },
-  "hub_supporter_feature_support_description": {
-    "message": "Precisa de assistência? Encontrou uma página quebrada? Tenha suas perguntas respondidas e resolva os problemas rapidamente com o nosso serviço de help desk prioritário, acessível somente quando conectado com uma conta Plus."
-  },
-  "hub_supporter_feature_theme_description": {
-    "message": "Personalize as cores do Ghostery para uma nova experiência visual! Introduzido a pedido popular. Confira nosso tema especial Dark Blue e muito mais por vir."
-  },
-  "hub_supporter_header_description": {
-    "message": "Vá além da privacidade avançada e desbloqueie nosso pacote de produtos completo!"
-  },
-  "hub_supporter_header_title": {
-    "message": "Atualizar para o Ghostery Plus"
-  },
-  "hub_supporter_manifesto": {
-    "message": "Atualize para o Ghostery Plus para desbloquear nosso pacote de produtos completo! Por apenas &#36;4.99 por mês, tenha acesso a nosso poderoso navegador privado com ferramenta de buscas integrada, análise de rastreadores avançada e outras vantagens especiais. "
-  },
-  "hub_supporter_page_title": {
-    "message": "Ghostery Hub - Ghostery Plus"
-  },
-  "hub_supporter_perk_analytics_description": {
-    "message": "Acesse o Ghostery Insights, nosso painel de rastreamento de inteligência em tempo real"
-  },
-  "hub_supporter_perk_analytics_title": {
-    "message": "Análise de rastreadores avançada"
-  },
-  "hub_supporter_perk_dawn_and_glow_description": {
-    "message": "Baixe o Ghostery Dawn e o Glow, nosso poderoso navegador privado com ferramenta de busca integrada"
-  },
-  "hub_supporter_perk_dawn_and_glow_title": {
-    "message": "Navegador e busca privados"
-  },
-  "hub_supporter_perk_themes_and_more_description": {
-    "message": "Personalize as cores do Ghostery - experimente nosso temas de folha, palmeira e azul escuro!"
-  },
-  "hub_supporter_perk_themes_and_more_title": {
-    "message": "Temas personalizados e muito mais"
-  },
-  "hub_supporter_perk_themes_description": {
-    "message": "Personalize as cores do Ghostery - experimente o nosso tema Dark Blue!"
-  },
-  "hub_supporter_price": {
-    "message": "$SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$ por mês",
-    "placeholders": {
-      "sup_start": {
-        "content": "<sup>"
-      },
-      "sup_end": {
-        "content": "</sup>"
-      },
-      "span_start": {
-        "content": "<span>"
-      },
-      "span_end": {
-        "content": "</span>"
-      }
-    }
-  },
-  "hub_tutorial_antisuite_antitracking_description": {
-    "message": "Remova os pontos de dados que os sites podem usar para identificar você."
-  },
-  "hub_tutorial_antisuite_title": {
-    "message": "Obtenha proteção extra e controle automatizado com nossos recursos de privacidade aprimorados:"
-  },
-  "hub_tutorial_blocking_allow": {
-    "message": "Sempre permitir rastreadores no site atual."
-  },
-  "hub_tutorial_blocking_block": {
-    "message": "Sempre bloquear rastreadores no site atual."
-  },
-  "hub_tutorial_blocking_block_always": {
-    "message": "Bloquear sempre o rastreador em todos os sites."
-  },
-  "hub_tutorial_blocking_tagline": {
-    "message": "Assuma o controle de sua privacidade e experiência de navegação, bloqueando ou desbloqueando rastreadores na lista."
-  },
-  "hub_tutorial_blocking_title": {
-    "message": "Escolha o que e como você deseja bloquear"
-  },
-  "hub_tutorial_detailed_expanded_view": {
-    "message": "Vista expandida detalhada"
-  },
-  "hub_tutorial_exit_flow": {
-    "message": "Sair do tutorial"
-  },
-  "hub_tutorial_layout_tagline": {
-    "message": "Alterne entre uma visão simplificada ou detalhada, dependendo do que você gostaria que o Ghostery exibisse."
-  },
-  "hub_tutorial_layout_title": {
-    "message": "Visualizações Simples e Detalhadas"
-  },
-  "hub_tutorial_page_title": {
-    "message": "Ghostery Hub - Tutorial"
-  },
-  "hub_tutorial_page_title_anti_suite": {
-    "message": "Ghostery Hub - Recursos Adicionais do Tutorial"
-  },
-  "hub_tutorial_page_title_blocking": {
-    "message": "Ghostery Hub - Tutorial Bloqueio"
-  },
-  "hub_tutorial_page_title_layout": {
-    "message": "Ghostery Hub - Leiaute do Tutorial"
-  },
-  "hub_tutorial_page_title_trackerlist": {
-    "message": "Ghostery Hub - Tutorial Rastreadores"
-  },
-  "hub_tutorial_page_title_trust": {
-    "message": "Ghostery Hub - Tutorial Confiar e Restringir"
-  },
-  "hub_tutorial_page_title_video": {
-    "message": "Ghostery Hub - Visão Geral do Tutorial"
-  },
-  "hub_tutorial_trackerlist_tagline": {
-    "message": "O Ghostery ajuda você a se manter informado sobre o que as empresas estão rastreando, listando os rastreadores em cada site que você visita."
-  },
-  "hub_tutorial_trackerlist_title": {
-    "message": "Lista de Rastreadores"
-  },
-  "hub_tutorial_trust_restrict_site": {
-    "message": "Sempre bloquear rastreadores no site."
-  },
-  "hub_tutorial_trust_tagline": {
-    "message": "Torne sites confiáveis ou restritos com um clique."
-  },
-  "hub_tutorial_trust_title": {
-    "message": "Confiar e restringir sites"
-  },
-  "hub_tutorial_trust_trust_site": {
-    "message": "Sempre permitir rastreadores no site."
-  },
-  "hub_tutorial_video_tagline": {
-    "message": "Bloqueie rastreadores e anúncios, proteja sua privacidade e acelere o carregamento das páginas."
-  },
-  "hub_tutorial_video_title": {
-    "message": "O que Ghostery pode fazer por você"
-  },
-  "hub_upgrade_additional_protection": {
-    "message": "Proteção adicional"
-  },
-  "hub_upgrade_advanced_device_protection": {
-    "message": "Proteção avançada de dispositivo"
-  },
-  "hub_upgrade_already_protected": {
-    "message": "Já protegido"
-  },
-  "hub_upgrade_basic_browser_protection": {
-    "message": "Proteção básica de navegador"
-  },
-  "hub_upgrade_basic_protection": {
-    "message": "Proteção básica"
-  },
-  "hub_upgrade_browser_ad_blocking": {
-    "message": "Bloqueio de anúncios do navegador"
-  },
-  "hub_upgrade_browser_tracker_blocking": {
-    "message": "Bloqueio de rastreadores do navegador"
-  },
-  "hub_upgrade_custom_blocking_preferences": {
-    "message": "Preferências de bloqueio personalizadas"
-  },
-  "hub_upgrade_extension_themes": {
-    "message": "Temas de extensão"
-  },
-  "hub_upgrade_historical_extension_stats": {
-    "message": "Estatísticas históricas de extensão"
-  },
-  "hub_upgrade_maximum_protection": {
-    "message": "Proteção máxima"
-  },
-  "hub_upgrade_monthly": {
-    "message": "Mensal"
-  },
-  "hub_upgrade_page_title": {
-    "message": "Ghostery Hub - Plano de atualização"
-  },
-  "hub_upgrade_plan_free": {
-    "message": "Gratuito"
-  },
-  "hub_upgrade_protection_plan": {
-    "message": "plano de proteção"
-  },
-  "hub_upgrade_scroll_down": {
-    "message": "Ver a lista completa de recursos"
-  },
-  "hub_upgrade_to": {
-    "message": "Atualizar para"
-  },
-  "hub_upgrade_yearly": {
-    "message": "Anualmente"
-  },
-  "hub_upgrade_your": {
-    "message": "Atualize o seu"
-  },
   "invalid_email_forgot": {
     "message": "Desculpe, você precisa informar um endereço de email válido."
   },
@@ -1230,7 +771,7 @@
     "message": "Email"
   },
   "license_footer": {
-    "message": "Ghostery$COPY$; é uma empresa Cliqz. Saiba mais sobre $LINK_START$Cliqz$LINK_END$. $COPY$Cliqz International GmbH, uma subsidiária totalmente controlada pela Cliqz GmbH. Todos os direitos reservados."
+    "message": "Ghostery GmbH. Todos os direitos reservados."
   },
   "license_generic": {
     "message": "Texto padrão da licença"
