--- a/_locales/ru/messages.json
+++ b/_locales/ru/messages.json
@@ -755,465 +755,6 @@
     "message": "Хостинг",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "hub_create_account_already_have_account": {
-    "message": "Уже есть учетная запись Ghostery?"
-  },
-  "hub_create_account_confirm_password_do_not_match": {
-    "message": "Ваши пароли не совпадают."
-  },
-  "hub_create_account_header_title": {
-    "message": "Хотите создать учетную запись Ghostery для синхронизации настроек во всех браузерах и устройствах?"
-  },
-  "hub_create_account_label_email_last_name": {
-    "message": "Фамилия (необязательно):"
-  },
-  "hub_create_account_label_first_name": {
-    "message": "Имя (необязательно):"
-  },
-  "hub_create_account_label_password_invalid": {
-    "message": "Разрешены только эти специальные символы: !@#$%^&*=+()<>{}[];:,./?"
-  },
-  "hub_create_account_label_password_invalid_length": {
-    "message": "Используйте от 8 до 50 символов."
-  },
-  "hub_create_account_link_login": {
-    "message": "Войти."
-  },
-  "hub_create_account_toast_error": {
-    "message": "Этот адрес электронной почты уже используется. Выберите другой адрес электронной почты."
-  },
-  "hub_create_account_toast_success": {
-    "message": "Учетная запись успешно создана"
-  },
-  "hub_home_feature_setup_button": {
-    "message": "Изменить настройки"
-  },
-  "hub_home_feature_setup_button_alt": {
-    "message": "Пользовательская настройка завершена"
-  },
-  "hub_home_feature_setup_text": {
-    "message": "Редактируйте настройки и параметры блокировки."
-  },
-  "hub_home_feature_tutorial_button_alt": {
-    "message": "Обучение завершено"
-  },
-  "hub_home_feature_tutorial_text": {
-    "message": "Знакомство с основными функциями Ghostery."
-  },
-  "hub_home_feature_tutorial_title": {
-    "message": "Пройти обучение"
-  },
-  "hub_home_header_checkbox_label": {
-    "message": "Делитесь дополнительными анонимными аналитическими данными, чтобы улучшить производительность Ghostery."
-  },
-  "hub_home_header_info": {
-    "message": "Новые пользователи принимают участие в Human Web. Вы можете изменить эти параметры в пользовательских настройках или в расширении."
-  },
-  "hub_home_header_info_link": {
-    "message": "Подробнее."
-  },
-  "hub_home_header_info_opted_out": {
-    "message": "По умолчанию новые пользователи отказываются от участия в Human Web. Вы можете выбрать эти рекомендуемые функции в настройках пользователя или в расширении."
-  },
-  "hub_home_header_tagline": {
-    "message": "Теперь вы защищены с помощью наших настроек по умолчанию."
-  },
-  "hub_home_header_tagline_2": {
-    "message": "Войти в Интернет!"
-  },
-  "hub_home_header_text": {
-    "message": "Ghostery готов к работе!"
-  },
-  "hub_home_page_title": {
-    "message": "Ghostery Hub - Домашний экран"
-  },
-  "hub_home_plus_full_protection": {
-    "message": "Вы полностью защищены!"
-  },
-  "hub_home_plus_upgrade_button_text": {
-    "message": "Обновить сейчас"
-  },
-  "hub_home_plus_upgrade_text": {
-    "message": "Расширьте рамки защиты конфиденциальности. Обновите свой план до Ghostery Plus, чтобы получить доступ к мощному приватному браузеру, приватному поиску и расширенной аналитике трекеров!"
-  },
-  "hub_home_subheader_optimize": {
-    "message": "Оптимизируйте работу Ghostery"
-  },
-  "hub_login_header_title": {
-    "message": "Войти в учетную запись."
-  },
-  "hub_login_label_password_invalid": {
-    "message": "Используйте от 8 до 50 символов."
-  },
-  "hub_login_link_create_account": {
-    "message": "Зарегистрироваться."
-  },
-  "hub_login_link_dont_have_account": {
-    "message": "Нет учетной записи?"
-  },
-  "hub_login_toast_success": {
-    "message": "Выход выполнен успешно! Настройки вашей учетной записи успешно импортированы."
-  },
-  "hub_products_header_description": {
-    "message": "Находитесь под защитой и улучшайте свой опыт работы в Интернете с помощью нашего комплекса программ, обеспечивающего полную конфиденциальность."
-  },
-  "hub_products_header_title": {
-    "message": "Пользуйтесь Интернетом с умом с помощью продуктов Ghostery!"
-  },
-  "hub_products_main_promo_description": {
-    "message": "Работайте в Интернете без рекламы и трекеров на ходу с помощью нашего обновленного и улучшенного браузера для мобильных устройств. Теперь в комплект входит конфиденциальная поисковая система!"
-  },
-  "hub_products_main_promo_title": {
-    "message": "Конфиденциальный браузер для мобильных устройств"
-  },
-  "hub_products_page_title": {
-    "message": "Ghostery Hub - Попробуйте другие продукты Ghostery"
-  },
-  "hub_products_second_promo_description": {
-    "message": "Поиск в конфиденциальном режиме и просмотр статистики трекера  с помощью нашей новой функции вкладки. Будет доступно скоро!"
-  },
-  "hub_products_second_promo_title": {
-    "message": "Ghostery Start Tab"
-  },
-  "hub_products_third_promo_description": {
-    "message": "Обеспечивает конфиденциальность в Интернете и избавляет от рекламы с помощью самого простого нашего продукта, разработанного специально для Safari."
-  },
-  "hub_products_third_promo_title": {
-    "message": "Ghostery Lite"
-  },
-  "hub_setup_antisuite_description_antitracking": {
-    "message": "Анонимизировать разблокированные и неизвестные трекеры для обеспечения большей защиты браузера."
-  },
-  "hub_setup_antisuite_feature_enabled": {
-    "message": "Включено"
-  },
-  "hub_setup_blocking_description_custom": {
-    "message": "Выберите трекеры для блокировки"
-  },
-  "hub_setup_blocking_description_everything": {
-    "message": "Все трекеры заблокированы"
-  },
-  "hub_setup_blocking_description_nothing": {
-    "message": "Никакие трекеры не заблокированы"
-  },
-  "hub_setup_blocking_description_recommended": {
-    "message": "Рекламные, аналитические трекеры и трекеры взрослой рекламы заблокированы"
-  },
-  "hub_setup_blocking_text_custom": {
-    "message": "Выбрать из списка"
-  },
-  "hub_setup_blocking_text_everything": {
-    "message": "Блокировать все"
-  },
-  "hub_setup_blocking_text_nothing": {
-    "message": "Ничего не блокировать"
-  },
-  "hub_setup_blocking_text_recommended": {
-    "message": "Блокировка по умолчанию"
-  },
-  "hub_setup_enter_modal_text": {
-    "message": "Введение пользовательских настроек перезапишет предыдущие настройки Ghostery. Желаете продолжить?"
-  },
-  "hub_setup_exit_flow": {
-    "message": "Выйти из пользовательской настройки"
-  },
-  "hub_setup_feature_products_button": {
-    "message": "Да, пожалуйста!"
-  },
-  "hub_setup_feature_products_description": {
-    "message": "Обеспечьте свою полную защиту с помощью нашего пакета программ, обеспечивающего полную конфиденциальность!"
-  },
-  "hub_setup_feature_products_title": {
-    "message": "Посмотреть другие продукты Ghostery"
-  },
-  "hub_setup_feature_supporter_description": {
-    "message": "Поддержите нас и разблокируйте специальные функции."
-  },
-  "hub_setup_feature_tutorial_description": {
-    "message": "Знакомство с основными функциями Ghostery."
-  },
-  "hub_setup_feature_tutorial_title": {
-    "message": "Пройти обучение"
-  },
-  "hub_setup_header_title_antisuite": {
-    "message": "Хотели бы вы работать в Интернете с умом, используя наши рекомендуемые функции?"
-  },
-  "hub_setup_header_title_blocking": {
-    "message": "Ghostery может блокировать трекеры, чтобы сделать вашу работу в Интернете более простой, быстрой и безопасной.$NEW_LINE$Что вы хотите заблокировать?",
-    "placeholders": {
-      "new_line": {
-        "content": "<br />"
-      }
-    }
-  },
-  "hub_setup_header_title_done": {
-    "message": "Пользовательская настройка завершена!"
-  },
-  "hub_setup_header_title_humanweb": {
-    "message": "Желаете помочь улучшить Ghostery?"
-  },
-  "hub_setup_humanweb_header": {
-    "message": "Мы используем обезличенные данные Human Web для улучшения производительности Ghostery. Никогда не осуществляется сбор личных данных. $LINK_LM_START$Подробнее$LINK_LM_END$",
-    "placeholders": {
-      "link_lm_start": {
-        "content": "<a href=\"https://www.ghostery.com/faqs/human-web-data-collected/\" target=\"_blank\" rel=\"noopener noreferrer\">"
-      },
-      "link_lm_end": {
-        "content": "</a>"
-      }
-    }
-  },
-  "hub_setup_humanweb_label": {
-    "message": "Поддержать Ghostery, поделившись этой информацией."
-  },
-  "hub_setup_modal_button_ask_again": {
-    "message": "Не спрашивайте меня снова"
-  },
-  "hub_setup_modal_button_no": {
-    "message": "Нет"
-  },
-  "hub_setup_modal_button_yes": {
-    "message": "Да"
-  },
-  "hub_setup_page_title": {
-    "message": "Ghostery Hub - Настройка"
-  },
-  "hub_setup_page_title_antisuite": {
-    "message": "Ghostery Hub - Настройка анти-приложений"
-  },
-  "hub_setup_page_title_blocking": {
-    "message": "Ghostery Hub - Настройка блокировки"
-  },
-  "hub_setup_page_title_done": {
-    "message": "Ghostery Hub - Завершение настройки"
-  },
-  "hub_setup_page_title_humanweb": {
-    "message": "Ghostery Hub - Настройка Human Web"
-  },
-  "hub_setup_ready_heading": {
-    "message": "Оптимизируйте работу Ghostery"
-  },
-  "hub_side_navigation_home": {
-    "message": "Домашняя страница"
-  },
-  "hub_side_navigation_products": {
-    "message": "Посмотреть другие продукты Ghostery"
-  },
-  "hub_side_navigation_tutorial": {
-    "message": "Пройти обучение"
-  },
-  "hub_side_navigation_upgrade_plan": {
-    "message": "Обновить план"
-  },
-  "hub_signedin_as_email": {
-    "message": "Выполнен вход в качестве"
-  },
-  "hub_signedin_exit": {
-    "message": "Назад домой"
-  },
-  "hub_signedin_header_title": {
-    "message": "Вы уже вошли"
-  },
-  "hub_supporter_feature_more_description": {
-    "message": "Будьте в курсе новых эксклюзивных функций, поскольку мы продолжаем улучшать опыт работы с Ghostery."
-  },
-  "hub_supporter_feature_more_title": {
-    "message": "...и скоро больше!"
-  },
-  "hub_supporter_feature_stats_description": {
-    "message": "Просматривайте исторические результаты блокировок с помощью графиков и статистики, чтобы выявить тенденции и узнать, как Ghostery повлиял на вашу работу в Интернете."
-  },
-  "hub_supporter_feature_support_description": {
-    "message": "Нужна помощь? Нашли нерабочую страницу? Быстрее получайте ответы на вопросы и разрешайте проблемы с помощью нашей приоритетной службы поддержки, доступной при входе через учетную запись Plus."
-  },
-  "hub_supporter_feature_theme_description": {
-    "message": "Настройте цвета Ghostery и получите новые впечатления! Добавлено в связи с популярным запросом. Попробуйте нашу специальную тему \"Dark Blue\" и многое другое."
-  },
-  "hub_supporter_header_description": {
-    "message": "Расширьте рамки защиты конфиденциальности и воспользуйтесь полным комплексом продуктов!"
-  },
-  "hub_supporter_header_title": {
-    "message": "Обновление до Ghostery Plus"
-  },
-  "hub_supporter_manifesto": {
-    "message": "Обновите свой план до Ghostery Plus, чтобы воспользоваться полным комплектом продуктов! Всего за &#36;4.99 в месяц вы получите доступ к мощному приватному браузеру со встроенным приватным поиском, расширенной аналитике трекеров и другим специальным привилегиям. "
-  },
-  "hub_supporter_page_title": {
-    "message": "Ghostery Hub - Ghostery Plus"
-  },
-  "hub_supporter_perk_analytics_description": {
-    "message": "Получите доступ к Ghostery Insights, нашей панели отслеживания трекеров в реальном времени"
-  },
-  "hub_supporter_perk_analytics_title": {
-    "message": "Расширенная аналитика трекеров"
-  },
-  "hub_supporter_perk_dawn_and_glow_description": {
-    "message": "Загрузите Ghostery Dawn и Ghostery Glow, наш мощный приватный браузер со встроенной приватной поисковой системой"
-  },
-  "hub_supporter_perk_dawn_and_glow_title": {
-    "message": "Приватный браузер с поисковой системой"
-  },
-  "hub_supporter_perk_themes_and_more_description": {
-    "message": "Настройте цвета Ghostery - попробуйте темы Leaf, Palm и Dark Blue!"
-  },
-  "hub_supporter_perk_themes_and_more_title": {
-    "message": "Пользовательские темы и другое"
-  },
-  "hub_supporter_perk_themes_description": {
-    "message": "Настройте цвета Ghostery - попобуйте нашу тему \"Dark Blue\"."
-  },
-  "hub_supporter_price": {
-    "message": "$SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$ в месяц",
-    "placeholders": {
-      "sup_start": {
-        "content": "<sup>"
-      },
-      "sup_end": {
-        "content": "</sup>"
-      },
-      "span_start": {
-        "content": "<span>"
-      },
-      "span_end": {
-        "content": "</span>"
-      }
-    }
-  },
-  "hub_tutorial_antisuite_antitracking_description": {
-    "message": "Удалите точки данных, которые веб-сайты могут использовать для вашей идентификации."
-  },
-  "hub_tutorial_antisuite_title": {
-    "message": "Получите дополнительную защиту и автоматизированное управление с помощью наших расширенных функций безопасности:"
-  },
-  "hub_tutorial_blocking_allow": {
-    "message": "Всегда разрешать трекеры на текущем сайте."
-  },
-  "hub_tutorial_blocking_block": {
-    "message": "Всегда блокировать трекеры на текущем сайте."
-  },
-  "hub_tutorial_blocking_block_always": {
-    "message": "Всегда блокировать трекеры на всех сайтах."
-  },
-  "hub_tutorial_blocking_tagline": {
-    "message": "Контролируйте свою конфиденциальность и работу в Интернете путем блокировки и разблокировки трекеров в списке."
-  },
-  "hub_tutorial_blocking_title": {
-    "message": "Выбирайте что и как блокировать"
-  },
-  "hub_tutorial_detailed_expanded_view": {
-    "message": "Детальный расширенный просмотр"
-  },
-  "hub_tutorial_exit_flow": {
-    "message": "Выйти из руководства"
-  },
-  "hub_tutorial_layout_tagline": {
-    "message": "Переключайтесь между упрощенным и детальным видом в зависимости от того, что вы хотите видеть в Ghostery."
-  },
-  "hub_tutorial_layout_title": {
-    "message": "Упрощенный и подробный режим отображения"
-  },
-  "hub_tutorial_page_title": {
-    "message": "Ghostery Hub - Руководство"
-  },
-  "hub_tutorial_page_title_anti_suite": {
-    "message": "Ghostery Hub - Руководство. Дополнительные функции"
-  },
-  "hub_tutorial_page_title_blocking": {
-    "message": "Ghostery Hub - Руководство. Блокировка"
-  },
-  "hub_tutorial_page_title_layout": {
-    "message": "Ghostery Hub - Руководство. Схема"
-  },
-  "hub_tutorial_page_title_trackerlist": {
-    "message": "Ghostery Hub - Руководство. Трекеры"
-  },
-  "hub_tutorial_page_title_trust": {
-    "message": "Ghostery Hub - Руководство. Добавление в список доверенных сайтов и их ограничение"
-  },
-  "hub_tutorial_page_title_video": {
-    "message": "Ghostery Hub - Руководство. Обзор"
-  },
-  "hub_tutorial_trackerlist_tagline": {
-    "message": "Ghostery помогает вам оставаться в курсе того, какие компании отслеживают ваши действия, с помощью списка трекеров на каждом посещаемом вами сайте. "
-  },
-  "hub_tutorial_trackerlist_title": {
-    "message": "Список трекеров"
-  },
-  "hub_tutorial_trust_restrict_site": {
-    "message": "Всегда блокировать трекеры на сайте."
-  },
-  "hub_tutorial_trust_tagline": {
-    "message": "Добавляйте веб-сайты в список доверенных или запрещённых одним нажатием."
-  },
-  "hub_tutorial_trust_title": {
-    "message": "Разрешить и ограничить сайты"
-  },
-  "hub_tutorial_trust_trust_site": {
-    "message": "Всегда разрешать трекеры на сайте."
-  },
-  "hub_tutorial_video_tagline": {
-    "message": "Блокирует трекеры и рекламу, обеспечивает конфиденциальность и ускоряет загрузку страниц."
-  },
-  "hub_tutorial_video_title": {
-    "message": "Что Ghostery может сделать для вас"
-  },
-  "hub_upgrade_additional_protection": {
-    "message": "Дополнительная защита"
-  },
-  "hub_upgrade_advanced_device_protection": {
-    "message": "Расширенная защита устройства"
-  },
-  "hub_upgrade_already_protected": {
-    "message": "Уже защищен"
-  },
-  "hub_upgrade_basic_browser_protection": {
-    "message": "Базовая защита браузера"
-  },
-  "hub_upgrade_basic_protection": {
-    "message": "Базовая защита"
-  },
-  "hub_upgrade_browser_ad_blocking": {
-    "message": "Блокировка рекламы в браузере"
-  },
-  "hub_upgrade_browser_tracker_blocking": {
-    "message": "Блокировка трекера браузера"
-  },
-  "hub_upgrade_custom_blocking_preferences": {
-    "message": "Пользовательские настройки блокировки"
-  },
-  "hub_upgrade_extension_themes": {
-    "message": "Темы расширения"
-  },
-  "hub_upgrade_historical_extension_stats": {
-    "message": "Историческая статистика расширений"
-  },
-  "hub_upgrade_maximum_protection": {
-    "message": "Максимальная защита"
-  },
-  "hub_upgrade_monthly": {
-    "message": "Месячный"
-  },
-  "hub_upgrade_page_title": {
-    "message": "Ghostery Hub - План обновления"
-  },
-  "hub_upgrade_plan_free": {
-    "message": "Бесплатно"
-  },
-  "hub_upgrade_protection_plan": {
-    "message": "план защиты"
-  },
-  "hub_upgrade_scroll_down": {
-    "message": "Просмотреть весь список функций"
-  },
-  "hub_upgrade_to": {
-    "message": "Обновить до"
-  },
-  "hub_upgrade_yearly": {
-    "message": "Годовой"
-  },
-  "hub_upgrade_your": {
-    "message": "Обновите ваш"
-  },
   "invalid_email_forgot": {
     "message": "Извините, вам необходимо ввести настоящий адрес электронной почты."
   },
@@ -1230,7 +771,7 @@
     "message": "Email"
   },
   "license_footer": {
-    "message": "Ghostery$COPY$; - это компания Cliqz. Подробнее о $LINK_START$Cliqz$LINK_END$. $COPY$Cliqz International GmbH, дочерняя компания, находящаяся в полной собственности материнской компании Cliqz GmbH. Все права защищены."
+    "message": "Ghostery GmbH. Все права защищены."
   },
   "license_generic": {
     "message": "Стандартный текст лицензии"
