--- a/_locales/zh_CN/messages.json
+++ b/_locales/zh_CN/messages.json
@@ -755,465 +755,6 @@
     "message": "托管",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "hub_create_account_already_have_account": {
-    "message": "已经有 Ghostery 帐户？"
-  },
-  "hub_create_account_confirm_password_do_not_match": {
-    "message": "密码不符。"
-  },
-  "hub_create_account_header_title": {
-    "message": "您想创建 Ghostery 帐户来跨浏览器和设备同步设置吗？"
-  },
-  "hub_create_account_label_email_last_name": {
-    "message": "姓氏（可选）："
-  },
-  "hub_create_account_label_first_name": {
-    "message": "名字（可选）："
-  },
-  "hub_create_account_label_password_invalid": {
-    "message": "只允许使用这些特殊字符：!@#$%^&amp;*=+()&lt;&gt;{}[];:,./?"
-  },
-  "hub_create_account_label_password_invalid_length": {
-    "message": "请使用 8 到 50 个字符。"
-  },
-  "hub_create_account_link_login": {
-    "message": "在此处登录。"
-  },
-  "hub_create_account_toast_error": {
-    "message": "该电子邮件地址已被使用。  请选择其他电子邮件地址。 "
-  },
-  "hub_create_account_toast_success": {
-    "message": "帐户创建成功"
-  },
-  "hub_home_feature_setup_button": {
-    "message": "编辑设置"
-  },
-  "hub_home_feature_setup_button_alt": {
-    "message": "自定义设置完毕"
-  },
-  "hub_home_feature_setup_text": {
-    "message": "编辑您的设置和拦截首选项。"
-  },
-  "hub_home_feature_tutorial_button_alt": {
-    "message": "教程结束"
-  },
-  "hub_home_feature_tutorial_text": {
-    "message": "了解Ghostery的主要功能。"
-  },
-  "hub_home_feature_tutorial_title": {
-    "message": "学习教程"
-  },
-  "hub_home_header_checkbox_label": {
-    "message": "分享额外的匿名分析数据来提高Ghostery的性能。"
-  },
-  "hub_home_header_info": {
-    "message": "新用户默认选择加入 Human Web。您可在自定义设置或扩展中更改相关设置。"
-  },
-  "hub_home_header_info_link": {
-    "message": "了解详情。"
-  },
-  "hub_home_header_info_opted_out": {
-    "message": "新用户默认选择退出 Human Web。您可以在自定义设置或扩展中选择使用这些推荐功能。"
-  },
-  "hub_home_header_tagline": {
-    "message": "现在您已经获得了默认设置的保护。"
-  },
-  "hub_home_header_tagline_2": {
-    "message": "开始浏览！"
-  },
-  "hub_home_header_text": {
-    "message": "Ghostery已就绪！"
-  },
-  "hub_home_page_title": {
-    "message": "Ghostery Hub - 主页"
-  },
-  "hub_home_plus_full_protection": {
-    "message": "您已获得全面保护！"
-  },
-  "hub_home_plus_upgrade_button_text": {
-    "message": "立即升级"
-  },
-  "hub_home_plus_upgrade_text": {
-    "message": "不仅仅提供基本隐私服务。升级为 Ghostery Plus 以访问我们强大的无痕浏览器、无痕搜索和高级跟踪器分析！"
-  },
-  "hub_home_subheader_optimize": {
-    "message": "优化您的Ghostery体验"
-  },
-  "hub_login_header_title": {
-    "message": "登录您的帐户。"
-  },
-  "hub_login_label_password_invalid": {
-    "message": "请使用 8 到 50 个字符。"
-  },
-  "hub_login_link_create_account": {
-    "message": "注册。"
-  },
-  "hub_login_link_dont_have_account": {
-    "message": "没有帐户？"
-  },
-  "hub_login_toast_success": {
-    "message": "登录成功！您的帐户设置已导入。"
-  },
-  "hub_products_header_description": {
-    "message": "利用我们的全套隐私套装保护隐私并增强上网体验。"
-  },
-  "hub_products_header_title": {
-    "message": "使用Ghostery产品，浏览更智能！"
-  },
-  "hub_products_main_promo_description": {
-    "message": "借助我们最新的增强型移动浏览器，随时随地享受无广告、无追踪器的上网浏览体验。现已配备私密搜索引擎！"
-  },
-  "hub_products_main_promo_title": {
-    "message": "移动端隐私浏览器"
-  },
-  "hub_products_page_title": {
-    "message": "Ghostery Hub - 使用其他Ghostery产品"
-  },
-  "hub_products_second_promo_description": {
-    "message": "借助我们全新的标签页功能以隐身模式搜索、查看追踪器统计数据。即将推出，敬请期待！"
-  },
-  "hub_products_second_promo_title": {
-    "message": "Ghostery Start Tab"
-  },
-  "hub_products_third_promo_description": {
-    "message": "利用我们有史以来最轻量的Safari专享产品，保护您的网络隐私并去除广告。"
-  },
-  "hub_products_third_promo_title": {
-    "message": "Ghostery Lite"
-  },
-  "hub_setup_antisuite_description_antitracking": {
-    "message": "对未拦截和未识别的跟踪器保持匿名，获得更好的浏览保护。"
-  },
-  "hub_setup_antisuite_feature_enabled": {
-    "message": "已启用"
-  },
-  "hub_setup_blocking_description_custom": {
-    "message": "选择要拦截的追踪器"
-  },
-  "hub_setup_blocking_description_everything": {
-    "message": "已拦截全部追踪器"
-  },
-  "hub_setup_blocking_description_nothing": {
-    "message": "未拦截追踪器"
-  },
-  "hub_setup_blocking_description_recommended": {
-    "message": "拦截的广告、站点分析和成人广告追踪器"
-  },
-  "hub_setup_blocking_text_custom": {
-    "message": "从列表中选择"
-  },
-  "hub_setup_blocking_text_everything": {
-    "message": "拦截全部"
-  },
-  "hub_setup_blocking_text_nothing": {
-    "message": "不拦截"
-  },
-  "hub_setup_blocking_text_recommended": {
-    "message": "拦截默认值"
-  },
-  "hub_setup_enter_modal_text": {
-    "message": "输入自定义设置会覆盖您之前的Ghostery设置。要继续吗？"
-  },
-  "hub_setup_exit_flow": {
-    "message": "退出自定义设置"
-  },
-  "hub_setup_feature_products_button": {
-    "message": "好的！"
-  },
-  "hub_setup_feature_products_description": {
-    "message": "借助我们的全套隐私套装全面保护您自己的隐私！"
-  },
-  "hub_setup_feature_products_title": {
-    "message": "查看更多Ghostery产品"
-  },
-  "hub_setup_feature_supporter_description": {
-    "message": "支持Ghostery并解锁特别福利。"
-  },
-  "hub_setup_feature_tutorial_description": {
-    "message": "了解Ghostery的主要功能。"
-  },
-  "hub_setup_feature_tutorial_title": {
-    "message": "学习教程"
-  },
-  "hub_setup_header_title_antisuite": {
-    "message": "您想使用我们的推荐功能，让浏览更智能吗？"
-  },
-  "hub_setup_header_title_blocking": {
-    "message": "Ghostery可以拦截追踪器，让您的浏览体验更清爽、快速和安全。$NEW_LINE$您想拦截什么？",
-    "placeholders": {
-      "new_line": {
-        "content": "<br />"
-      }
-    }
-  },
-  "hub_setup_header_title_done": {
-    "message": "自定义设置完毕！"
-  },
-  "hub_setup_header_title_humanweb": {
-    "message": "您愿意帮助改进Ghostery吗？"
-  },
-  "hub_setup_humanweb_header": {
-    "message": "我们使用匿名的Human Web数据来提高Ghostery的性能。绝不收集个人数据。$LINK_LM_START$了解详情$LINK_LM_END$",
-    "placeholders": {
-      "link_lm_start": {
-        "content": "<a href=\"https://www.ghostery.com/faqs/human-web-data-collected/\" target=\"_blank\" rel=\"noopener noreferrer\">"
-      },
-      "link_lm_end": {
-        "content": "</a>"
-      }
-    }
-  },
-  "hub_setup_humanweb_label": {
-    "message": "通过分享此信息来支持Ghostery"
-  },
-  "hub_setup_modal_button_ask_again": {
-    "message": "不再询问"
-  },
-  "hub_setup_modal_button_no": {
-    "message": "否"
-  },
-  "hub_setup_modal_button_yes": {
-    "message": "是"
-  },
-  "hub_setup_page_title": {
-    "message": "Ghostery Hub - 设置"
-  },
-  "hub_setup_page_title_antisuite": {
-    "message": "Ghostery Hub - 设置Anti-Suite"
-  },
-  "hub_setup_page_title_blocking": {
-    "message": "Ghostery Hub - 设置拦截"
-  },
-  "hub_setup_page_title_done": {
-    "message": "Ghostery Hub - 设置完毕"
-  },
-  "hub_setup_page_title_humanweb": {
-    "message": "Ghostery Hub - 设置Human Web"
-  },
-  "hub_setup_ready_heading": {
-    "message": "优化您的Ghostery体验"
-  },
-  "hub_side_navigation_home": {
-    "message": "主页"
-  },
-  "hub_side_navigation_products": {
-    "message": "查看更多Ghostery产品"
-  },
-  "hub_side_navigation_tutorial": {
-    "message": "学习教程"
-  },
-  "hub_side_navigation_upgrade_plan": {
-    "message": "升级套餐"
-  },
-  "hub_signedin_as_email": {
-    "message": "已用此帐户登录："
-  },
-  "hub_signedin_exit": {
-    "message": "返回主页"
-  },
-  "hub_signedin_header_title": {
-    "message": "您已登录"
-  },
-  "hub_supporter_feature_more_description": {
-    "message": "请继续关注其他酷炫功能和内部信息，我们也会不断优化您的Ghostery体验。"
-  },
-  "hub_supporter_feature_more_title": {
-    "message": "……更多内容敬请期待！"
-  },
-  "hub_supporter_feature_stats_description": {
-    "message": "查看历史拦截结果图表及统计数据，揭示趋势并了解 Ghostery 对浏览的影响。"
-  },
-  "hub_supporter_feature_support_description": {
-    "message": "需要帮助？发现崩溃页面？使用我们的优先帮助台服务快速回答和解决所有问题，登录 Plus 帐户后才可使用。"
-  },
-  "hub_supporter_feature_theme_description": {
-    "message": "定制 Ghostery 的颜色，获得全新的视觉体验！通过热门请求引入。快看看我们的特别版 Dark Blue 主题，更多主题敬请期待。"
-  },
-  "hub_supporter_header_description": {
-    "message": "不仅仅提供基本隐私服务，解锁我们的全产品套装！"
-  },
-  "hub_supporter_header_title": {
-    "message": "升级为Ghostery Plus"
-  },
-  "hub_supporter_manifesto": {
-    "message": "升级为 Ghostery Plus 以解锁我们的全产品套装！每月只需 &#36;4.99，即可访问一款强大的无痕浏览器，附带内置无痕搜索、高级跟踪器分析和其他特别福利。"
-  },
-  "hub_supporter_page_title": {
-    "message": "Ghostery Hub - Ghostery Plus"
-  },
-  "hub_supporter_perk_analytics_description": {
-    "message": "访问 Ghostery Insights，我们的实时跟踪器智能仪表板"
-  },
-  "hub_supporter_perk_analytics_title": {
-    "message": "高级跟踪器分析"
-  },
-  "hub_supporter_perk_dawn_and_glow_description": {
-    "message": "下载 Ghostery Dawn 和 Glow，我们强大的无痕浏览器，附带内置搜索引擎"
-  },
-  "hub_supporter_perk_dawn_and_glow_title": {
-    "message": "无痕浏览器和搜索"
-  },
-  "hub_supporter_perk_themes_and_more_description": {
-    "message": "定制 Ghostery 的颜色 - 试试我们的 Leaf、Palm 和 Dark Blue 主题吧！"
-  },
-  "hub_supporter_perk_themes_and_more_title": {
-    "message": "自定义主题及更多"
-  },
-  "hub_supporter_perk_themes_description": {
-    "message": "定制 Ghostery 的颜色 - 试试我们的 Dark Blue 主题吧！"
-  },
-  "hub_supporter_price": {
-    "message": "$SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$/月",
-    "placeholders": {
-      "sup_start": {
-        "content": "<sup>"
-      },
-      "sup_end": {
-        "content": "</sup>"
-      },
-      "span_start": {
-        "content": "<span>"
-      },
-      "span_end": {
-        "content": "</span>"
-      }
-    }
-  },
-  "hub_tutorial_antisuite_antitracking_description": {
-    "message": "去除网站可用于识别您身份的数据点。"
-  },
-  "hub_tutorial_antisuite_title": {
-    "message": "通过我们的增强隐私功能获得额外的防护和自动化控制："
-  },
-  "hub_tutorial_blocking_allow": {
-    "message": "始终允许当前网站上的追踪器。"
-  },
-  "hub_tutorial_blocking_block": {
-    "message": "始终拦截当前网站上的追踪器。"
-  },
-  "hub_tutorial_blocking_block_always": {
-    "message": "始终拦截所有网站上的跟踪器。"
-  },
-  "hub_tutorial_blocking_tagline": {
-    "message": "通过拦截或取消拦截列表中的追踪器来控制您的隐私和上网浏览体验。"
-  },
-  "hub_tutorial_blocking_title": {
-    "message": "选择要拦截的内容和方式"
-  },
-  "hub_tutorial_detailed_expanded_view": {
-    "message": "详细扩展视图"
-  },
-  "hub_tutorial_exit_flow": {
-    "message": "退出教程"
-  },
-  "hub_tutorial_layout_tagline": {
-    "message": "根据您想让Ghostery显示的内容，在精简和详细视图间切换。"
-  },
-  "hub_tutorial_layout_title": {
-    "message": "精简和详细视图"
-  },
-  "hub_tutorial_page_title": {
-    "message": "Ghostery Hub - 教程"
-  },
-  "hub_tutorial_page_title_anti_suite": {
-    "message": "Ghostery Hub - 教程附加功能"
-  },
-  "hub_tutorial_page_title_blocking": {
-    "message": "Ghostery Hub - 教程拦截"
-  },
-  "hub_tutorial_page_title_layout": {
-    "message": "Ghostery Hub - 教程布局"
-  },
-  "hub_tutorial_page_title_trackerlist": {
-    "message": "Ghostery Hub - 教程追踪器"
-  },
-  "hub_tutorial_page_title_trust": {
-    "message": "Ghostery Hub - 教程信任和限制"
-  },
-  "hub_tutorial_page_title_video": {
-    "message": "Ghostery Hub - 教程概览"
-  },
-  "hub_tutorial_trackerlist_tagline": {
-    "message": "Ghostery会列出您访问的每个网站上的追踪器，让您始终知晓哪些公司在追踪您。"
-  },
-  "hub_tutorial_trackerlist_title": {
-    "message": "跟踪器列表"
-  },
-  "hub_tutorial_trust_restrict_site": {
-    "message": "始终拦截网站上的跟踪器。"
-  },
-  "hub_tutorial_trust_tagline": {
-    "message": "一键将网站加入受信任或受限名单。"
-  },
-  "hub_tutorial_trust_title": {
-    "message": "信任和限制网站"
-  },
-  "hub_tutorial_trust_trust_site": {
-    "message": "始终允许网站上的追踪器。"
-  },
-  "hub_tutorial_video_tagline": {
-    "message": "拦截追踪器和广告，保护您的隐私，并加快页面加载速度。"
-  },
-  "hub_tutorial_video_title": {
-    "message": "Ghostery的功能"
-  },
-  "hub_upgrade_additional_protection": {
-    "message": "额外保护"
-  },
-  "hub_upgrade_advanced_device_protection": {
-    "message": "高级设备保护"
-  },
-  "hub_upgrade_already_protected": {
-    "message": "已保护"
-  },
-  "hub_upgrade_basic_browser_protection": {
-    "message": "基本浏览器保护"
-  },
-  "hub_upgrade_basic_protection": {
-    "message": "基本保护"
-  },
-  "hub_upgrade_browser_ad_blocking": {
-    "message": "浏览器广告拦截"
-  },
-  "hub_upgrade_browser_tracker_blocking": {
-    "message": "浏览器跟踪器拦截"
-  },
-  "hub_upgrade_custom_blocking_preferences": {
-    "message": "自定义拦截首选项"
-  },
-  "hub_upgrade_extension_themes": {
-    "message": "扩展程序主题"
-  },
-  "hub_upgrade_historical_extension_stats": {
-    "message": "历史扩展程序统计数据"
-  },
-  "hub_upgrade_maximum_protection": {
-    "message": "全面保护"
-  },
-  "hub_upgrade_monthly": {
-    "message": "每月"
-  },
-  "hub_upgrade_page_title": {
-    "message": "Ghostery Hub - 更新套餐"
-  },
-  "hub_upgrade_plan_free": {
-    "message": "免费"
-  },
-  "hub_upgrade_protection_plan": {
-    "message": "保护套餐"
-  },
-  "hub_upgrade_scroll_down": {
-    "message": "查看全部功能清单"
-  },
-  "hub_upgrade_to": {
-    "message": "升级至"
-  },
-  "hub_upgrade_yearly": {
-    "message": "每年"
-  },
-  "hub_upgrade_your": {
-    "message": "升级您的"
-  },
   "invalid_email_forgot": {
     "message": "抱歉，您必须输入真实的电子邮件地址。"
   },
@@ -1230,7 +771,7 @@
     "message": "电子邮件地址"
   },
   "license_footer": {
-    "message": "Ghostery $COPY$是 Cliqz 旗下公司。详细了解 $LINK_START$Cliqz$LINK_END$。$COPY$ Cliqz International GmbH，Cliqz GmbH 的全资子公司。保留所有权利。"
+    "message": "Ghostery GmbH. 保留所有权利。"
   },
   "license_generic": {
     "message": "标准许可证文字"
