--- a/_locales/es/messages.json
+++ b/_locales/es/messages.json
@@ -755,465 +755,6 @@
     "message": "Hosting",
     "description": "Ghostery organizes tags by category. This is one of several tag categories."
   },
-  "hub_create_account_already_have_account": {
-    "message": "¿Ya tienes una cuenta de Ghostery?"
-  },
-  "hub_create_account_confirm_password_do_not_match": {
-    "message": "Tus contraseñas no coinciden."
-  },
-  "hub_create_account_header_title": {
-    "message": "¿Te gustaría crear una cuenta de Ghostery para sincronizar la configuración entre tus navegadores y dispositivos?"
-  },
-  "hub_create_account_label_email_last_name": {
-    "message": "Apellidos (opcional):"
-  },
-  "hub_create_account_label_first_name": {
-    "message": "Nombre (opcional):"
-  },
-  "hub_create_account_label_password_invalid": {
-    "message": "Solo se permiten estos caracteres especiales: !@#$%^&*=+()<>{}[];:,./?"
-  },
-  "hub_create_account_label_password_invalid_length": {
-    "message": "Usa entre 8 y 50 caracteres."
-  },
-  "hub_create_account_link_login": {
-    "message": "Accede aquí."
-  },
-  "hub_create_account_toast_error": {
-    "message": "Esa dirección de correo electrónico ya está en uso.  Por favor, elige otra."
-  },
-  "hub_create_account_toast_success": {
-    "message": "Cuenta creada con éxito"
-  },
-  "hub_home_feature_setup_button": {
-    "message": "Editar configuración"
-  },
-  "hub_home_feature_setup_button_alt": {
-    "message": "Instalación personalizada completa"
-  },
-  "hub_home_feature_setup_text": {
-    "message": "Edita tus ajustes y preferencias de bloqueo."
-  },
-  "hub_home_feature_tutorial_button_alt": {
-    "message": "Tutorial completo"
-  },
-  "hub_home_feature_tutorial_text": {
-    "message": "Recorrido por las principales características de Ghostery."
-  },
-  "hub_home_feature_tutorial_title": {
-    "message": "Realizar un tutorial"
-  },
-  "hub_home_header_checkbox_label": {
-    "message": "Compartir datos estadísticos adicionales para mejorar el rendimiento de Ghostery."
-  },
-  "hub_home_header_info": {
-    "message": "Los nuevos usuarios participan por defecto en Human Web. Puedes cambiar esta configuración en los ajustes personalizados o la extensión."
-  },
-  "hub_home_header_info_link": {
-    "message": "Más información."
-  },
-  "hub_home_header_info_opted_out": {
-    "message": "Los nuevos usuarios no participan por defecto en Human Web. Puedes optar por participar en estas funciones recomendadas en la instalación personalizada o en la extensión. "
-  },
-  "hub_home_header_tagline": {
-    "message": "Te hemos protegido con nuestros ajustes predeterminados."
-  },
-  "hub_home_header_tagline_2": {
-    "message": "¡Comienza a navegar!"
-  },
-  "hub_home_header_text": {
-    "message": "¡Ghostery está listo!"
-  },
-  "hub_home_page_title": {
-    "message": "Centro de Ghostery: inicio"
-  },
-  "hub_home_plus_full_protection": {
-    "message": "¡Estás totalmente protegido!"
-  },
-  "hub_home_plus_upgrade_button_text": {
-    "message": "Mejorar ahora"
-  },
-  "hub_home_plus_upgrade_text": {
-    "message": "Ve más allá de la privacidad básica. ¡Mejora a Ghostery Plus para acceder a nuestros potentes navegador privado, búsqueda privada y análisis avanzados de rastreadores!"
-  },
-  "hub_home_subheader_optimize": {
-    "message": "Optimiza tu experiencia Ghostery"
-  },
-  "hub_login_header_title": {
-    "message": "Inicia sesión en tu cuenta."
-  },
-  "hub_login_label_password_invalid": {
-    "message": "Usa entre 8 y 50 caracteres."
-  },
-  "hub_login_link_create_account": {
-    "message": "Registro."
-  },
-  "hub_login_link_dont_have_account": {
-    "message": "¿No tienes una cuenta?"
-  },
-  "hub_login_toast_success": {
-    "message": "¡Sesión iniciada con éxito! Ya se han importado los ajustes de tu cuenta."
-  },
-  "hub_products_header_description": {
-    "message": "Mejora tu protección y tu experiencia en línea con nuestra completa suite de privacidad."
-  },
-  "hub_products_header_title": {
-    "message": "¡Navega de forma más inteligente con los productos de Ghostery!"
-  },
-  "hub_products_main_promo_description": {
-    "message": "Navega sin anuncios ni rastreadores donde estés con nuestro navegador móvil actualizado y mejorado. ¡Ahora equipado con un buscador privado!"
-  },
-  "hub_products_main_promo_title": {
-    "message": "Navegador privado móvil"
-  },
-  "hub_products_page_title": {
-    "message": "Centro de Ghostery: prueba otros productos de Ghostery"
-  },
-  "hub_products_second_promo_description": {
-    "message": "Realiza búsquedas privadas y ve estadísticas del rastreador con nuestra nueva función de pestaña. ¡Próximamente!"
-  },
-  "hub_products_second_promo_title": {
-    "message": "Ghostery Start Tab"
-  },
-  "hub_products_third_promo_description": {
-    "message": "Protege tu privacidad en línea y líbrate de los anuncios con nuestro producto más ligero hasta el momento, en exclusiva para Safari."
-  },
-  "hub_products_third_promo_title": {
-    "message": "Ghostery Lite"
-  },
-  "hub_setup_antisuite_description_antitracking": {
-    "message": "Anonimiza los rastreadores desbloqueados y no identificados para una mayor protección de navegación."
-  },
-  "hub_setup_antisuite_feature_enabled": {
-    "message": "Habilitado"
-  },
-  "hub_setup_blocking_description_custom": {
-    "message": "Elige qué rastreadores bloquear"
-  },
-  "hub_setup_blocking_description_everything": {
-    "message": "Todos los rastreadores bloqueados"
-  },
-  "hub_setup_blocking_description_nothing": {
-    "message": "No hay rastreadores bloqueados"
-  },
-  "hub_setup_blocking_description_recommended": {
-    "message": "Publicidad, análisis del sitio y rastreadores de publicidad para adultos bloqueados"
-  },
-  "hub_setup_blocking_text_custom": {
-    "message": "Elige de la lista"
-  },
-  "hub_setup_blocking_text_everything": {
-    "message": "Bloquear todo"
-  },
-  "hub_setup_blocking_text_nothing": {
-    "message": "No bloquear nada"
-  },
-  "hub_setup_blocking_text_recommended": {
-    "message": "Bloquear por defecto"
-  },
-  "hub_setup_enter_modal_text": {
-    "message": "Realizar la instalación personalizada anulará tus ajustes anteriores de Ghostery. ¿Quieres continuar?"
-  },
-  "hub_setup_exit_flow": {
-    "message": "Salir de instalación personalizada"
-  },
-  "hub_setup_feature_products_button": {
-    "message": "¡Sí, por favor!"
-  },
-  "hub_setup_feature_products_description": {
-    "message": "¡Protégete completamente con nuestra completa suite de privacidad!"
-  },
-  "hub_setup_feature_products_title": {
-    "message": "Ver más productos de Ghostery"
-  },
-  "hub_setup_feature_supporter_description": {
-    "message": "Apoya a Ghostery y desbloquea beneficios especiales."
-  },
-  "hub_setup_feature_tutorial_description": {
-    "message": "Recorrido por las principales características de Ghostery."
-  },
-  "hub_setup_feature_tutorial_title": {
-    "message": "Realizar un tutorial"
-  },
-  "hub_setup_header_title_antisuite": {
-    "message": "¿Te gustaría navegar de forma más inteligente con nuestras funciones recomendadas?"
-  },
-  "hub_setup_header_title_blocking": {
-    "message": "Ghostery puede bloquear los rastreadores para que tu navegación sea más limpia, rápida y segura.$NEW_LINE$¿Qué quieres bloquear?",
-    "placeholders": {
-      "new_line": {
-        "content": "<br />"
-      }
-    }
-  },
-  "hub_setup_header_title_done": {
-    "message": "¡Instalación personalizada completa!"
-  },
-  "hub_setup_header_title_humanweb": {
-    "message": "¿Te gustaría ayudar a mejorar Ghostery?"
-  },
-  "hub_setup_humanweb_header": {
-    "message": "Usamos datos estadísticos de Human Web para mejorar el rendimiento de Ghostery. No se recopilan datos personales. $LINK_LM_START$Más información$LINK_LM_END$",
-    "placeholders": {
-      "link_lm_start": {
-        "content": "<a href=\"https://www.ghostery.com/faqs/human-web-data-collected/\" target=\"_blank\" rel=\"noopener noreferrer\">"
-      },
-      "link_lm_end": {
-        "content": "</a>"
-      }
-    }
-  },
-  "hub_setup_humanweb_label": {
-    "message": "Ayuda a Ghostery compartiendo esta información"
-  },
-  "hub_setup_modal_button_ask_again": {
-    "message": "No preguntarme de nuevo"
-  },
-  "hub_setup_modal_button_no": {
-    "message": "No"
-  },
-  "hub_setup_modal_button_yes": {
-    "message": "Sí"
-  },
-  "hub_setup_page_title": {
-    "message": "Centro de Ghostery: instalación"
-  },
-  "hub_setup_page_title_antisuite": {
-    "message": "Centro de Ghostery: instalar la antisuite"
-  },
-  "hub_setup_page_title_blocking": {
-    "message": "Centro de Ghostery: ajustar el bloqueo"
-  },
-  "hub_setup_page_title_done": {
-    "message": "Centro de Ghostery: instalación completa"
-  },
-  "hub_setup_page_title_humanweb": {
-    "message": "Centro de Ghostery: instalación de Human Web"
-  },
-  "hub_setup_ready_heading": {
-    "message": "Optimiza tu experiencia Ghostery"
-  },
-  "hub_side_navigation_home": {
-    "message": "Inicio"
-  },
-  "hub_side_navigation_products": {
-    "message": "Ver más productos de Ghostery"
-  },
-  "hub_side_navigation_tutorial": {
-    "message": "Realizar un tutorial"
-  },
-  "hub_side_navigation_upgrade_plan": {
-    "message": "Mejorar plan"
-  },
-  "hub_signedin_as_email": {
-    "message": "Sesión iniciada como"
-  },
-  "hub_signedin_exit": {
-    "message": "Volver a inicio"
-  },
-  "hub_signedin_header_title": {
-    "message": "Ya has iniciado sesión"
-  },
-  "hub_supporter_feature_more_description": {
-    "message": "Mantente al tanto de otras características e información interesantes mientras seguimos mejorando tu experiencia con Ghostery."
-  },
-  "hub_supporter_feature_more_title": {
-    "message": "... ¡y más por venir!"
-  },
-  "hub_supporter_feature_stats_description": {
-    "message": "Mira los resultados históricos de bloqueo con gráficos y estadísticas para detectar tendencias y saber cómo Ghostery afecta a tu navegación."
-  },
-  "hub_supporter_feature_support_description": {
-    "message": "¿Necesitas ayuda? ¿Has encontrado una página web rota? Resuelve tus preguntas y problemas rápidamente con nuestro servicio de ayuda prioritario, solo accesible creando una cuenta Plus."
-  },
-  "hub_supporter_feature_theme_description": {
-    "message": "¡Personaliza los colores de Ghostery para una nueva experiencia visual! Introducido por petición popular. Echa un vistazo a nuestro tema especial Dark Blue. Hay muchos más por venir."
-  },
-  "hub_supporter_header_description": {
-    "message": "¡Ve más allá de la privacidad básica y desbloquea nuestra completa suite de productos!"
-  },
-  "hub_supporter_header_title": {
-    "message": "Mejorar a Ghostery Plus"
-  },
-  "hub_supporter_manifesto": {
-    "message": "¡Mejora a Ghostery Plus para desbloquear toda nuestra suite de productos! Por solo 4,99 &#36; al mes, obtén acceso a un potente navegador privado con búsqueda privada integrada, análisis avanzados de rastreadores y otros beneficios especiales."
-  },
-  "hub_supporter_page_title": {
-    "message": "Centro de Ghostery: Ghostery Plus"
-  },
-  "hub_supporter_perk_analytics_description": {
-    "message": "Accede a Ghostery Insights, nuestro panel de inteligencia de rastreadores en tiempo real"
-  },
-  "hub_supporter_perk_analytics_title": {
-    "message": "Análisis avanzados de rastreadores"
-  },
-  "hub_supporter_perk_dawn_and_glow_description": {
-    "message": "Descarga Ghostery Dawn y Glow, nuestro potente navegador privado con motor de búsqueda integrado"
-  },
-  "hub_supporter_perk_dawn_and_glow_title": {
-    "message": "Navegador y búsqueda privados"
-  },
-  "hub_supporter_perk_themes_and_more_description": {
-    "message": "Personaliza los colores de Ghostery - ¡Prueba nuestros temas Leaf, Palm y Dark Blue!"
-  },
-  "hub_supporter_perk_themes_and_more_title": {
-    "message": "Temas personalizados y más"
-  },
-  "hub_supporter_perk_themes_description": {
-    "message": "Personaliza los colores de Ghostery. ¡Prueba nuestro tema Dark Blue!"
-  },
-  "hub_supporter_price": {
-    "message": "$SUP_START$&#36;$SUP_END$$SPAN_START$2$SPAN_END$ al mes",
-    "placeholders": {
-      "sup_start": {
-        "content": "<sup>"
-      },
-      "sup_end": {
-        "content": "</sup>"
-      },
-      "span_start": {
-        "content": "<span>"
-      },
-      "span_end": {
-        "content": "</span>"
-      }
-    }
-  },
-  "hub_tutorial_antisuite_antitracking_description": {
-    "message": "Eliminar los puntos de datos que los sitios web pueden usar para identificarte."
-  },
-  "hub_tutorial_antisuite_title": {
-    "message": "Obtén protección adicional y control automatizado con nuestras funciones de privacidad mejoradas:"
-  },
-  "hub_tutorial_blocking_allow": {
-    "message": "Permitir siempre rastreadores en este sitio."
-  },
-  "hub_tutorial_blocking_block": {
-    "message": "Bloquear siempre el rastreador en el sitio actual."
-  },
-  "hub_tutorial_blocking_block_always": {
-    "message": "Bloquear siempre rastreadores en todos los sitios."
-  },
-  "hub_tutorial_blocking_tagline": {
-    "message": "Toma el control de tu privacidad y experiencia de navegación bloqueando o desbloqueando los rastreadores de la lista."
-  },
-  "hub_tutorial_blocking_title": {
-    "message": "Elige qué y cómo quieres bloquearlo."
-  },
-  "hub_tutorial_detailed_expanded_view": {
-    "message": "Vista detallada expandida"
-  },
-  "hub_tutorial_exit_flow": {
-    "message": "Salir del tutorial"
-  },
-  "hub_tutorial_layout_tagline": {
-    "message": "Alterna entre una vista simplificada o detallada en función de lo que deseas que Ghostery muestre."
-  },
-  "hub_tutorial_layout_title": {
-    "message": "Vistas sencillas y detalladas"
-  },
-  "hub_tutorial_page_title": {
-    "message": "Centro de Ghostery: tutorial"
-  },
-  "hub_tutorial_page_title_anti_suite": {
-    "message": "Centro de Ghostery: tutorial de características adicionales"
-  },
-  "hub_tutorial_page_title_blocking": {
-    "message": "Centro de Ghostery: tutorial de bloqueo"
-  },
-  "hub_tutorial_page_title_layout": {
-    "message": "Centro de Ghostery: tutorial de diseño"
-  },
-  "hub_tutorial_page_title_trackerlist": {
-    "message": "Centro de Ghostery: tutorial de rastreadores"
-  },
-  "hub_tutorial_page_title_trust": {
-    "message": "Centro de Ghostery: tutorial de confianza y restricción"
-  },
-  "hub_tutorial_page_title_video": {
-    "message": "Centro de Ghostery: tutorial de vista general"
-  },
-  "hub_tutorial_trackerlist_tagline": {
-    "message": "Ghostery te permite mantenerte al tanto de las compañías que te rastrean indicando los rastreadores de cada sitio web que visitas."
-  },
-  "hub_tutorial_trackerlist_title": {
-    "message": "Lista de rastreadores"
-  },
-  "hub_tutorial_trust_restrict_site": {
-    "message": "Bloquear siempre rastreadores en este sitio."
-  },
-  "hub_tutorial_trust_tagline": {
-    "message": "Permite o restringe sitios web con un clic."
-  },
-  "hub_tutorial_trust_title": {
-    "message": "Confiar y restringir sitios"
-  },
-  "hub_tutorial_trust_trust_site": {
-    "message": "Permitir siempre rastreadores en el sitio."
-  },
-  "hub_tutorial_video_tagline": {
-    "message": "Bloquea rastreadores y anuncios, protege tu privacidad y acelera la carga de páginas."
-  },
-  "hub_tutorial_video_title": {
-    "message": "Qué puede hacer Ghostery por ti"
-  },
-  "hub_upgrade_additional_protection": {
-    "message": "Protección adicional"
-  },
-  "hub_upgrade_advanced_device_protection": {
-    "message": "Protección de dispositivo avanzada"
-  },
-  "hub_upgrade_already_protected": {
-    "message": "Ya protegido"
-  },
-  "hub_upgrade_basic_browser_protection": {
-    "message": "Protección de navegador básica"
-  },
-  "hub_upgrade_basic_protection": {
-    "message": "Protección básica"
-  },
-  "hub_upgrade_browser_ad_blocking": {
-    "message": "Bloqueador de anuncios de navegador"
-  },
-  "hub_upgrade_browser_tracker_blocking": {
-    "message": "Bloqueador de rastreadores de navegador"
-  },
-  "hub_upgrade_custom_blocking_preferences": {
-    "message": "Preferencias de bloqueo personalizadas"
-  },
-  "hub_upgrade_extension_themes": {
-    "message": "Temas de extensiones"
-  },
-  "hub_upgrade_historical_extension_stats": {
-    "message": "Estadísticas históricas de extensiones"
-  },
-  "hub_upgrade_maximum_protection": {
-    "message": "Protección máxima"
-  },
-  "hub_upgrade_monthly": {
-    "message": "Mensual"
-  },
-  "hub_upgrade_page_title": {
-    "message": "Ghostery Hub - Mejorar plan"
-  },
-  "hub_upgrade_plan_free": {
-    "message": "Gratis"
-  },
-  "hub_upgrade_protection_plan": {
-    "message": "plan de protección"
-  },
-  "hub_upgrade_scroll_down": {
-    "message": "Ver lista completa de funciones"
-  },
-  "hub_upgrade_to": {
-    "message": "Mejorar a"
-  },
-  "hub_upgrade_yearly": {
-    "message": "Anual"
-  },
-  "hub_upgrade_your": {
-    "message": "Mejora tu"
-  },
   "invalid_email_forgot": {
     "message": "Lo sentimos, pero debes indicar una dirección de correo electrónico real."
   },
@@ -1230,7 +771,7 @@
     "message": "Correo electrónico"
   },
   "license_footer": {
-    "message": "Ghostery $COPY$; es una empresa de Cliqz. Consulta más información sobre $LINK_START$ Cliqz $LINK_END$. $COPY$ Cliqz International GmbH es una subsidiaria de propiedad total de Cliqz GmbH. Todos los derechos reservados."
+    "message": "Ghostery GmbH. Todos los derechos reservados."
   },
   "license_generic": {
     "message": "Texto de licencia estándar"
